--- a/templates/DialogContextMenu.xml
+++ b/templates/DialogContextMenu.xml
@@ -3,43 +3,43 @@
 	<defaultcontrol>996</defaultcontrol>
 	<include>Animation_DialogPopupOpenClose</include>
 	<coordinates>
-		<left>0</left>
-		<top>0</top>
+		<left>{{ScaleX('0')}}</left>
+		<top>{{ScaleY('0')}}</top>
 	</coordinates>
 	<controls>
 		<control type="image">
-			<left>-1920</left>
-			<top>-1080</top>
-			<width>5760</width>
-			<height>3240</height>
+			<left>{{ScaleX('-1920')}}</left>
+			<top>{{ScaleY('-1080')}}</top>
+			<width>{{ScaleX('5760')}}</width>
+			<height>{{ScaleY('3240')}}</height>
 			<animation effect="fade" start="0" end="100" time="300">WindowOpen</animation>
 			<animation effect="fade" start="100" end="0" time="200">WindowClose</animation>
 			<texture colordiffuse="B0FFFFFF">colors/black.png</texture>
 		</control>
 		<control type="button">
-			<left>-1920</left>
-			<top>-1080</top>
-			<width>5760</width>
-			<height>3240</height>
+			<left>{{ScaleX('-1920')}}</left>
+			<top>{{ScaleY('-1080')}}</top>
+			<width>{{ScaleX('5760')}}</width>
+			<height>{{ScaleY('3240')}}</height>
 			<texturefocus />
 			<texturenofocus />
 			<onclick>Action(close)</onclick>
 		</control>
 		<control type="group">
-			<animation effect="slide" end="0,175" time="0" condition="Window.IsActive(home)">conditional</animation>
+			<animation effect="slide" end="{{ScaleBorder2('0,175')}}" time="0" condition="Window.IsActive(home)">conditional</animation>
 			<control type="image" id="999">
 				<description>background image</description>
-				<left>0</left>
-				<top>0</top>
-				<width>450</width>
-				<height>780</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('450')}}</width>
+				<height>{{ScaleY('780')}}</height>
 				<texture colordiffuse="dialog_tint">colors/white.png</texture>
 			</control>
 			<control type="grouplist" id="996">
 				<description>grouplist for context buttons</description>
-				<left>0</left>
-				<top>0</top>
-				<width>450</width>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('450')}}</width>
 				<height max="780">auto</height>
 				<usecontrolcoords>true</usecontrolcoords>
 			</control>
@@ -52,10 +52,10 @@
 		</control>
 		<control type="button" id="1000">
 			<description>button template</description>
-			<left>0</left>
+			<left>{{ScaleX('0')}}</left>
 			<top></top>
-			<width>450</width>
-			<height>65</height>
+			<width>{{ScaleX('450')}}</width>
+			<height>{{ScaleY('65')}}</height>
 			<align>center</align>
 			<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 			<texturenofocus />
