--- a/templates/DialogSeekBar.xml
+++ b/templates/DialogSeekBar.xml
@@ -9,15 +9,15 @@
 	<controls>
 		<include>PVRChannelNumberInput</include>
 		<control type="group">
-			<animation effect="slide" start="0,200" end="0,0" time="300" tween="cubic" easing="out">VisibleChange</animation>
+			<animation effect="slide" start="{{ScaleBorder2('0,200')}}" end="{{ScaleBorder2('0,0')}}" time="300" tween="cubic" easing="out">VisibleChange</animation>
 			<visible>Player.ShowInfo | Window.IsActive(fullscreeninfo) | Player.ShowTime | Window.IsActive(videoosd) | Window.IsActive(musicosd) | Window.IsActive(playerprocessinfo) | !String.IsEmpty(PVR.ChannelNumberInput) | Window.IsActive(pvrosdchannels) | Window.IsActive(pvrchannelguide) | ![!String.IsEmpty(Player.SeekNumeric) | Player.Seeking | Player.HasPerformedSeek(3) | Player.Forwarding | Player.Rewinding | Player.Paused]</visible>
 			<visible>!Player.HasGame</visible>
 			<bottom>0</bottom>
-			<height>190</height>
+			<height>{{ScaleY('190')}}</height>
 			<control type="image">
-				<left>-40</left>
-				<width>120%</width>
-				<height>200</height>
+				<left>{{ScaleX('-40')}}</left>
+				<width>{{ScaleX('120%')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<texture flipy="true">frame/osdfade.png</texture>
 			</control>
 			<control type="group">
@@ -25,35 +25,35 @@
 				<animation effect="fade" time="200">VisibleChange</animation>
 				<control type="grouplist">
 					<visible>[PVR.IsRecordingPlayingChannel + !Player.ChannelPreviewActive] | PVR.IsPlayingActiveRecording</visible>
-					<left>20</left>
+					<left>{{ScaleX('20')}}</left>
 					<centertop>125</centertop>
-					<height>60</height>
+					<height>{{ScaleY('60')}}</height>
 					<align>left</align>
 					<orientation>horizontal</orientation>
 					<itemgap>-5</itemgap>
 					<control type="image">
-						<top>100</top>
-						<left>20</left>
-						<width>60</width>
-						<height>60</height>
+						<top>{{ScaleY('100')}}</top>
+						<left>{{ScaleX('20')}}</left>
+						<width>{{ScaleX('60')}}</width>
+						<height>{{ScaleY('60')}}</height>
 						<aligny>center</aligny>
 						<texture>osd/fullscreen/buttons/record.png</texture>
 					</control>
 					<control type="label">
-						<top>110</top>
-						<left>90</left>
-						<width>400</width>
-						<height>60</height>
+						<top>{{ScaleY('110')}}</top>
+						<left>{{ScaleX('90')}}</left>
+						<width>{{ScaleX('400')}}</width>
+						<height>{{ScaleY('60')}}</height>
 						<aligny>center</aligny>
 						<font>font25_title</font>
 						<label>[COLOR red][B]$LOCALIZE[19158][/B][/COLOR]</label>
 					</control>
 				</control>
 				<control type="grouplist">
-					<right>20</right>
+					<right>{{ScaleX('20')}}</right>
 					<centertop>125</centertop>
-					<width>800</width>
-					<height>50</height>
+					<width>{{ScaleX('800')}}</width>
+					<height>{{ScaleY('50')}}</height>
 					<align>right</align>
 					<include>Animation_BottomSlide</include>
 					<orientation>horizontal</orientation>
@@ -81,10 +81,10 @@
 					</include>
 				</control>
 				<control type="grouplist">
-					<right>20</right>
+					<right>{{ScaleX('20')}}</right>
 					<centertop>125</centertop>
-					<width>800</width>
-					<height>50</height>
+					<width>{{ScaleX('800')}}</width>
+					<height>{{ScaleY('50')}}</height>
 					<align>right</align>
 					<include>Animation_BottomSlide</include>
 					<orientation>horizontal</orientation>
@@ -103,10 +103,10 @@
 					</include>
 					<control type="group">
 						<visible>!String.IsEmpty(MusicPlayer.SampleRate)</visible>
-						<width>115</width>
+						<width>{{ScaleX('115')}}</width>
 						<control type="label">
-							<width>115</width>
-							<height>60</height>
+							<width>{{ScaleX('115')}}</width>
+							<height>{{ScaleY('60')}}</height>
 							<align>center</align>
 							<aligny>center</aligny>
 							<label>$INFO[MusicPlayer.SampleRate, ,kHz]</label>
@@ -118,10 +118,10 @@
 					</control>
 					<control type="group">
 						<visible>!String.IsEmpty(MusicPlayer.BitRate)</visible>
-						<width>115</width>
+						<width>{{ScaleX('115')}}</width>
 						<control type="label">
-							<width>115</width>
-							<height>60</height>
+							<width>{{ScaleX('115')}}</width>
+							<height>{{ScaleY('60')}}</height>
 							<align>center</align>
 							<aligny>center</aligny>
 							<label>$INFO[MusicPlayer.BitRate, ,kbps ]</label>
@@ -133,10 +133,10 @@
 					</control>
 					<control type="group">
 						<visible>!String.IsEmpty(MusicPlayer.BitsPerSample)</visible>
-						<width>115</width>
+						<width>{{ScaleX('115')}}</width>
 						<control type="label">
-							<width>115</width>
-							<height>60</height>
+							<width>{{ScaleX('115')}}</width>
+							<height>{{ScaleY('60')}}</height>
 							<align>center</align>
 							<aligny>center</aligny>
 							<label>$INFO[MusicPlayer.BitsPerSample, ,bit]</label>
@@ -151,8 +151,8 @@
 			<control type="label">
 				<centerleft>50%</centerleft>
 				<centertop>125</centertop>
-				<width>50%</width>
-				<height>60</height>
+				<width>{{ScaleX('50%')}}</width>
+				<height>{{ScaleY('60')}}</height>
 				<align>center</align>
 				<aligny>top</aligny>
 				<label>$VAR[SeekTimeLabelVar]</label>
@@ -163,8 +163,8 @@
 			<control type="label" id="40000">
 				<centerleft>50%</centerleft>
 				<centertop>175</centertop>
-				<width>50%</width>
-				<height>50</height>
+				<width>{{ScaleX('50%')}}</width>
+				<height>{{ScaleY('50')}}</height>
 				<align>center</align>
 				<aligny>top</aligny>
 				<label>$VAR[SeekLabel]</label>
@@ -201,10 +201,10 @@
 					<include content="PVRProgress"/>
 				</control>
 				<control type="slider" id="403">
-					<left>0</left>
-					<top>65</top>
-					<width>100%</width>
-					<height>26</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('65')}}</top>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_bar.png</texturesliderbar>
 					<textureslidernib colordiffuse="button_focus">osd/progress/nub_bar.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">colors/white.png</textureslidernibfocus>
@@ -214,28 +214,28 @@
 			<control type="group">
 				<visible>!VideoPlayer.Content(LiveTV)</visible>
 				<control type="progress">
-					<left>0</left>
-					<top>70</top>
-					<width>100%</width>
-					<height>16</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('70')}}</top>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('16')}}</height>
 					<info>Player.ProgressCache</info>
 					<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 					<midtexture>colors/white50.png</midtexture>
 				</control>
 				<control type="progress">
-					<left>0</left>
-					<top>70</top>
-					<width>100%</width>
-					<height>16</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('70')}}</top>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('16')}}</height>
 					<info>Player.Progress</info>
 					<texturebg border="3" colordiffuse="60FFFFFF">colors/white50.png</texturebg>
 					<midtexture colordiffuse="button_focus">colors/white.png</midtexture>
 				</control>
 				<control type="slider" id="401">
-					<left>0</left>
-					<top>65</top>
-					<width>100%</width>
-					<height>26</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('65')}}</top>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_bar.png</texturesliderbar>
 					<textureslidernib colordiffuse="button_focus">osd/progress/nub_bar.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">colors/white.png</textureslidernibfocus>
@@ -243,10 +243,10 @@
 				</control>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>70</top>
-				<width>100%</width>
-				<height>8</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('70')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('8')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<lefttexture>colors/white.png</lefttexture>
 				<midtexture colordiffuse="FFFF0000">colors/white.png</midtexture>
@@ -254,28 +254,28 @@
 				<info>Player.Editlist</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>82</top>
-				<width>100%</width>
-				<height>8</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('82')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('8')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/red50.png</texturebg>
 				<righttexture>colors/red.png</righttexture>
 				<info>Player.Cuts</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>82</top>
-				<width>100%</width>
-				<height>4</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('82')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('4')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<righttexture>colors/white.png</righttexture>
 				<info>Player.SceneMarkers</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>82</top>
-				<width>100%</width>
-				<height>4</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('82')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('4')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<righttexture>colors/white.png</righttexture>
 				<info>Player.Chapters</info>
@@ -287,14 +287,14 @@
 			<visible>Player.ShowInfo | Window.IsActive(fullscreeninfo) | !Player.Seeking | !Player.HasPerformedSeek(3) | !Player.Forwarding | !Player.Rewinding | !Player.Paused</visible>
 			<animation effect="fade" start="0" end="100" time="300" delay="250">Visible</animation>
 			<animation effect="fade" start="100" end="0" time="100">Hidden</animation>
-			<animation effect="slide" end="0,-20" time="150" condition="VideoPlayer.Content(LiveTV)">conditional</animation>
+			<animation effect="slide" end="{{ScaleBorder2('0,-20')}}" time="150" condition="VideoPlayer.Content(LiveTV)">conditional</animation>
 			<bottom>0</bottom>
-			<height>380</height>
+			<height>{{ScaleY('380')}}</height>
 			<control type="label">
-				<left>20</left>
-				<width>290</width>
-				<top>-80</top>
-				<height>25</height>
+				<left>{{ScaleX('20')}}</left>
+				<width>{{ScaleX('290')}}</width>
+				<top>{{ScaleY('-80')}}</top>
+				<height>{{ScaleY('25')}}</height>
 				<label>$INFO[VideoPlayer.ChannelNumberLabel]</label>
 				<shadowcolor>black</shadowcolor>
 				<align>center</align>
@@ -302,60 +302,60 @@
 				<aligny>center</aligny>
 			</control>
 			<control type="image">
-				<left>0</left>
-				<width>100%</width>
-				<height>240</height>
+				<left>{{ScaleX('0')}}</left>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('240')}}</height>
 				<texture>dialogs/dialog-bg-nobo.png</texture>
 			</control>
 			<control type="image">
-				<left>20</left>
-				<top>20</top>
-				<width>200</width>
-				<height>200</height>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('20')}}</top>
+				<width>{{ScaleX('200')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<aspectratio aligny="center">keep</aspectratio>
 				<texture>$INFO[Player.Icon]</texture>
 			</control>
 			<control type="textbox">
-				<left>240</left>
-				<top>10</top>
-				<right>20</right>
-				<height>160</height>
+				<left>{{ScaleX('240')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<right>{{ScaleX('20')}}</right>
+				<height>{{ScaleY('160')}}</height>
 				<label fallback="19055">$INFO[VideoPlayer.Plot]</label>
 				<align>justify</align>
 				<autoscroll delay="5000" repeat="7500" time="5000"></autoscroll>
 				<visible>String.IsEmpty(PVR.EpgEventIcon)</visible>
 			</control>
 			<control type="textbox">
-				<left>240</left>
-				<top>10</top>
-				<right>240</right>
-				<height>160</height>
+				<left>{{ScaleX('240')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<right>{{ScaleX('240')}}</right>
+				<height>{{ScaleY('160')}}</height>
 				<label fallback="19055">$INFO[VideoPlayer.Plot]</label>
 				<align>justify</align>
 				<autoscroll delay="5000" repeat="7500" time="5000"></autoscroll>
 				<visible>!String.IsEmpty(PVR.EpgEventIcon)</visible>
 			</control>
 			<control type="image">
-				<right>20</right>
-				<top>20</top>
-				<width>200</width>
-				<height>200</height>
+				<right>{{ScaleX('20')}}</right>
+				<top>{{ScaleY('20')}}</top>
+				<width>{{ScaleX('200')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<aspectratio aligny="center">keep</aspectratio>
 				<texture fallback="DefaultTVShows.png">$INFO[PVR.EpgEventIcon]</texture>
 				<visible>!String.IsEmpty(PVR.EpgEventIcon)</visible>
 			</control>
 			<control type="label">
-				<left>240</left>
-				<top>180</top>
-				<right>20</right>
-				<height>25</height>
+				<left>{{ScaleX('240')}}</left>
+				<top>{{ScaleY('180')}}</top>
+				<right>{{ScaleX('20')}}</right>
+				<height>{{ScaleY('25')}}</height>
 				<label>$VAR[OSDNextLabelVar]</label>
 				<visible>VideoPlayer.HasEpg + !RDS.HasRadioText</visible>
 			</control>
 			<control type="label">
-				<left>240</left>
-				<top>180</top>
-				<height>25</height>
+				<left>{{ScaleX('240')}}</left>
+				<top>{{ScaleY('180')}}</top>
+				<height>{{ScaleY('25')}}</height>
 				<label>[COLOR grey]$LOCALIZE[14304]: [/COLOR]$INFO[RDS.GetLine(0)]</label>
 				<visible>RDS.HasRadioText</visible>
 			</control>
@@ -367,19 +367,19 @@
 			<animation effect="fade" start="0" end="100" time="300" delay="250">Visible</animation>
 			<animation effect="fade" start="100" end="0" time="100">Hidden</animation>
 			<bottom>0</bottom>
-			<height>470</height>
+			<height>{{ScaleY('470')}}</height>
 			<control type="image">
-				<left>0</left>
-				<width>100%</width>
-				<height>330</height>
+				<left>{{ScaleX('0')}}</left>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('330')}}</height>
 				<texture>dialogs/dialog-bg-nobo.png</texture>
 			</control>
 			<control type="image">
 				<depth>DepthOSD+</depth>
-				<left>10</left>
+				<left>{{ScaleX('10')}}</left>
 				<bottom>145</bottom>
-				<width>400</width>
-				<height>600</height>
+				<width>{{ScaleX('400')}}</width>
+				<height>{{ScaleY('600')}}</height>
 				<aspectratio aligny="bottom">keep</aspectratio>
 				<texture fallback="DefaultVideo.png" background="true">$VAR[NowPlayingPosterVar]</texture>
 				<bordertexture border="21" infill="false">overlays/shadow.png</bordertexture>
@@ -387,21 +387,21 @@
 				<include>OpenClose_Left</include>
 			</control>
 			<control type="grouplist">
-				<left>420</left>
-				<top>10</top>
-				<right>20</right>
-				<height>300</height>
+				<left>{{ScaleX('420')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<right>{{ScaleX('20')}}</right>
+				<height>{{ScaleY('300')}}</height>
 				<align>left</align>
 				<orientation>vertical</orientation>
 				<itemgap>10</itemgap>
 				<control type="textbox">
-					<height>250</height>
+					<height>{{ScaleY('250')}}</height>
 					<label fallback="10005">$INFO[VideoPlayer.Tagline,[B],[/B][CR]]$INFO[VideoPlayer.Plot]</label>
 					<align>left</align>
 					<autoscroll delay="5000" repeat="7500" time="5000"></autoscroll>
 				</control>
 				<control type="label">
-					<height>50</height>
+					<height>{{ScaleY('50')}}</height>
 					<label>$VAR[OSDNextLabelVar]</label>
 					<visible>Integer.IsGreater(Playlist.Length(video),1)</visible>
 				</control>
