--- a/templates/MyPVRTimers.xml
+++ b/templates/MyPVRTimers.xml
@@ -10,9 +10,9 @@
 			<control type="group">
 				<include>OpenClose_Left</include>
 				<control type="fixedlist" id="50">
-					<left>0</left>
-					<top>list_top_offset</top>
-					<right>918</right>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('list_top_offset')}}</top>
+					<right>{{ScaleX('918')}}</right>
 					<bottom>list_bottom_offset</bottom>
 					<onleft>9000</onleft>
 					<onright>73</onright>
@@ -35,8 +35,8 @@
 			<control type="group">
 				<depth>DepthContentPanel</depth>
 				<include>OpenClose_Right</include>
-				<width>870</width>
-				<right>0</right>
+				<width>{{ScaleX('870')}}</width>
+				<right>{{ScaleX('0')}}</right>
 				<include content="ContentPanel">
 					<param name="left" value="-72" />
 					<param name="width" value="970" />
@@ -44,9 +44,9 @@
 					<param name="flipx" value="true" />
 				</include>
 				<control type="scrollbar" id="73">
-					<left>-50</left>
-					<top>list_top_offset</top>
-					<width>12</width>
+					<left>{{ScaleX('-50')}}</left>
+					<top>{{ScaleY('list_top_offset')}}</top>
+					<width>{{ScaleX('12')}}</width>
 					<bottom>list_bottom_offset</bottom>
 					<onleft>50</onleft>
 					<onright>50</onright>
@@ -65,11 +65,11 @@
 			<param name="info_visible" value="true" />
 		</include>
 		<control type="label">
-			<right>20</right>
+			<right>{{ScaleX('20')}}</right>
 			<include>OpenClose_Right</include>
 			<bottom>10</bottom>
-			<width>850</width>
-			<height>60</height>
+			<width>{{ScaleX('850')}}</width>
+			<height>{{ScaleY('60')}}</height>
 			<label>$INFO[PVR.NextTimer]</label>
 			<shadowcolor>black</shadowcolor>
 			<align>right</align>
