--- a/templates/AddonBrowser.xml
+++ b/templates/AddonBrowser.xml
@@ -27,17 +27,17 @@
 				<control type="group">
 					<visible>String.IsEqual(ListItem.AddonLifecycleType,$LOCALIZE[24170]) | String.IsEqual(ListItem.AddonLifecycleType,$LOCALIZE[24171])</visible>
 					<control type="image">
-						<left>64</left>
-						<top>109</top>
-						<width>472</width>
-						<height>472</height>
+						<left>{{ScaleX('64')}}</left>
+						<top>{{ScaleY('109')}}</top>
+						<width>{{ScaleX('472')}}</width>
+						<height>{{ScaleY('472')}}</height>
 						<texture colordiffuse="AAFFFFFF">colors/black.png</texture>
 					</control>
 					<control type="textbox">
-						<left>75</left>
-						<top>110</top>
-						<width>450</width>
-						<height>470</height>
+						<left>{{ScaleX('75')}}</left>
+						<top>{{ScaleY('110')}}</top>
+						<width>{{ScaleX('450')}}</width>
+						<height>{{ScaleY('470')}}</height>
 						<align>center</align>
 						<aligny>center</aligny>
 						<label>$VAR[AddonLifecycleType]</label>
@@ -55,7 +55,7 @@
 			<control type="group">
 				<include>MediaMenuCommon</include>
 				<control type="grouplist" id="9000">
-					<top>50</top>
+					<top>{{ScaleY('50')}}</top>
 					<include>MediaMenuListCommon</include>
 					<control type="label" id="201">
 						<include>MediaMenuLabelCommon</include>
@@ -87,7 +87,7 @@
 				</control>
 			</control>
 			<control type="group">
-				<height>78</height>
+				<height>{{ScaleY('78')}}</height>
 				<bottom>0</bottom>
 				<visible>$EXP[sidebar_visible]</visible>
 				<animation effect="fade" time="300">VisibleChange</animation>
