--- a/templates/Custom_1100_AddonLauncher.xml
+++ b/templates/Custom_1100_AddonLauncher.xml
@@ -80,10 +80,10 @@
 					<param name="width" value="523" />
 				</include>
 				<control type="fixedlist" id="9000">
-					<left>1</left>
-					<top>300</top>
-					<width>462</width>
-					<height>855</height>
+					<left>{{ScaleX('1')}}</left>
+					<top>{{ScaleY('300')}}</top>
+					<width>{{ScaleX('462')}}</width>
+					<height>{{ScaleY('855')}}</height>
 					<pagecontrol>70</pagecontrol>
 					<movement>6</movement>
 					<focusposition>0</focusposition>
@@ -91,60 +91,60 @@
 					<ondown>700</ondown>
 					<onright>SetFocus($INFO[Container(9000).ListItem.Property(menu_id)])</onright>
 					<scrolltime tween="cubic" easing="out">500</scrolltime>
-					<focusedlayout height="95" width="462">
+					<focusedlayout height="{{ScaleY('95')}}" width="{{ScaleX('462')}}">
 						<control type="image">
-							<left>0</left>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<right>{{ScaleX('0')}}</right>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">lists/focus.png</texture>
 							<animation effect="fade" start="100" end="0" time="0" condition="!Control.HasFocus(9000)">Conditional</animation>
 						</control>
 						<control type="image">
-							<left>-3</left>
-							<top>0</top>
-							<width>95</width>
+							<left>{{ScaleX('-3')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('95')}}</width>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">$INFO[ListItem.Art(thumb)]</texture>
 							<animation effect="fade" start="0" end="100" time="300" reversible="false">Focus</animation>
 						</control>
 						<control type="image">
-							<left>0</left>
-							<width>95</width>
+							<left>{{ScaleX('0')}}</left>
+							<width>{{ScaleX('95')}}</width>
 							<bottom>0</bottom>
 							<texture colordiffuse="51FFFFFF">colors/black.png</texture>
 							<animation effect="fade" start="100" end="0" time="0" condition="!Control.HasFocus(9000)">Conditional</animation>
 						</control>
 						<control type="image">
-							<left>-3</left>
-							<top>0</top>
-							<width>95</width>
+							<left>{{ScaleX('-3')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('95')}}</width>
 							<bottom>0</bottom>
 							<texture>$INFO[ListItem.Art(thumb)]</texture>
 						</control>
 						<control type="label">
-							<left>104</left>
+							<left>{{ScaleX('104')}}</left>
 							<bottom>0</bottom>
-							<right>10</right>
+							<right>{{ScaleX('10')}}</right>
 							<aligny>center</aligny>
 							<font>font14</font>
 							<label>$INFO[ListItem.Label]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</focusedlayout>
-					<itemlayout height="95" width="462">
+					<itemlayout height="{{ScaleY('95')}}" width="{{ScaleX('462')}}">
 						<control type="label">
-							<left>104</left>
+							<left>{{ScaleX('104')}}</left>
 							<bottom>0</bottom>
-							<right>10</right>
+							<right>{{ScaleX('10')}}</right>
 							<aligny>center</aligny>
 							<font>font14</font>
 							<label>$INFO[ListItem.Label]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 						<control type="image">
-							<left>-3</left>
-							<top>0</top>
-							<width>95</width>
+							<left>{{ScaleX('-3')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('95')}}</width>
 							<bottom>0</bottom>
 							<texture colordiffuse="44FFFFFF">$INFO[ListItem.Art(thumb)]</texture>
 						</control>
@@ -221,27 +221,27 @@
 			</control>
 			<control type="grouplist" id="700">
 				<orientation>horizontal</orientation>
-				<left>32</left>
-				<top>135</top>
-				<height>120</height>
+				<left>{{ScaleX('32')}}</left>
+				<top>{{ScaleY('135')}}</top>
+				<height>{{ScaleY('120')}}</height>
 				<onup>SetFocus(9000,99,absolute)</onup>
 				<ondown>SetFocus(9000,0,absolute)</ondown>
 				<include>OpenClose_Left</include>
 				<onright>400</onright>
 				<usecontrolcoords>true</usecontrolcoords>
 				<control type="radiobutton" id="801">
-					<width>120</width>
-					<height>120</height>
+					<width>{{ScaleX('120')}}</width>
+					<height>{{ScaleY('120')}}</height>
 					<align>right</align>
 					<aligny>center</aligny>
 					<onclick>ActivateWindow(addonbrowser,root)</onclick>
 					<font>font12</font>
 					<label/>
-					<textoffsetx>40</textoffsetx>
+					<textoffsetx>{{ScaleX('40')}}</textoffsetx>
 					<textwidth>230</textwidth>
 					<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 					<texturenofocus />
-					<radioposx>39</radioposx>
+					<radioposx>{{ScaleX('39')}}</radioposx>
 					<radioposy>0</radioposy>
 					<radiowidth>40</radiowidth>
 					<radioheight>40</radioheight>
@@ -251,19 +251,19 @@
 					<textureradiooffnofocus>icons/submenu/add-ons.png</textureradiooffnofocus>
 				</control>
 				<control type="radiobutton" id="802">
-					<top>5</top>
-					<width>157</width>
-					<height>110</height>
+					<top>{{ScaleY('5')}}</top>
+					<width>{{ScaleX('157')}}</width>
+					<height>{{ScaleY('110')}}</height>
 					<align>right</align>
 					<aligny>center</aligny>
 					<onclick>ActivateWindow(addonbrowser,addons://outdated/,return)</onclick>
 					<font>font12</font>
 					<label/>
-					<textoffsetx>40</textoffsetx>
+					<textoffsetx>{{ScaleX('40')}}</textoffsetx>
 					<textwidth>230</textwidth>
-					<texturefocus border="30" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+					<texturefocus border="{{ScaleBorder('30')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
 					<texturenofocus />
-					<radioposx>35</radioposx>
+					<radioposx>{{ScaleX('35')}}</radioposx>
 					<radioposy>0</radioposy>
 					<radiowidth>40</radiowidth>
 					<radioheight>40</radioheight>
@@ -276,18 +276,18 @@
 					<textureradiooffdisabled colordiffuse="disabled">icons/submenu/updatelibrary.png</textureradiooffdisabled>
 				</control>
 				<control type="radiobutton" id="803">
-					<width>120</width>
-					<height>120</height>
+					<width>{{ScaleX('120')}}</width>
+					<height>{{ScaleY('120')}}</height>
 					<align>right</align>
 					<aligny>center</aligny>
 					<onclick>ActivateWindow(systemsettings,addons)</onclick>
 					<font>font12</font>
 					<label/>
-					<textoffsetx>40</textoffsetx>
+					<textoffsetx>{{ScaleX('40')}}</textoffsetx>
 					<textwidth>230</textwidth>
 					<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 					<texturenofocus />
-					<radioposx>40</radioposx>
+					<radioposx>{{ScaleX('40')}}</radioposx>
 					<radioposy>0</radioposy>
 					<radiowidth>40</radiowidth>
 					<radioheight>40</radioheight>
@@ -297,10 +297,10 @@
 					<textureradiooffnofocus>icons/settings.png</textureradiooffnofocus>
 				</control>
 				<control type="label" id="804">
-					<left>-217</left>
-					<top>22</top>
-					<height>70</height>
-					<width>100</width>
+					<left>{{ScaleX('-217')}}</left>
+					<top>{{ScaleY('22')}}</top>
+					<height>{{ScaleY('70')}}</height>
+					<width>{{ScaleX('100')}}</width>
 					<aligny>center</aligny>
 					<align>center</align>
 					<font>font32_title</font>
@@ -313,7 +313,7 @@
 			</include>
 			<include>BottomBar</include>
 			<control type="group">
-				<left>-10000</left>
+				<left>{{ScaleX('-10000')}}</left>
 				<include content="InfoList">
 					<param name="path" value="addons://outdated/" />
 					<param name="bottom" value="1" />
