--- a/templates/Custom_1105_MusicOSDSettings.xml
+++ b/templates/Custom_1105_MusicOSDSettings.xml
@@ -5,9 +5,9 @@
 	<controls>
 		<control type="group">
 			<centerleft>50%</centerleft>
-			<width>600</width>
+			<width>{{ScaleX('600')}}</width>
 			<centertop>50%</centertop>
-			<height>700</height>
+			<height>{{ScaleY('700')}}</height>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="600" />
 				<param name="height" value="80" />
@@ -15,17 +15,17 @@
 				<param name="header_id" value="" />
 			</include>
 			<control type="group">
-				<left>0</left>
-				<top>80</top>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('80')}}</top>
 				<control type="grouplist" id="5000">
-					<width>600</width>
-					<height>700</height>
+					<width>{{ScaleX('600')}}</width>
+					<height>{{ScaleY('700')}}</height>
 					<itemgap>0</itemgap>
 					<onup>5000</onup>
 					<ondown>5000</ondown>
 					<orientation>vertical</orientation>
 					<control type="radiobutton" id="5001">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[31163]</label>
 						<onclick>Skin.ToggleSetting(hide_background_fanart)</onclick>
@@ -38,7 +38,7 @@
 						<selected>Skin.HasSetting(animate_background_fanart)</selected>
 					</control>
 					<control type="button" id="5004">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[250]</label>
 						<label2>[B]$INFO[Visualisation.Name][/B]</label2>
@@ -46,27 +46,27 @@
 						<onclick>SendClick(500)</onclick>
 					</control>
 					<control type="button" id="5005">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[31084]</label>
 						<onclick>Addon.Default.OpenSettings(xbmc.player.musicviz)</onclick>
 					</control>
 					<control type="button" id="5006">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[31068]</label>
 						<onclick>ActivateWindow(visualisationpresetlist)</onclick>
 						<visible>Visualisation.HasPresets</visible>
 					</control>
 					<control type="button" id="5007">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[31082]</label>
 						<label2>[B]$INFO[Skin.String(LyricScript_Path)][/B]</label2>
 						<onclick>Skin.SetAddon(LyricScript_Path,xbmc.python.lyrics)</onclick>
 					</control>
 					<control type="button" id="5008">
-						<width>600</width>
+						<width>{{ScaleX('600')}}</width>
 						<include>DialogSettingButton</include>
 						<label>$LOCALIZE[31083]</label>
 						<onclick>Addon.OpenSettings($INFO[Skin.String(LyricScript_Path)])</onclick>
