--- a/templates/Custom_1109_TopBarOverlay.xml
+++ b/templates/Custom_1109_TopBarOverlay.xml
@@ -10,78 +10,78 @@
 		<control type="group">
 			<visible>![Player.ShowInfo | Window.IsActive(fullscreeninfo) | Player.ShowTime | Window.IsActive(videoosd) | Window.IsActive(musicosd) | Window.IsActive(playerprocessinfo) | !String.IsEmpty(PVR.ChannelNumberInput) | Window.IsActive(pvrosdchannels) | Window.IsActive(pvrchannelguide)] + [!String.IsEmpty(Player.SeekNumeric) | Player.Seeking | Player.HasPerformedSeek(3) | Player.Forwarding | Player.Rewinding | Player.Paused]</visible>
 			<animation effect="fade" start="0" end="100" time="300">VisibleChange</animation>
-			<animation effect="slide" start="0,0" end="0,-80" time="300" condition="Player.Paused + Integer.IsGreaterOrEqual(Skin.TimerElapsedSecs(1110_topbaroverlay),5)">Conditional</animation>
+			<animation effect="slide" start="{{ScaleBorder2('0,0')}}" end="{{ScaleBorder2('0,-80')}}" time="300" condition="Player.Paused + Integer.IsGreaterOrEqual(Skin.TimerElapsedSecs(1110_topbaroverlay),5)">Conditional</animation>
 			<control type="image">
-				<left>0</left>
-				<top>0</top>
-				<width>100%</width>
-				<height>55</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('55')}}</height>
 				<texture colordiffuse="D0FFFFFF" border="0,55,0,0">frame/osdfade.png</texture>
 			</control>
 			<control type="label">
-				<left>25</left>
-				<top>6</top>
-				<width>700</width>
-				<height>60</height>
+				<left>{{ScaleX('25')}}</left>
+				<top>{{ScaleY('6')}}</top>
+				<width>{{ScaleX('700')}}</width>
+				<height>{{ScaleY('60')}}</height>
 				<label>$VAR[SeekLabel]</label>
 				<font>font30_title</font>
 				<shadowcolor>black</shadowcolor>
 			</control>
 			<control type="label">
 				<centerleft>50%</centerleft>
-				<top>0</top>
-				<width>50%</width>
-				<height>55</height>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('50%')}}</width>
+				<height>{{ScaleY('55')}}</height>
 				<align>center</align>
 				<label>$VAR[SeekTimeLabelVar]</label>
 				<font>font37</font>
 				<visible>!Player.ChannelPreviewActive | VideoPlayer.HasEpg</visible>
 			</control>
 			<control type="label">
-				<right>25</right>
-				<top>6</top>
-				<width>700</width>
-				<height>60</height>
+				<right>{{ScaleX('25')}}</right>
+				<top>{{ScaleY('6')}}</top>
+				<width>{{ScaleX('700')}}</width>
+				<height>{{ScaleY('60')}}</height>
 				<align>right</align>
 				<font>font30_title</font>
 				<label>$INFO[player.chapter,[COLOR button_focus]$LOCALIZE[21396]:[/COLOR] ]$INFO[Player.ChapterCount,/]</label>
 				<visible>!VideoPlayer.Content(LiveTV) + player.chaptercount</visible>
 			</control>
 			<control type="label">
-				<right>25</right>
-				<top>6</top>
-				<width>700</width>
-				<height>60</height>
+				<right>{{ScaleX('25')}}</right>
+				<top>{{ScaleY('6')}}</top>
+				<width>{{ScaleX('700')}}</width>
+				<height>{{ScaleY('60')}}</height>
 				<align>right</align>
 				<font>font30_title</font>
 				<label>[COLOR button_focus]$LOCALIZE[31026][/COLOR] $INFO[PVR.TimeshiftCur] (-$INFO[PVR.TimeshiftOffset])</label>
 				<visible>VideoPlayer.Content(LiveTV) + PVR.IsTimeShift</visible>
 			</control>
 			<control type="progress">
-				<left>0</left>
-				<top>55</top>
-				<width>100%</width>
-				<height>16</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('55')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('16')}}</height>
 				<info>Player.ProgressCache</info>
 				<texturebg border="3" colordiffuse="60FFFFFF">colors/white50.png</texturebg>
 				<midtexture>colors/white50.png</midtexture>
 				<visible>!VideoPlayer.Content(LiveTV)</visible>
 			</control>
 			<control type="progress">
-				<left>0</left>
-				<top>55</top>
-				<width>100%</width>
-				<height>16</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('55')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('16')}}</height>
 				<info>Player.Progress</info>
 				<texturebg border="3" colordiffuse="60FFFFFF">colors/white50.png</texturebg>
 				<midtexture colordiffuse="button_focus">colors/white.png</midtexture>
 				<visible>!VideoPlayer.Content(LiveTV)</visible>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>50</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('50')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_bar.png</texturesliderbar>
 				<textureslidernib colordiffuse="button_focus">osd/progress/nub_bar.png</textureslidernib>
 				<textureslidernibfocus colordiffuse="button_focus">colors/white.png</textureslidernibfocus>
@@ -115,10 +115,10 @@
 				</control>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>50</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('50')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_bar.png</texturesliderbar>
 				<textureslidernib colordiffuse="button_focus">osd/progress/nub_bar.png</textureslidernib>
 				<textureslidernibfocus colordiffuse="button_focus">colors/white.png</textureslidernibfocus>
@@ -126,10 +126,10 @@
 				<visible>VideoPlayer.Content(LiveTV) + [Player.Seeking | Player.HasPerformedSeek(3) | Player.Paused] + !Player.ChannelPreviewActive</visible>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>55</top>
-				<width>100%</width>
-				<height>8</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('55')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('8')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<lefttexture>colors/white.png</lefttexture>
 				<midtexture colordiffuse="FFFF0000">colors/white.png</midtexture>
@@ -137,57 +137,57 @@
 				<info>Player.Editlist</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>67</top>
-				<width>100%</width>
-				<height>8</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('67')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('8')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/red50.png</texturebg>
 				<righttexture>colors/red.png</righttexture>
 				<info>Player.Cuts</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>67</top>
-				<width>100%</width>
-				<height>4</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('67')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('4')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<righttexture>colors/white.png</righttexture>
 				<info>Player.SceneMarkers</info>
 			</control>
 			<control type="ranges">
-				<left>0</left>
-				<top>67</top>
-				<width>100%</width>
-				<height>4</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('67')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('4')}}</height>
 				<texturebg border="3" colordiffuse="00FFFFFF">colors/white50.png</texturebg>
 				<righttexture>colors/white.png</righttexture>
 				<info>Player.Chapters</info>
 			</control>
 		</control>
 		<control type="group">
-			<animation effect="slide" end="0,-200" time="300" tween="sine" easing="inout" condition="$EXP[infodialog_active]">conditional</animation>
-			<animation effect="slide" start="0,-200" end="0,0" time="300" tween="cubic" easing="out">VisibleChange</animation>
+			<animation effect="slide" end="{{ScaleBorder2('0,-200')}}" time="300" tween="sine" easing="inout" condition="$EXP[infodialog_active]">conditional</animation>
+			<animation effect="slide" start="{{ScaleBorder2('0,-200')}}" end="{{ScaleBorder2('0,0')}}" time="300" tween="cubic" easing="out">VisibleChange</animation>
 			<visible>Player.ShowInfo | Window.IsActive(fullscreeninfo) | Player.ShowTime | Window.IsActive(videoosd) | Window.IsActive(musicosd) | Window.IsActive(playerprocessinfo) | !String.IsEmpty(PVR.ChannelNumberInput) | Window.IsActive(pvrosdchannels) | Window.IsActive(pvrchannelguide) + ![Player.Seeking | Player.HasPerformedSeek(3) | Player.Forwarding | Player.Rewinding | Player.Paused]</visible>
 			<depth>DepthBars</depth>
 			<control type="image">
-				<left>0</left>
-				<top>0</top>
-				<width>100%</width>
-				<height>170</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('170')}}</height>
 				<texture>frame/osdfade.png</texture>
 			</control>
 			<control type="group">
-				<animation effect="slide" end="90,0" time="0" condition="Skin.HasSetting(touchmode)">conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('90,0')}}" time="0" condition="Skin.HasSetting(touchmode)">conditional</animation>
 				<control type="grouplist">
 					<visible>!String.IsEmpty(Player.Art(tvshow.clearlogo)) | !String.IsEmpty(Player.Art(clearlogo))</visible>
-					<top>10</top>
-					<left>20</left>
-					<right>400</right>
-					<height>100</height>
+					<top>{{ScaleY('10')}}</top>
+					<left>{{ScaleX('20')}}</left>
+					<right>{{ScaleX('400')}}</right>
+					<height>{{ScaleY('100')}}</height>
 					<itemgap>10</itemgap>
 					<orientation>horizontal</orientation>
 					<control type="image">
-						<width>300</width>
+						<width>{{ScaleX('300')}}</width>
 						<texture>$VAR[PlayerClearLogoVar]</texture>
 						<aspectratio aligny="center" align="center">keep</aspectratio>
 					</control>
@@ -205,20 +205,20 @@
 					<visible>String.IsEmpty(Player.Art(clearlogo))</visible>
 					<visible>String.IsEmpty(Player.Art(tvshow.clearlogo))</visible>
 					<animation effect="fade" time="150">VisibleChange</animation>
-					<left>20</left>
-					<right>400</right>
+					<left>{{ScaleX('20')}}</left>
+					<right>{{ScaleX('400')}}</right>
 					<control type="label">
 						<label>$VAR[NowPlayingBreadcrumbsVar]</label>
 						<font>font45</font>
 						<shadowcolor>text_shadow</shadowcolor>
-						<top>7</top>
-						<height>50</height>
+						<top>{{ScaleY('7')}}</top>
+						<height>{{ScaleY('50')}}</height>
 					</control>
 					<control type="label">
-						<top>60</top>
+						<top>{{ScaleY('60')}}</top>
 						<label>$VAR[OSDSubLabelVar]</label>
 						<shadowcolor>text_shadow</shadowcolor>
-						<height>60</height>
+						<height>{{ScaleY('60')}}</height>
 					</control>
 				</control>
 			</control>
@@ -228,18 +228,18 @@
 				<control type="label">
 					<font>font_clock</font>
 					<shadowcolor>text_shadow</shadowcolor>
-					<top>0</top>
-					<right>20</right>
-					<height>200</height>
-					<width>600</width>
+					<top>{{ScaleY('0')}}</top>
+					<right>{{ScaleX('20')}}</right>
+					<height>{{ScaleY('200')}}</height>
+					<width>{{ScaleX('600')}}</width>
 					<align>right</align>
 					<label>$INFO[System.Time]</label>
 				</control>
 				<control type="grouplist">
-					<right>24</right>
-					<top>74</top>
-					<width>800</width>
-					<height>100</height>
+					<right>{{ScaleX('24')}}</right>
+					<top>{{ScaleY('74')}}</top>
+					<width>{{ScaleX('800')}}</width>
+					<height>{{ScaleY('100')}}</height>
 					<align>right</align>
 					<itemgap>5</itemgap>
 					<orientation>horizontal</orientation>
@@ -247,23 +247,23 @@
 					<control type="label">
 						<label>$INFO[Player.FinishTime,$LOCALIZE[31080]: ]</label>
 						<shadowcolor>text_shadow</shadowcolor>
-						<height>100</height>
-						<width>auto</width>
+						<height>{{ScaleY('100')}}</height>
+						<width>{{ScaleX('auto')}}</width>
 						<visible>!String.isempty(Player.Duration)</visible>
 						<visible>Player.HasVideo + ![Player.HasGame | VideoPlayer.HasEpg]</visible>
 					</control>
 					<control type="label">
 						<label>$INFO[PVR.EpgEventFinishTime,$LOCALIZE[31080]: ]</label>
 						<shadowcolor>text_shadow</shadowcolor>
-						<height>100</height>
-						<width>auto</width>
+						<height>{{ScaleY('100')}}</height>
+						<width>{{ScaleX('auto')}}</width>
 						<visible>VideoPlayer.HasEpg</visible>
 					</control>
 					<control type="image">
-						<top>2</top>
-						<left>0</left>
-						<width>60</width>
-						<height>40</height>
+						<top>{{ScaleY('2')}}</top>
+						<left>{{ScaleX('0')}}</left>
+						<width>{{ScaleX('60')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<fadetime>300</fadetime>
 						<aspectratio aligny="center" align="right">keep</aspectratio>
 						<texture>dialogs/volume/mute.png</texture>
