--- a/templates/Custom_1110_TempoControl.xml
+++ b/templates/Custom_1110_TempoControl.xml
@@ -5,43 +5,43 @@
 	<depth>DepthOSD+</depth>
 	<controls>
 		<control type="group">
-			<top>20</top>
+			<top>{{ScaleY('20')}}</top>
 			<centerleft>50%</centerleft>
-			<width>840</width>
+			<width>{{ScaleX('840')}}</width>
 			<control type="image">
-				<left>-20</left>
-				<top>-30</top>
-				<width>840</width>
-				<height>100</height>
+				<left>{{ScaleX('-20')}}</left>
+				<top>{{ScaleY('-30')}}</top>
+				<width>{{ScaleX('840')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<texture>dialogs/dialog-bg-nobo.png</texture>
 				<bordertexture border="21" infill="false">overlays/shadow.png</bordertexture>
 				<bordersize>20</bordersize>
 			</control>
 			<control type="label">
 				<description>Dialog header</description>
-				<left>40</left>
-				<top>10</top>
-				<width>550</width>
-				<height>20</height>
+				<left>{{ScaleX('40')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<width>{{ScaleX('550')}}</width>
+				<height>{{ScaleY('20')}}</height>
 				<aligny>center</aligny>
 				<font>font14</font>
 				<label>$LOCALIZE[31142]</label>
 			</control>
 			<control type="label">
-				<left>120</left>
-				<top>10</top>
-				<width>550</width>
-				<height>20</height>
+				<left>{{ScaleX('120')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<width>{{ScaleX('550')}}</width>
+				<height>{{ScaleY('20')}}</height>
 				<align>right</align>
 				<aligny>center</aligny>
 				<font>font14</font>
 				<label>$INFO[Player.playspeed]</label>
 			</control>
 			<control type="button" id="11">
-				<left>690</left>
-				<top>10</top>
-				<width>28</width>
-				<height>20</height>
+				<left>{{ScaleX('690')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<width>{{ScaleX('28')}}</width>
+				<height>{{ScaleY('20')}}</height>
 				<onleft>12</onleft>
 				<onright>12</onright>
 				<texturefocus colordiffuse="button_focus">overlays/arrowdown.png</texturefocus>
@@ -49,10 +49,10 @@
 				<onclick>PlayerControl(TempoDown)</onclick>
 			</control>
 			<control type="button" id="12">
-				<left>730</left>
-				<top>10</top>
-				<width>28</width>
-				<height>20</height>
+				<left>{{ScaleX('730')}}</left>
+				<top>{{ScaleY('10')}}</top>
+				<width>{{ScaleX('28')}}</width>
+				<height>{{ScaleY('20')}}</height>
 				<onleft>11</onleft>
 				<onright>11</onright>
 				<texturefocus flipy="true" colordiffuse="button_focus">overlays/arrowdown.png</texturefocus>
