--- a/templates/Defaults.xml
+++ b/templates/Defaults.xml
@@ -27,20 +27,20 @@
 		<disabledcolor>disabled</disabledcolor>
 	</default>
 	<default type="button">
-		<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
 		<font>font13</font>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<aligny>center</aligny>
 		<pulseonselect>no</pulseonselect>
 	</default>
 	<default type="togglebutton">
-		<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
-		<alttexturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</alttexturefocus>
-		<alttexturenofocus border="21">buttons/button-nofo.png</alttexturenofocus>
+		<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
+		<alttexturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</alttexturefocus>
+		<alttexturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</alttexturenofocus>
 		<textcolor>white</textcolor>
 		<font>font13</font>
 		<disabledcolor>disabled</disabledcolor>
@@ -66,22 +66,22 @@
 		<textureupdisabled colordiffuse="disabled">buttons/spinctrl/arrow-light-up.png</textureupdisabled>
 		<texturedowndisabled colordiffuse="disabled">buttons/spinctrl/arrow-light-down.png</texturedowndisabled>
 		<align>right</align>
-		<width>77</width>
-		<height>33</height>
+		<width>{{ScaleX('77')}}</width>
+		<height>{{ScaleY('33')}}</height>
 		<font>font13</font>
 		<reverse>yes</reverse>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
 		<subtype>text</subtype>
-		<textoffsetx>-5</textoffsetx>
-		<textoffsety>0</textoffsety>
+		<textoffsetx>{{ScaleX('-5')}}</textoffsetx>
+		<textoffsety>{{ScaleY('0')}}</textoffsety>
 		<pulseonselect>no</pulseonselect>
 	</default>
 	<default type="spincontrolex">
 		<spinwidth>32</spinwidth>
 		<spinheight>60</spinheight>
-		<texturefocus border="40" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="40">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-nofo.png</texturenofocus>
 		<textureup colordiffuse="disabled">buttons/spinctrl/arrow-light-up.png</textureup>
 		<texturedown colordiffuse="disabled">buttons/spinctrl/arrow-light-down.png</texturedown>
 		<textureupfocus>buttons/spinctrl/arrow-light-up.png</textureupfocus>
@@ -91,7 +91,7 @@
 		<font>font13</font>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<aligny>center</aligny>
 		<reverse>yes</reverse>
 		<pulseonselect>no</pulseonselect>
@@ -105,12 +105,12 @@
 		<textureradiooffnofocus>buttons/radio-button-off.png</textureradiooffnofocus>
 		<textureradioondisabled colordiffuse="disabled">buttons/radio-button-on.png</textureradioondisabled>
 		<textureradiooffdisabled colordiffuse="disabled">buttons/radio-button-off.png</textureradiooffdisabled>
-		<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
 		<font>font13</font>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<align>left</align>
 		<aligny>center</aligny>
 		<pulseonselect>no</pulseonselect>
@@ -123,7 +123,7 @@
 		<font>font13</font>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<align>left</align>
 		<aligny>center</aligny>
 		<pulseonselect>no</pulseonselect>
@@ -148,10 +148,10 @@
 		<orientation>horizontal</orientation>
 	</default>
 	<default type="sliderex">
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<aligny>center</aligny>
-		<texturefocus border="40" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="40">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-nofo.png</texturenofocus>
 		<sliderwidth>150</sliderwidth>
 		<sliderheight>28</sliderheight>
 		<texturesliderbar>buttons/slider-back.png</texturesliderbar>
@@ -162,21 +162,21 @@
 		<disabledcolor>disabled</disabledcolor>
 	</default>
 	<default type="mover">
-		<texturefocus border="40" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="40">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-nofo.png</texturenofocus>
 	</default>
 	<default type="resize">
-		<texturefocus border="40" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-		<texturenofocus border="40">buttons/button-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-nofo.png</texturenofocus>
 	</default>
 	<default type="edit">
-		<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-		<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texturenofocus>
 		<font>font13</font>
 		<textcolor>white</textcolor>
 		<disabledcolor>disabled</disabledcolor>
 		<invalidcolor>invalid</invalidcolor>
-		<textoffsetx>7</textoffsetx>
+		<textoffsetx>{{ScaleX('7')}}</textoffsetx>
 		<aligny>center</aligny>
 		<pulseonselect>no</pulseonselect>
 	</default>
