--- a/templates/DialogAddonSettings.xml
+++ b/templates/DialogAddonSettings.xml
@@ -4,9 +4,9 @@
 	<include>Animation_DialogPopupOpenClose</include>
 	<controls>
 		<control type="group">
-			<top>90</top>
+			<top>{{ScaleY('90')}}</top>
 			<centerleft>50%</centerleft>
-			<width>1820</width>
+			<width>{{ScaleX('1820')}}</width>
 			<include>Animation_DialogPopupVisible</include>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="1820" />
@@ -16,10 +16,10 @@
 			</include>
 			<control type="grouplist" id="3">
 				<description>Categories Area</description>
-				<left>29</left>
-				<top>80</top>
-				<width>400</width>
-				<height>596</height>
+				<left>{{ScaleX('29')}}</left>
+				<top>{{ScaleY('80')}}</top>
+				<width>{{ScaleX('400')}}</width>
+				<height>{{ScaleY('596')}}</height>
 				<itemgap>-25</itemgap>
 				<orientation>vertical</orientation>
 				<onleft>9000</onleft>
@@ -29,27 +29,27 @@
 			</control>
 			<control type="button" id="10">
 				<description>Default Category Button</description>
-				<height>120</height>
-				<width>390</width>
-				<textoffsetx>20</textoffsetx>
+				<height>{{ScaleY('120')}}</height>
+				<width>{{ScaleX('390')}}</width>
+				<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 				<align>center</align>
 				<aligny>center</aligny>
 				<font>font25_title</font>
-				<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+				<texturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texturenofocus>
 			</control>
 			<control type="image">
-				<left>410</left>
-				<top>80</top>
-				<width>1100</width>
-				<height>740</height>
-				<texture border="40">buttons/dialogbutton-nofo.png</texture>
+				<left>{{ScaleX('410')}}</left>
+				<top>{{ScaleY('80')}}</top>
+				<width>{{ScaleX('1100')}}</width>
+				<height>{{ScaleY('740')}}</height>
+				<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 			</control>
 			<control type="grouplist" id="5">
 				<description>control area</description>
-				<left>429</left>
-				<top>100</top>
-				<width>1060</width>
-				<height>700</height>
+				<left>{{ScaleX('429')}}</left>
+				<top>{{ScaleY('100')}}</top>
+				<width>{{ScaleX('1060')}}</width>
+				<height>{{ScaleY('700')}}</height>
 				<pagecontrol>60</pagecontrol>
 				<onleft>3</onleft>
 				<onright>60</onright>
@@ -58,10 +58,10 @@
 			</control>
 			<control type="textbox" id="6">
 				<description>description area</description>
-				<left>50</left>
-				<top>815</top>
-				<right>50</right>
-				<height>70</height>
+				<left>{{ScaleX('50')}}</left>
+				<top>{{ScaleY('815')}}</top>
+				<right>{{ScaleX('50')}}</right>
+				<height>{{ScaleY('70')}}</height>
 				<font>font12</font>
 				<align>justify</align>
 				<textcolor>button_focus</textcolor>
@@ -82,7 +82,7 @@
 			</control>
 			<control type="image" id="11">
 				<description>separator image</description>
-				<height>3</height>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="AAAAAAAA" border="3">dialogs/separator-grey.png</texture>
 			</control>
 			<control type="edit" id="12">
@@ -102,11 +102,11 @@
 				<include>DefaultSettingButton</include>
 			</control>
 			<control type="grouplist" id="9000">
-				<left>1510</left>
-				<top>92</top>
+				<left>{{ScaleX('1510')}}</left>
+				<top>{{ScaleY('92')}}</top>
 				<orientation>vertical</orientation>
-				<width>300</width>
-				<height>300</height>
+				<width>{{ScaleX('300')}}</width>
+				<height>{{ScaleY('300')}}</height>
 				<itemgap>-10</itemgap>
 				<onleft>5</onleft>
 				<onright>3</onright>
@@ -124,17 +124,17 @@
 				</include>
 			</control>
 			<control type="radiobutton" id="20">
-				<left>29</left>
-				<top>700</top>
-				<width>390</width>
-				<height>120</height>
+				<left>{{ScaleX('29')}}</left>
+				<top>{{ScaleY('700')}}</top>
+				<width>{{ScaleX('390')}}</width>
+				<height>{{ScaleY('120')}}</height>
 				<font>font25_title</font>
 				<aligny>center</aligny>
 				<onclick>SettingsLevelChange</onclick>
-				<textoffsetx>100</textoffsetx>
-				<textoffsety>0</textoffsety>
+				<textoffsetx>{{ScaleX('100')}}</textoffsetx>
+				<textoffsety>{{ScaleY('0')}}</textoffsety>
 				<texturenofocus />
-				<radioposx>40</radioposx>
+				<radioposx>{{ScaleX('40')}}</radioposx>
 				<radioposy>0</radioposy>
 				<radiowidth>40</radiowidth>
 				<radioheight>40</radioheight>
@@ -148,10 +148,10 @@
 				<textureradiooffnofocus>icons/settings.png</textureradiooffnofocus>
 			</control>
 			<control type="scrollbar" id="60">
-				<left>1489</left>
-				<top>100</top>
-				<width>12</width>
-				<height>700</height>
+				<left>{{ScaleX('1489')}}</left>
+				<top>{{ScaleY('100')}}</top>
+				<width>{{ScaleX('12')}}</width>
+				<height>{{ScaleY('700')}}</height>
 				<orientation>vertical</orientation>
 				<onleft>5</onleft>
 				<onright>9000</onright>
