--- a/templates/DialogConfirm.xml
+++ b/templates/DialogConfirm.xml
@@ -4,10 +4,10 @@
 	<depth>DepthDialog+</depth>
 	<controls>
 		<control type="group">
-			<height>400</height>
+			<height>{{ScaleY('400')}}</height>
 			<centertop>50%</centertop>
 			<centerleft>50%</centerleft>
-			<width>915</width>
+			<width>{{ScaleX('915')}}</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="915" />
 				<param name="height" value="380" />
@@ -15,25 +15,25 @@
 				<param name="header_id" value="1" />
 			</include>
 			<control type="textbox" id="9">
-				<left>30</left>
-				<top>82</top>
-				<width>855</width>
-				<height>165</height>
+				<left>{{ScaleX('30')}}</left>
+				<top>{{ScaleY('82')}}</top>
+				<width>{{ScaleX('855')}}</width>
+				<height>{{ScaleY('165')}}</height>
 				<label></label>
 				<autoscroll time="3000" delay="4000" repeat="5000">true</autoscroll>
 			</control>
 			<control type="progress" id="20">
-				<left>30</left>
-				<top>262</top>
-				<width>855</width>
-				<height>24</height>
+				<left>{{ScaleX('30')}}</left>
+				<top>{{ScaleY('262')}}</top>
+				<width>{{ScaleX('855')}}</width>
+				<height>{{ScaleY('24')}}</height>
 				<info>System.Progressbar</info>
 			</control>
 			<control type="grouplist" id="9000">
 				<orientation>horizontal</orientation>
-				<left>0</left>
-				<top>290</top>
-				<width>915</width>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('290')}}</top>
+				<width>{{ScaleX('915')}}</width>
 				<align>center</align>
 				<include content="DefaultDialogButton">
 					<param name="id" value="11" />
