--- a/templates/DialogKeyboard.xml
+++ b/templates/DialogKeyboard.xml
@@ -7,28 +7,28 @@
 		<control type="group">
 			<bottom>0</bottom>
 			<centerleft>50%</centerleft>
-			<width>100%</width>
+			<width>{{ScaleX('100%')}}</width>
 			<visible>!Window.IsVisible(numericinput)</visible>
 			<include>Animation_DialogPopupVisible</include>
 			<control type="image">
-				<left>0</left>
+				<left>{{ScaleX('0')}}</left>
 				<bottom>0</bottom>
-				<width>100%</width>
-				<height>300%</height>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('300%')}}</height>
 				<texture flipy="true">frame/osdfade.png</texture>
 			</control>
 			<control type="image">
-				<left>0</left>
+				<left>{{ScaleX('0')}}</left>
 				<bottom>0</bottom>
-				<width>100%</width>
-				<height>470</height>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('470')}}</height>
 				<texture colordiffuse="dialog_tint">colors/white.png</texture>
 			</control>
 			<control type="label" id="311">
 				<centerleft>50%</centerleft>
-				<top>50</top>
-				<width>1542</width>
-				<height>100</height>
+				<top>{{ScaleY('50')}}</top>
+				<width>{{ScaleX('1542')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<font>font45</font>
 				<label>$PARAM[header_label]</label>
 				<align>center</align>
@@ -37,23 +37,23 @@
 			</control>
 			<control type="image">
 				<centerleft>50%</centerleft>
-				<top>184</top>
-				<width>1542</width>
-				<height>100</height>
+				<top>{{ScaleY('184')}}</top>
+				<width>{{ScaleX('1542')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<texture colordiffuse="dialog_tint">colors/white.png</texture>
 			</control>
 			<control type="image">
 				<centerleft>50%</centerleft>
-				<top>184</top>
-				<width>1542</width>
-				<height>100</height>
-				<texture border="40">buttons/button-alt-nofo.png</texture>
+				<top>{{ScaleY('184')}}</top>
+				<width>{{ScaleX('1542')}}</width>
+				<height>{{ScaleY('100')}}</height>
+				<texture border="{{ScaleBorder('40')}}">buttons/button-alt-nofo.png</texture>
 			</control>
 			<control type="edit" id="312">
 				<centerleft>50%</centerleft>
-				<top>183</top>
-				<width>1510</width>
-				<height>100</height>
+				<top>{{ScaleY('183')}}</top>
+				<width>{{ScaleX('1510')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<font>font37</font>
 				<align>center</align>
 				<aligny>center</aligny>
@@ -63,13 +63,13 @@
 			<control type="group" id="78500">
 				<centerleft>59%</centerleft>
 				<bottom>0</bottom>
-				<height>480</height>
-				<width>1920</width>
-				<animation effect="slide" end="-60,0" time="200" tween="sine" easing="inout" condition="Control.IsVisible(110) | Control.IsVisible(130) | Control.IsVisible(150) | Control.IsVisible(170)">conditional</animation>
-				<animation effect="slide" end="-110,0" time="200" tween="sine" easing="inout" condition="Control.IsVisible(111) | Control.IsVisible(131) | Control.IsVisible(151) | Control.IsVisible(171)">conditional</animation>
+				<height>{{ScaleY('480')}}</height>
+				<width>{{ScaleX('1920')}}</width>
+				<animation effect="slide" end="{{ScaleBorder2('-60,0')}}" time="200" tween="sine" easing="inout" condition="Control.IsVisible(110) | Control.IsVisible(130) | Control.IsVisible(150) | Control.IsVisible(170)">conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('-110,0')}}" time="200" tween="sine" easing="inout" condition="Control.IsVisible(111) | Control.IsVisible(131) | Control.IsVisible(151) | Control.IsVisible(171)">conditional</animation>
 				<!-- 1st row -->
 				<control type="grouplist">
-					<left>320</left>
+					<left>{{ScaleX('320')}}</left>
 					<itemgap>-30</itemgap>
 					<orientation>horizontal</orientation>
 					<onright>95200</onright>
@@ -167,8 +167,8 @@
 				</control>
 				<!-- 2nd row -->
 				<control type="grouplist">
-					<left>320</left>
-					<top>90</top>
+					<left>{{ScaleX('320')}}</left>
+					<top>{{ScaleY('90')}}</top>
 					<itemgap>-30</itemgap>
 					<orientation>horizontal</orientation>
 					<onright>95200</onright>
@@ -253,8 +253,8 @@
 				</control>
 				<!-- 3rd row -->
 				<control type="grouplist">
-					<left>320</left>
-					<top>180</top>
+					<left>{{ScaleX('320')}}</left>
+					<top>{{ScaleY('180')}}</top>
 					<orientation>horizontal</orientation>
 					<onright>95200</onright>
 					<itemgap>-30</itemgap>
@@ -339,8 +339,8 @@
 				</control>
 				<!-- 4th row -->
 				<control type="grouplist">
-					<left>320</left>
-					<top>270</top>
+					<left>{{ScaleX('320')}}</left>
+					<top>{{ScaleY('270')}}</top>
 					<itemgap>-30</itemgap>
 					<orientation>horizontal</orientation>
 					<onright>95200</onright>
@@ -425,15 +425,15 @@
 				</control>
 				<!-- 5th row -->
 				<control type="grouplist">
-					<left>320</left>
-					<top>360</top>
+					<left>{{ScaleX('320')}}</left>
+					<top>{{ScaleY('360')}}</top>
 					<itemgap>-30</itemgap>
 					<orientation>horizontal</orientation>
 					<onright>95200</onright>
 					<control type="radiobutton" id="304">
 						<description>Symbols button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<onup>160</onup>
 						<ondown>100</ondown>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -442,14 +442,14 @@
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/letters.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/accents.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/accents.png</textureradiooffnofocus>
-						<radioposx>32l</radioposx>
+						<radioposx>{{ScaleX('32l')}}</radioposx>
 						<radiowidth>56</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
 					<control type="radiobutton" id="303">
 						<description>CAPS LOCK button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<onup>161</onup>
 						<ondown>101</ondown>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -458,15 +458,15 @@
 						<textureradioonnofocus colordiffuse="button_focus">icons/keyboard/capslock.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/capslock.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/capslock.png</textureradiooffnofocus>
-						<radioposx>40</radioposx>
+						<radioposx>{{ScaleX('40')}}</radioposx>
 						<radioposy>42</radioposy>
 						<radiowidth>42</radiowidth>
 						<radioheight>47</radioheight>
 					</control>
 					<control type="radiobutton" id="302">
 						<description>SHIFT button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<onup>162</onup>
 						<ondown>102</ondown>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -475,14 +475,14 @@
 						<textureradioonnofocus colordiffuse="button_focus">icons/keyboard/shift.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/shift.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/shift.png</textureradiooffnofocus>
-						<radioposx>42</radioposx>
+						<radioposx>{{ScaleX('42')}}</radioposx>
 						<radiowidth>36</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
 					<control type="radiobutton" id="32">
 						<description>SPACE button</description>
-						<width>390</width>
-						<height>120</height>
+						<width>{{ScaleX('390')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<onup>164</onup>
 						<ondown>104</ondown>
 						<texturefocus />
@@ -491,14 +491,14 @@
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/spacebar.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="button_focus">icons/keyboard/spacebar.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/spacebar.png</textureradiooffnofocus>
-						<radioposx>34</radioposx>
+						<radioposx>{{ScaleX('34')}}</radioposx>
 						<radiowidth>328</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
 					<control type="radiobutton" id="305">
 						<description>previous button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<ondown>107</ondown>
 						<onup>167</onup>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -507,14 +507,14 @@
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradiooffnofocus>
-						<radioposx>38</radioposx>
+						<radioposx>{{ScaleX('38')}}</radioposx>
 						<radiowidth>36</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
 					<control type="radiobutton" id="306">
 						<description>next button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<ondown>108</ondown>
 						<onup>168</onup>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -523,14 +523,14 @@
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradiooffnofocus>
-						<radioposx>45</radioposx>
+						<radioposx>{{ScaleX('45')}}</radioposx>
 						<radiowidth>36</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
 					<control type="radiobutton" id="8">
 						<description>BACKSPACE button</description>
-						<width>120</width>
-						<height>120</height>
+						<width>{{ScaleX('120')}}</width>
+						<height>{{ScaleY('120')}}</height>
 						<onup>169</onup>
 						<ondown>109</ondown>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
@@ -539,7 +539,7 @@
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/backspace.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/backspace.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/backspace.png</textureradiooffnofocus>
-						<radioposx>31</radioposx>
+						<radioposx>{{ScaleX('31')}}</radioposx>
 						<radiowidth>51</radiowidth>
 						<radioheight>36</radioheight>
 					</control>
@@ -547,7 +547,7 @@
 			</control>
 			<control type="grouplist" id="95200">
 				<bottom>0</bottom>
-				<height>460</height>
+				<height>{{ScaleY('460')}}</height>
 				<centerleft>88%</centerleft>
 				<itemgap>dialogbuttons_itemgap</itemgap>
 				<onup condition="!Integer.IsGreater(Container(9010).NumItems,0)">95200</onup>
@@ -555,7 +555,7 @@
 				<ondown>95200</ondown>
 				<onleft>78500</onleft>
 				<onright>140</onright>
-				<width>350</width>
+				<width>{{ScaleX('350')}}</width>
 				<orientation>vertical</orientation>
 				<include content="DefaultDialogButton">
 					<param name="id" value="300" />
@@ -584,8 +584,8 @@
 			<control type="panel" id="9010">
 				<centerleft>50%</centerleft>
 				<bottom>490</bottom>
-				<width>1500</width>
-				<height>200</height>
+				<width>{{ScaleX('1500')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<scrolltime tween="cubic" easing="out">500</scrolltime>
 				<orientation>vertical</orientation>
 				<onleft>9010</onleft>
@@ -593,46 +593,46 @@
 				<onup>noop</onup>
 				<ondown>105</ondown>
 				<visible>!Control.IsVisible(313)</visible>
-				<itemlayout width="500" height="60">
+				<itemlayout width="{{ScaleX('500')}}" height="{{ScaleY('60')}}">
 					<control type="image">
-						<left>10</left>
-						<top>0</top>
-						<width>480</width>
-						<height>50</height>
+						<left>{{ScaleX('10')}}</left>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('480')}}</width>
+						<height>{{ScaleY('50')}}</height>
 						<texture colordiffuse="dialog_tint">colors/white.png</texture>
 					</control>
 					<control type="label">
-						<textoffsetx>30</textoffsetx>
-						<top>0</top>
-						<width>500</width>
-						<height>50</height>
+						<textoffsetx>{{ScaleX('30')}}</textoffsetx>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('500')}}</width>
+						<height>{{ScaleY('50')}}</height>
 						<label>$INFO[ListItem.Label]</label>
 						<font>font12</font>
 						<shadowcolor>text_shadow</shadowcolor>
 						<aligny>center</aligny>
 					</control>
 				</itemlayout>
-				<focusedlayout width="500" height="60">
+				<focusedlayout width="{{ScaleX('500')}}" height="{{ScaleY('60')}}">
 					<control type="group">
 						<control type="image">
-							<left>10</left>
-							<top>0</top>
-							<width>480</width>
-							<height>50</height>
+							<left>{{ScaleX('10')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('480')}}</width>
+							<height>{{ScaleY('50')}}</height>
 							<texture colordiffuse="dialog_tint">colors/white.png</texture>
 						</control>
 						<control type="image">
-							<left>10</left>
-							<width>480</width>
-							<height>50</height>
+							<left>{{ScaleX('10')}}</left>
+							<width>{{ScaleX('480')}}</width>
+							<height>{{ScaleY('50')}}</height>
 							<texture colordiffuse="button_focus">colors/grey.png</texture>
 							<include>Animation_FocusTextureFade</include>
 						</control>
 						<control type="label">
-							<textoffsetx>30</textoffsetx>
-							<top>0</top>
-							<width>500</width>
-							<height>50</height>
+							<textoffsetx>{{ScaleX('30')}}</textoffsetx>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('500')}}</width>
+							<height>{{ScaleY('50')}}</height>
 							<label>$INFO[ListItem.Label]</label>
 							<font>font12</font>
 							<shadowcolor>text_shadow</shadowcolor>
@@ -644,9 +644,9 @@
 			</control>
 			<control type="label" id="313">
 				<centerleft>50%</centerleft>
-				<top>290</top>
-				<width>1480</width>
-				<height>90</height>
+				<top>{{ScaleY('290')}}</top>
+				<width>{{ScaleX('1480')}}</width>
+				<height>{{ScaleY('90')}}</height>
 				<font>font37</font>
 				<shadowcolor>text_shadow</shadowcolor>
 				<aligny>center</aligny>
@@ -655,23 +655,23 @@
 				<visible>Control.IsVisible(313)</visible>
 				<control type="image">
 					<centerleft>50%</centerleft>
-					<top>290</top>
-					<width>1560</width>
-					<height>90</height>
-					<texture border="40">buttons/dialogbutton-nofo.png</texture>
+					<top>{{ScaleY('290')}}</top>
+					<width>{{ScaleX('1560')}}</width>
+					<height>{{ScaleY('90')}}</height>
+					<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 				</control>
 				<control type="image">
 					<centerleft>50%</centerleft>
-					<top>370</top>
-					<width>1560</width>
-					<height>90</height>
-					<texture border="40">buttons/dialogbutton-nofo.png</texture>
+					<top>{{ScaleY('370')}}</top>
+					<width>{{ScaleX('1560')}}</width>
+					<height>{{ScaleY('90')}}</height>
+					<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 				</control>
 				<control type="label" id="314">
 					<centerleft>50%</centerleft>
-					<top>370</top>
-					<width>1480</width>
-					<height>90</height>
+					<top>{{ScaleY('370')}}</top>
+					<width>{{ScaleX('1480')}}</width>
+					<height>{{ScaleY('90')}}</height>
 					<font>font37</font>
 					<shadowcolor>text_shadow</shadowcolor>
 					<aligny>center</aligny>
