--- a/templates/DialogNumeric.xml
+++ b/templates/DialogNumeric.xml
@@ -6,9 +6,9 @@
 	<controls>
 		<control type="group">
 			<centertop>50%</centertop>
-			<height>660</height>
+			<height>{{ScaleY('660')}}</height>
 			<centerleft>50%</centerleft>
-			<width>545</width>
+			<width>{{ScaleX('545')}}</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="545" />
 				<param name="height" value="660" />
@@ -16,46 +16,46 @@
 				<param name="header_id" value="" />
 			</include>
 			<control type="image">
-				<left>44</left>
-				<top>181</top>
-				<width>457</width>
-				<height>60</height>
+				<left>{{ScaleX('44')}}</left>
+				<top>{{ScaleY('181')}}</top>
+				<width>{{ScaleX('457')}}</width>
+				<height>{{ScaleY('60')}}</height>
 				<texture colordiffuse="32FFFFFF" border="2">colors/white.png</texture>
 			</control>
 			<control type="label" id="4">
 				<description>Edit Text</description>
-				<left>34</left>
-				<top>170</top>
-				<width>477</width>
-				<height>80</height>
+				<left>{{ScaleX('34')}}</left>
+				<top>{{ScaleY('170')}}</top>
+				<width>{{ScaleX('477')}}</width>
+				<height>{{ScaleY('80')}}</height>
 				<font>font37</font>
 				<align>center</align>
 				<aligny>center</aligny>
 			</control>
 			<control type="textbox" id="1">
-				<left>20</left>
-				<top>80</top>
-				<width>505</width>
-				<height>90</height>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('80')}}</top>
+				<width>{{ScaleX('505')}}</width>
+				<height>{{ScaleY('90')}}</height>
 				<textcolor>button_focus</textcolor>
 				<align>center</align>
 				<aligny>center</aligny>
 			</control>
 			<control type="grouplist">
-				<left>350</left>
-				<top>240</top>
-				<height>1000</height>
+				<left>{{ScaleX('350')}}</left>
+				<top>{{ScaleY('240')}}</top>
+				<height>{{ScaleY('1000')}}</height>
 				<orientation>vertical</orientation>
 				<itemgap>-20</itemgap>
 				<control type="button" id="23">
 					<description>Backspace button</description>
-					<width>170</width>
-					<height>223</height>
+					<width>{{ScaleX('170')}}</width>
+					<height>{{ScaleY('223')}}</height>
 					<font>font12</font>
 					<align>center</align>
 					<aligny>center</aligny>
-					<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-					<texturenofocus colordiffuse="71FFFFFF" border="40">buttons/button-alt-nofo.png</texturenofocus>
+					<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+					<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-alt-nofo.png</texturenofocus>
 					<label>$LOCALIZE[20181]</label>
 					<onleft>13</onleft>
 					<onright>11</onright>
@@ -65,28 +65,28 @@
 					<description>Done button</description>
 					<onleft>19</onleft>
 					<onright>17</onright>
-					<width>170</width>
-					<height>223</height>
+					<width>{{ScaleX('170')}}</width>
+					<height>{{ScaleY('223')}}</height>
 					<font>font12</font>
 					<align>center</align>
 					<aligny>center</aligny>
-					<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-					<texturenofocus colordiffuse="71FFFFFF" border="40">buttons/button-alt-nofo.png</texturenofocus>
+					<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+					<texturenofocus border="{{ScaleBorder('40')}}">buttons/button-alt-nofo.png</texturenofocus>
 					<label>$LOCALIZE[20177]</label>
 					<angle>270</angle>
 				</control>
 			</control>
 			<control type="grouplist" id="4000">
-				<left>30</left>
-				<top>240</top>
-				<height>1000</height>
+				<left>{{ScaleX('30')}}</left>
+				<top>{{ScaleY('240')}}</top>
+				<height>{{ScaleY('1000')}}</height>
 				<onleft>23</onleft>
 				<onright>23</onright>
 				<orientation>vertical</orientation>
 				<itemgap>-10</itemgap>
 				<control type="grouplist">
 					<description>1 - 3 buttons</description>
-					<height>110</height>
+					<height>{{ScaleY('110')}}</height>
 					<itemgap>-20</itemgap>
 					<orientation>horizontal</orientation>
 					<control type="button" id="11">
@@ -110,7 +110,7 @@
 				</control>
 				<control type="grouplist">
 					<description>4 - 6 buttons</description>
-					<height>110</height>
+					<height>{{ScaleY('110')}}</height>
 					<itemgap>-20</itemgap>
 					<orientation>horizontal</orientation>
 					<control type="button" id="14">
@@ -134,7 +134,7 @@
 				</control>
 				<control type="grouplist">
 					<description>7 - 9 buttons</description>
-					<height>110</height>
+					<height>{{ScaleY('110')}}</height>
 					<onleft>21</onleft>
 					<onright>21</onright>
 					<itemgap>-20</itemgap>
@@ -159,22 +159,22 @@
 					</control>
 				</control>
 				<control type="grouplist">
-					<height>110</height>
+					<height>{{ScaleY('110')}}</height>
 					<onleft>21</onleft>
 					<onright>21</onright>
 					<itemgap>-20</itemgap>
 					<orientation>horizontal</orientation>
 					<control type="radiobutton" id="20">
 						<description>prev button</description>
-						<width>125</width>
-						<height>125</height>
+						<width>{{ScaleX('125')}}</width>
+						<height>{{ScaleY('125')}}</height>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 						<texturenofocus />
 						<textureradioonfocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradioonfocus>
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowleft.png</textureradiooffnofocus>
-						<radioposx>40</radioposx>
+						<radioposx>{{ScaleX('40')}}</radioposx>
 						<radiowidth>36</radiowidth>
 						<radioheight>36</radioheight>
 						<onup>17</onup>
@@ -189,15 +189,15 @@
 					</control>
 					<control type="radiobutton" id="22">
 						<description>next button</description>
-						<width>125</width>
-						<height>125</height>
+						<width>{{ScaleX('125')}}</width>
+						<height>{{ScaleY('125')}}</height>
 						<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 						<texturenofocus />
 						<textureradioonfocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradioonfocus>
 						<textureradioonnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradioonnofocus>
 						<textureradioofffocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradioofffocus>
 						<textureradiooffnofocus colordiffuse="FFFFFFFF">icons/keyboard/arrowright.png</textureradiooffnofocus>
-						<radioposx>45</radioposx>
+						<radioposx>{{ScaleX('45')}}</radioposx>
 						<radiowidth>36</radiowidth>
 						<radioheight>36</radioheight>
 						<onup>19</onup>
