--- a/templates/DialogPVRGroupManager.xml
+++ b/templates/DialogPVRGroupManager.xml
@@ -5,9 +5,9 @@
 	<controls>
 		<control type="group">
 			<centertop>50%</centertop>
-			<height>880</height>
+			<height>{{ScaleY('880')}}</height>
 			<centerleft>50%</centerleft>
-			<width>1720</width>
+			<width>{{ScaleX('1720')}}</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="1720" />
 				<param name="height" value="880" />
@@ -15,10 +15,10 @@
 				<param name="header_id" value="1" />
 			</include>
 			<control type="grouplist" id="9000">
-				<left>0</left>
-				<top>50</top>
-				<width>370</width>
-				<height>600</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('50')}}</top>
+				<width>{{ScaleX('370')}}</width>
+				<height>{{ScaleY('600')}}</height>
 				<itemgap>-20</itemgap>
 				<align>center</align>
 				<orientation>vertical</orientation>
@@ -28,21 +28,21 @@
 				<ondown>9000</ondown>
 				<control type="button" id="26">
 					<description>Add Group</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[31044]</label>
 				</control>
 				<control type="button" id="27">
 					<description>Rename Group</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[31045]</label>
 				</control>
 				<control type="radiobutton" id="25">
 					<description>Hide Group</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[19289]</label>
@@ -51,21 +51,21 @@
 				</control>
 				<control type="button" id="28">
 					<description>Delete Group</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[31046]</label>
 				</control>
 				<control type="button" id="35">
 					<description>Regenerate Group Thumbnail</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[13315]</label>
 				</control>
 				<control type="togglebutton" id="34">
 					<description>TV/Radio toggle</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[19174]</label>
@@ -74,98 +74,98 @@
 				</control>
 				<control type="button" id="29">
 					<description>OK</description>
-					<width>370</width>
+					<width>{{ScaleX('370')}}</width>
 					<include>SettingsItemCommon</include>
 					<font>font25_title</font>
 					<label>$LOCALIZE[186]</label>
 				</control>
 			</control>
 			<control type="image">
-				<left>85</left>
+				<left>{{ScaleX('85')}}</left>
 				<bottom>30</bottom>
-				<width>200</width>
-				<height>200</height>
+				<width>{{ScaleX('200')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<texture>$INFO[Container(13).ListItem.Icon]</texture>
 				<bordertexture colordiffuse="border_alpha">colors/black.png</bordertexture>
 				<bordersize>2</bordersize>
 				<aspectratio>keep</aspectratio>
 			</control>
 			<control type="group">
-				<left>350</left>
-				<top>80</top>
+				<left>{{ScaleX('350')}}</left>
+				<top>{{ScaleY('80')}}</top>
 				<control type="label">
 					<description>name label</description>
-					<left>0</left>
-					<top>0</top>
-					<width>360</width>
-					<height>70</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('0')}}</top>
+					<width>{{ScaleX('360')}}</width>
+					<height>{{ScaleY('70')}}</height>
 					<label>$LOCALIZE[31089]: [COLOR white]$INFO[Container(13).NumItems][/COLOR]</label>
 					<align>center</align>
 					<aligny>center</aligny>
 					<textcolor>button_focus</textcolor>
 				</control>
 				<control type="image">
-					<left>0</left>
-					<top>55</top>
-					<width>360</width>
-					<height>740</height>
-					<texture border="40">buttons/dialogbutton-nofo.png</texture>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('55')}}</top>
+					<width>{{ScaleX('360')}}</width>
+					<height>{{ScaleY('740')}}</height>
+					<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 				</control>
 				<control type="list" id="13">
-					<left>20</left>
-					<top>75</top>
-					<width>320</width>
-					<height>700</height>
+					<left>{{ScaleX('20')}}</left>
+					<top>{{ScaleY('75')}}</top>
+					<width>{{ScaleX('320')}}</width>
+					<height>{{ScaleY('700')}}</height>
 					<onup>13</onup>
 					<ondown>13</ondown>
 					<onleft>9000</onleft>
 					<onright>73</onright>
 					<pagecontrol>73</pagecontrol>
 					<scrolltime>200</scrolltime>
-					<itemlayout width="320" height="70">
+					<itemlayout width="{{ScaleX('320')}}" height="{{ScaleY('70')}}">
 						<control type="label">
-							<left>20</left>
-							<right>70</right>
-							<height>70</height>
+							<left>{{ScaleX('20')}}</left>
+							<right>{{ScaleX('70')}}</right>
+							<height>{{ScaleY('70')}}</height>
 							<aligny>center</aligny>
 							<font>font27</font>
 							<textcolor>grey</textcolor>
 							<label>$INFO[ListItem.Label]</label>
 						</control>
 						<control type="image">
-							<width>60</width>
-							<height>60</height>
-							<right>5</right>
-							<top>5</top>
+							<width>{{ScaleX('60')}}</width>
+							<height>{{ScaleY('60')}}</height>
+							<right>{{ScaleX('5')}}</right>
+							<top>{{ScaleY('5')}}</top>
 							<texture>$INFO[ListItem.Icon]</texture>
 							<bordertexture colordiffuse="border_alpha">colors/black.png</bordertexture>
 							<bordersize>2</bordersize>
 							<aspectratio>keep</aspectratio>
 						</control>
 					</itemlayout>
-					<focusedlayout width="320" height="70">
+					<focusedlayout width="{{ScaleX('320')}}" height="{{ScaleY('70')}}">
 						<control type="image">
-							<left>0</left>
-							<top>0</top>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<right>{{ScaleX('0')}}</right>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">lists/focus.png</texture>
 							<visible>Control.HasFocus(13)</visible>
 						</control>
 						<control type="label">
-							<left>20</left>
-							<right>70</right>
-							<height>70</height>
+							<left>{{ScaleX('20')}}</left>
+							<right>{{ScaleX('70')}}</right>
+							<height>{{ScaleY('70')}}</height>
 							<aligny>center</aligny>
 							<font>font27</font>
 							<label>$INFO[ListItem.Label]</label>
 							<scroll>true</scroll>
 						</control>
 						<control type="image">
-							<width>60</width>
-							<height>60</height>
-							<right>5</right>
-							<top>5</top>
+							<width>{{ScaleX('60')}}</width>
+							<height>{{ScaleY('60')}}</height>
+							<right>{{ScaleX('5')}}</right>
+							<top>{{ScaleY('5')}}</top>
 							<texture>$INFO[ListItem.Icon]</texture>
 							<bordertexture colordiffuse="border_alpha">colors/black.png</bordertexture>
 							<bordersize>2</bordersize>
@@ -174,10 +174,10 @@
 					</focusedlayout>
 				</control>
 				<control type="scrollbar" id="73">
-					<left>340</left>
-					<top>75</top>
-					<width>12</width>
-					<height>700</height>
+					<left>{{ScaleX('340')}}</left>
+					<top>{{ScaleY('75')}}</top>
+					<width>{{ScaleX('12')}}</width>
+					<height>{{ScaleY('700')}}</height>
 					<onleft>13</onleft>
 					<onright>11</onright>
 					<ondown>73</ondown>
@@ -187,8 +187,8 @@
 			</control>
 			<control type="group">
 				<description>Channels list</description>
-				<left>700</left>
-				<top>80</top>
+				<left>{{ScaleX('700')}}</left>
+				<top>{{ScaleY('80')}}</top>
 				<include content="ChannelManagerList">
 					<param name="header_id" value="21" />
 					<param name="list_id" value="11" />
@@ -199,8 +199,8 @@
 			</control>
 			<control type="group">
 				<description>Grouped Channels list</description>
-				<left>1200</left>
-				<top>80</top>
+				<left>{{ScaleX('1200')}}</left>
+				<top>{{ScaleY('80')}}</top>
 				<include content="ChannelManagerList">
 					<param name="header_id" value="22" />
 					<param name="list_id" value="12" />
