--- a/templates/DialogPVRInfo.xml
+++ b/templates/DialogPVRInfo.xml
@@ -13,27 +13,27 @@
 		</control>
 		<control type="group">
 			<centertop>50%</centertop>
-			<height>1080</height>
+			<height>{{ScaleY('1080')}}</height>
 			<centerleft>50%</centerleft>
-			<width>1920</width>
+			<width>{{ScaleX('1920')}}</width>
 			<control type="image">
 				<include>OpenClose_Left</include>
-				<left>114</left>
-				<top>236</top>
-				<width>461</width>
-				<height>461</height>
+				<left>{{ScaleX('114')}}</left>
+				<top>{{ScaleY('236')}}</top>
+				<width>{{ScaleX('461')}}</width>
+				<height>{{ScaleY('461')}}</height>
 				<aspectratio>keep</aspectratio>
 				<texture fallback="DefaultTVShows.png">$INFO[ListItem.Icon]</texture>
 			</control>
 			<control type="group">
-				<top>230</top>
-				<left>50</left>
+				<top>{{ScaleY('230')}}</top>
+				<left>{{ScaleX('50')}}</left>
 				<include>OpenClose_Right</include>
 				<control type="button" id="61">
-					<left>600</left>
-					<top>-18</top>
-					<width>1170</width>
-					<height>509</height>
+					<left>{{ScaleX('600')}}</left>
+					<top>{{ScaleY('-18')}}</top>
+					<width>{{ScaleX('1170')}}</width>
+					<height>{{ScaleY('509')}}</height>
 					<font></font>
 					<onleft>61</onleft>
 					<onright>61</onright>
@@ -44,19 +44,19 @@
 					<onclick>ActivateWindow(1102)</onclick>
 				</control>
 				<control type="textbox" id="400">
-					<left>660</left>
-					<top>20</top>
-					<width>1050</width>
-					<height>425</height>
+					<left>{{ScaleX('660')}}</left>
+					<top>{{ScaleY('20')}}</top>
+					<width>{{ScaleX('1050')}}</width>
+					<height>{{ScaleY('425')}}</height>
 					<align>justify</align>
 					<label>$INFO[ListItem.ChannelName,[B],[/B][CR]]$INFO[ListItem.Date,[COLOR grey]$LOCALIZE[552]:[/COLOR] ,[CR]]$INFO[ListItem.Duration,[COLOR grey]$LOCALIZE[180]:[/COLOR] ,[CR]]$VAR[RecordingSizeLabel]$VAR[PremieredLabel]$INFO[ListItem.Rating,[COLOR grey]$LOCALIZE[563]:[/COLOR] ,[CR]]$VAR[ExpirationDateTimeLabel]$INFO[ListItem.Genre,[COLOR grey]$LOCALIZE[515]:[/COLOR] ,[CR]]$INFO[ListItem.Writer,[COLOR grey]$LOCALIZE[20417]:[/COLOR] ,[CR]]$INFO[ListItem.Director,[COLOR grey]$LOCALIZE[20339]:[/COLOR] ,[CR]]$INFO[ListItem.Cast,[COLOR grey]$LOCALIZE[206]:[/COLOR] ,[CR]][CR]$INFO[ListItem.Plot]</label>
 					<autoscroll time="3000" delay="4000" repeat="5000">Skin.HasSetting(AutoScroll)</autoscroll>
 				</control>
 				<control type="grouplist" id="9000">
-					<left>150</left>
-					<top>600</top>
-					<width>1520</width>
-					<height>160</height>
+					<left>{{ScaleX('150')}}</left>
+					<top>{{ScaleY('600')}}</top>
+					<width>{{ScaleX('1520')}}</width>
+					<height>{{ScaleY('160')}}</height>
 					<itemgap>10</itemgap>
 					<align>center</align>
 					<orientation>horizontal</orientation>
