--- a/templates/DialogSettings.xml
+++ b/templates/DialogSettings.xml
@@ -4,9 +4,9 @@
 	<include>Animation_DialogPopupOpenClose</include>
 	<controls>
 		<control type="group">
-			<top>105</top>
+			<top>{{ScaleY('105')}}</top>
 			<centerleft>50%</centerleft>
-			<width>1520</width>
+			<width>{{ScaleX('1520')}}</width>
 			<include>Animation_DialogPopupVisible</include>
 			<visible>!Window.IsVisible(sliderdialog)</visible>
 			<include content="DialogBackgroundCommons">
@@ -16,18 +16,18 @@
 				<param name="header_id" value="2" />
 			</include>
 			<control type="image">
-				<left>10</left>
-				<top>80</top>
-				<width>1200</width>
-				<height>790</height>
-				<texture border="40">buttons/dialogbutton-nofo.png</texture>
+				<left>{{ScaleX('10')}}</left>
+				<top>{{ScaleY('80')}}</top>
+				<width>{{ScaleX('1200')}}</width>
+				<height>{{ScaleY('790')}}</height>
+				<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 			</control>
 			<control type="grouplist" id="5">
 				<description>control area</description>
-				<left>29</left>
-				<top>100</top>
-				<width>1160</width>
-				<height>750</height>
+				<left>{{ScaleX('29')}}</left>
+				<top>{{ScaleY('100')}}</top>
+				<width>{{ScaleX('1160')}}</width>
+				<height>{{ScaleY('750')}}</height>
 				<pagecontrol>60</pagecontrol>
 				<onleft>9000</onleft>
 				<onright>60</onright>
@@ -48,7 +48,7 @@
 			</control>
 			<control type="image" id="11">
 				<description>separator image</description>
-				<height>3</height>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="AAAAAAAA" border="3">dialogs/separator-grey.png</texture>
 			</control>
 			<control type="edit" id="12">
@@ -64,11 +64,11 @@
 				<include>DefaultSettingLabel</include>
 			</control>
 			<control type="grouplist" id="9000">
-				<left>1210</left>
-				<top>92</top>
+				<left>{{ScaleX('1210')}}</left>
+				<top>{{ScaleY('92')}}</top>
 				<orientation>vertical</orientation>
-				<width>300</width>
-				<height>250</height>
+				<width>{{ScaleX('300')}}</width>
+				<height>{{ScaleY('250')}}</height>
 				<itemgap>-10</itemgap>
 				<onleft>5</onleft>
 				<onright>5</onright>
@@ -86,10 +86,10 @@
 				</include>
 			</control>
 			<control type="scrollbar" id="60">
-				<left>1189</left>
-				<top>100</top>
-				<width>12</width>
-				<height>750</height>
+				<left>{{ScaleX('1189')}}</left>
+				<top>{{ScaleY('100')}}</top>
+				<width>{{ScaleX('12')}}</width>
+				<height>{{ScaleY('750')}}</height>
 				<orientation>vertical</orientation>
 				<onleft>5</onleft>
 				<onright>9000</onright>
