--- a/templates/DialogTextViewer.xml
+++ b/templates/DialogTextViewer.xml
@@ -4,9 +4,9 @@
 	<include>Animation_DialogPopupOpenClose</include>
 	<controls>
 		<control type="group">
-			<left>13%</left>
+			<left>{{ScaleX('13%')}}</left>
 			<centertop>50%</centertop>
-			<height>770</height>
+			<height>{{ScaleY('770')}}</height>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="84%" />
 				<param name="height" value="770" />
@@ -14,10 +14,10 @@
 				<param name="header_id" value="1" />
 			</include>
 			<control type="textbox" id="5">
-				<left>1%</left>
-				<top>85</top>
-				<width>82%</width>
-				<height>647</height>
+				<left>{{ScaleX('1%')}}</left>
+				<top>{{ScaleY('85')}}</top>
+				<width>{{ScaleX('82%')}}</width>
+				<height>{{ScaleY('647')}}</height>
 				<shadowcolor>black</shadowcolor>
 				<pagecontrol>3000</pagecontrol>
 				<font>font14</font>
@@ -37,9 +37,9 @@
 		</control>
 		<control type="button">
 			<centerleft>50%</centerleft>
-			<top>113</top>
-			<width>48</width>
-			<height>20</height>
+			<top>{{ScaleY('113')}}</top>
+			<width>{{ScaleX('48')}}</width>
+			<height>{{ScaleY('20')}}</height>
 			<texturefocus colordiffuse="button_focus" flipy="true">overlays/arrowdown.png</texturefocus>
 			<texturenofocus colordiffuse="button_focus" flipy="true">overlays/arrowdown.png</texturenofocus>
 			<onclick>SetFocus(3000)</onclick>
@@ -47,19 +47,19 @@
 		</control>
 		<control type="button">
 			<centerleft>50%</centerleft>
-			<top>940</top>
-			<width>48</width>
-			<height>20</height>
+			<top>{{ScaleY('940')}}</top>
+			<width>{{ScaleX('48')}}</width>
+			<height>{{ScaleY('20')}}</height>
 			<onclick>SetFocus(3000)</onclick>
 			<onclick>Down</onclick>
 			<texturefocus colordiffuse="button_focus">overlays/arrowdown.png</texturefocus>
 			<texturenofocus colordiffuse="button_focus">overlays/arrowdown.png</texturenofocus>
 		</control>
 		<control type="label">
-			<left>1310</left>
-			<top>880</top>
-			<width>330</width>
-			<height>35</height>
+			<left>{{ScaleX('1310')}}</left>
+			<top>{{ScaleY('880')}}</top>
+			<width>{{ScaleX('330')}}</width>
+			<height>{{ScaleY('35')}}</height>
 			<font>font12</font>
 			<textcolor>grey</textcolor>
 			<align>right</align>
