--- a/templates/DialogVolumeBar.xml
+++ b/templates/DialogVolumeBar.xml
@@ -5,8 +5,8 @@
 		<control type="group">
 			<visible>!Window.IsActive(startup) + !Window.IsActive(GameVolume)</visible>
 			<centerleft>50%</centerleft>
-			<width>112</width>
-			<top>0</top>
+			<width>{{ScaleX('112')}}</width>
+			<top>{{ScaleY('0')}}</top>
 			<animation effect="fade" start="100" end="0" time="200" delay="1000" condition="Player.Muted">Conditional</animation>
 			<animation effect="fade" start="0" end="100" time="150">WindowOpen</animation>
 			<animation effect="fade" start="100" end="0" time="150">WindowClose</animation>
@@ -15,34 +15,34 @@
 				<info>Player.Volume</info>
 			</control>
 			<control type="image">
-				<left>12</left>
-				<top>5</top>
-				<width>88</width>
-				<height>88</height>
+				<left>{{ScaleX('12')}}</left>
+				<top>{{ScaleY('5')}}</top>
+				<width>{{ScaleX('88')}}</width>
+				<height>{{ScaleY('88')}}</height>
 				<texture>osd/buffer-bg.png</texture>
 				<visible>Window.IsActive(fullscreenvideo) | Window.IsActive(FullscreenGame) | Window.IsActive(slideshow)</visible>
 			</control>
 			<control type="image">
-				<left>22</left>
-				<top>15</top>
-				<width>68</width>
-				<height>68</height>
+				<left>{{ScaleX('22')}}</left>
+				<top>{{ScaleY('15')}}</top>
+				<width>{{ScaleX('68')}}</width>
+				<height>{{ScaleY('68')}}</height>
 				<texture>dialogs/extendedprogress/loading-back.png</texture>
 				<animation effect="fade" start="100" end="0" delay="300" time="500" tween="sine" condition="Player.Muted">Conditional</animation>
 			</control>
 			<control type="image">
-				<left>22</left>
-				<top>15</top>
-				<width>68</width>
-				<height>68</height>
+				<left>{{ScaleX('22')}}</left>
+				<top>{{ScaleY('15')}}</top>
+				<width>{{ScaleX('68')}}</width>
+				<height>{{ScaleY('68')}}</height>
 				<texture>$INFO[Control.GetLabel(29999),dialogs/volume/progress/p,.png]</texture>
 				<animation effect="fade" start="100" end="0" delay="300" time="500" tween="sine" condition="Player.Muted">Conditional</animation>
 			</control>
 			<control type="image">
-				<left>36</left>
-				<top>29</top>
-				<width>40</width>
-				<height>40</height>
+				<left>{{ScaleX('36')}}</left>
+				<top>{{ScaleY('29')}}</top>
+				<width>{{ScaleX('40')}}</width>
+				<height>{{ScaleY('40')}}</height>
 				<texture colordiffuse="white">$VAR[VolumeIconVar]</texture>
 			</control>
 		</control>
