--- a/templates/GameOSD.xml
+++ b/templates/GameOSD.xml
@@ -10,9 +10,9 @@
 				<visible>System.GetBool(gamesgeneral.showosdhelp)</visible>
 				<defaultcontrol always="true">1103</defaultcontrol>
 				<centerleft>50%</centerleft>
-				<height>1040</height>
+				<height>{{ScaleY('1040')}}</height>
 				<centertop>50%</centertop>
-				<width>700</width>
+				<width>{{ScaleX('700')}}</width>
 				<animation effect="fade" time="200">VisibleChange</animation>
 				<include content="DialogBackgroundCommons">
 					<param name="width" value="700" />
@@ -21,37 +21,37 @@
 					<param name="header_id" value="2" />
 				</include>
 				<control type="group" id="1000">
-					<top>80</top>
+					<top>{{ScaleY('80')}}</top>
 					<control type="group" id="1100">
 						<control type="textbox" id="1101">
 							<description>Help text</description>
-							<top>30</top>
-							<left>30</left>
-							<right>30</right>
-							<height>130</height>
+							<top>{{ScaleY('30')}}</top>
+							<left>{{ScaleX('30')}}</left>
+							<right>{{ScaleX('30')}}</right>
+							<height>{{ScaleY('130')}}</height>
 							<font>font13</font>
 						</control>
 						<control type="gamecontroller" id="1102">
-							<top>160</top>
-							<left>30</left>
-							<width>640</width>
-							<height>640</height>
+							<top>{{ScaleY('160')}}</top>
+							<left>{{ScaleX('30')}}</left>
+							<width>{{ScaleX('640')}}</width>
+							<height>{{ScaleY('640')}}</height>
 						</control>
 						<control type="textbox">
 							<description>Additional help text. This will be removed in future versions.</description>
 							<bottom>30</bottom>
-							<left>30</left>
-							<right>30</right>
-							<height>130</height>
+							<left>{{ScaleX('30')}}</left>
+							<right>{{ScaleX('30')}}</right>
+							<height>{{ScaleY('130')}}</height>
 							<font>font13</font>
 							<label>$LOCALIZE[35236]</label>
 						</control>
 						<control type="button">
 							<description>Button to close the dialog</description>
-							<top>0</top>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<left>0</left>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<right>{{ScaleX('0')}}</right>
 							<texturefocus />
 							<texturenofocus />
 							<onclick>Action(close)</onclick>
@@ -62,9 +62,9 @@
 			<control type="group" id="20">
 				<visible>!System.GetBool(gamesgeneral.showosdhelp)</visible>
 				<centerleft>50%</centerleft>
-				<height>480</height>
+				<height>{{ScaleY('480')}}</height>
 				<centertop>50%</centertop>
-				<width>700</width>
+				<width>{{ScaleX('700')}}</width>
 				<animation effect="fade" time="200">VisibleChange</animation>
 				<include content="DialogBackgroundCommons">
 					<param name="width" value="700" />
@@ -73,32 +73,32 @@
 					<param name="header_id" value="3" />
 				</include>
 				<control type="group" id="2000">
-					<top>80</top>
+					<top>{{ScaleY('80')}}</top>
 					<control type="list" id="1103">
 						<defaultcontrol always="true">2101</defaultcontrol>
-						<height>480</height>
+						<height>{{ScaleY('480')}}</height>
 						<orientation>vertical</orientation>
-						<itemlayout condition="!Control.IsVisible(2200)" width="700" height="80">
+						<itemlayout condition="!Control.IsVisible(2200)" width="{{ScaleX('700')}}" height="{{ScaleY('80')}}">
 							<control type="image">
-								<left>8</left>
-								<top>8</top>
-								<width>64</width>
-								<height>64</height>
+								<left>{{ScaleX('8')}}</left>
+								<top>{{ScaleY('8')}}</top>
+								<width>{{ScaleX('64')}}</width>
+								<height>{{ScaleY('64')}}</height>
 								<info>ListItem.Icon</info>
 							</control>
 							<control type="label">
-								<left>80</left>
-								<width>600</width>
-								<height>80</height>
+								<left>{{ScaleX('80')}}</left>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label</info>
 								<font>font13</font>
 								<align>left</align>
 								<aligny>center</aligny>
 							</control>
 							<control type="label">
-								<right>20</right>
-								<width>600</width>
-								<height>80</height>
+								<right>{{ScaleX('20')}}</right>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label2</info>
 								<font>font13</font>
 								<align>right</align>
@@ -106,27 +106,27 @@
 								<textcolor>grey</textcolor>
 							</control>
 						</itemlayout>
-						<itemlayout condition="Control.IsVisible(2200)" width="688" height="80">
+						<itemlayout condition="Control.IsVisible(2200)" width="{{ScaleX('688')}}" height="{{ScaleY('80')}}">
 							<control type="image">
-								<left>8</left>
-								<top>8</top>
-								<width>64</width>
-								<height>64</height>
+								<left>{{ScaleX('8')}}</left>
+								<top>{{ScaleY('8')}}</top>
+								<width>{{ScaleX('64')}}</width>
+								<height>{{ScaleY('64')}}</height>
 								<info>ListItem.Icon</info>
 							</control>
 							<control type="label">
-								<left>80</left>
-								<width>600</width>
-								<height>80</height>
+								<left>{{ScaleX('80')}}</left>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label</info>
 								<font>font13</font>
 								<align>left</align>
 								<aligny>center</aligny>
 							</control>
 							<control type="label">
-								<right>20</right>
-								<width>600</width>
-								<height>80</height>
+								<right>{{ScaleX('20')}}</right>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label2</info>
 								<font>font13</font>
 								<align>right</align>
@@ -134,31 +134,31 @@
 								<textcolor>grey</textcolor>
 							</control>
 						</itemlayout>
-						<focusedlayout condition="!Control.IsVisible(2200)" width="700" height="80">
+						<focusedlayout condition="!Control.IsVisible(2200)" width="{{ScaleX('700')}}" height="{{ScaleY('80')}}">
 							<control type="image">
 								<texture colordiffuse="button_focus">lists/focus.png</texture>
 								<visible>Control.HasFocus(1103)</visible>
 							</control>
 							<control type="image">
-								<left>8</left>
-								<top>8</top>
-								<width>64</width>
-								<height>64</height>
+								<left>{{ScaleX('8')}}</left>
+								<top>{{ScaleY('8')}}</top>
+								<width>{{ScaleX('64')}}</width>
+								<height>{{ScaleY('64')}}</height>
 								<info>ListItem.Icon</info>
 							</control>
 							<control type="label">
-								<left>80</left>
-								<width>600</width>
-								<height>80</height>
+								<left>{{ScaleX('80')}}</left>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label</info>
 								<font>font13</font>
 								<align>left</align>
 								<aligny>center</aligny>
 							</control>
 							<control type="label">
-								<right>20</right>
-								<width>600</width>
-								<height>80</height>
+								<right>{{ScaleX('20')}}</right>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label2</info>
 								<font>font13</font>
 								<align>right</align>
@@ -166,31 +166,31 @@
 								<textcolor>grey</textcolor>
 							</control>
 						</focusedlayout>
-						<focusedlayout condition="Control.IsVisible(2200)" width="688" height="80">
+						<focusedlayout condition="Control.IsVisible(2200)" width="{{ScaleX('688')}}" height="{{ScaleY('80')}}">
 							<control type="image">
 								<texture colordiffuse="button_focus">lists/focus.png</texture>
 								<visible>Control.HasFocus(1103)</visible>
 							</control>
 							<control type="image">
-								<left>8</left>
-								<top>8</top>
-								<width>64</width>
-								<height>64</height>
+								<left>{{ScaleX('8')}}</left>
+								<top>{{ScaleY('8')}}</top>
+								<width>{{ScaleX('64')}}</width>
+								<height>{{ScaleY('64')}}</height>
 								<info>ListItem.Icon</info>
 							</control>
 							<control type="label">
-								<left>80</left>
-								<width>600</width>
-								<height>80</height>
+								<left>{{ScaleX('80')}}</left>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label</info>
 								<font>font13</font>
 								<align>left</align>
 								<aligny>center</aligny>
 							</control>
 							<control type="label">
-								<right>20</right>
-								<width>600</width>
-								<height>80</height>
+								<right>{{ScaleX('20')}}</right>
+								<width>{{ScaleX('600')}}</width>
+								<height>{{ScaleY('80')}}</height>
 								<info>ListItem.Label2</info>
 								<font>font13</font>
 								<align>right</align>
@@ -237,9 +237,9 @@
 						<pagecontrol>2200</pagecontrol>
 					</control>
 					<control type="scrollbar" id="2200">
-						<top>-10</top>
-						<right>0</right>
-						<width>12</width>
+						<top>{{ScaleY('-10')}}</top>
+						<right>{{ScaleX('0')}}</right>
+						<width>{{ScaleX('12')}}</width>
 						<orientation>vertical</orientation>
 					</control>
 				</control>
