--- a/templates/Includes_Buttons.xml
+++ b/templates/Includes_Buttons.xml
@@ -8,14 +8,14 @@
 		<textureradioondisabled colordiffuse="disabled">$PARAM[texture]</textureradioondisabled>
 		<textureradiooffdisabled colordiffuse="disabled">$PARAM[texture]</textureradiooffdisabled>
 		<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
-		<width>76</width>
+		<width>{{ScaleX('76')}}</width>
 		<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back">Focus</animation>
-		<height>76</height>
+		<height>{{ScaleY('76')}}</height>
 		<radiowidth>74</radiowidth>
 		<radioheight>74</radioheight>
 		<font></font>
 		<texturenofocus />
-		<radioposx>1</radioposx>
+		<radioposx>{{ScaleX('1')}}</radioposx>
 		<radioposy>0</radioposy>
 	</include>
 	<include name="InfoDialogMetadata">
@@ -25,9 +25,9 @@
 		<param name="altclick">noop</param>
 		<definition>
 			<control type="togglebutton" id="$PARAM[control_id]">
-				<width>472</width>
-				<height>49</height>
-				<textoffsetx>16</textoffsetx>
+				<width>{{ScaleX('472')}}</width>
+				<height>{{ScaleY('49')}}</height>
+				<textoffsetx>{{ScaleX('16')}}</textoffsetx>
 				<aligny>center</aligny>
 				<font>font12</font>
 				<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
@@ -50,7 +50,7 @@
 		<param name="textoffsetx">40</param>
 		<definition>
 			<textoffsetx>$PARAM[textoffsetx]</textoffsetx>
-			<top>0</top>
+			<top>{{ScaleY('0')}}</top>
 			<height>$PARAM[height]</height>
 			<aligny>center</aligny>
 			<invalidcolor>invalid</invalidcolor>
@@ -64,7 +64,7 @@
 		<param name="textoffsetx">40</param>
 		<definition>
 			<textoffsetx>$PARAM[textoffsetx]</textoffsetx>
-			<top>0</top>
+			<top>{{ScaleY('0')}}</top>
 			<height>$PARAM[height]</height>
 			<aligny>center</aligny>
 			<invalidcolor>invalid</invalidcolor>
@@ -74,9 +74,9 @@
 		</definition>
 	</include>
 	<include name="DefaultSettingLabel">
-		<left>0</left>
-		<top>0</top>
-		<height>75</height>
+		<left>{{ScaleX('0')}}</left>
+		<top>{{ScaleY('0')}}</top>
+		<height>{{ScaleY('75')}}</height>
 		<label></label>
 		<align>center</align>
 		<aligny>center</aligny>
@@ -84,19 +84,19 @@
 		<textcolor>grey</textcolor>
 	</include>
 	<include name="SettingsItemCommon">
-		<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
-		<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-		<height>100</height>
+		<texturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texturenofocus>
+		<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+		<height>{{ScaleY('100')}}</height>
 		<aligny>center</aligny>
-		<textoffsetx>40</textoffsetx>
-		<alttexturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</alttexturefocus>
-		<alttexturenofocus border="40">buttons/dialogbutton-nofo.png</alttexturenofocus>
+		<textoffsetx>{{ScaleX('40')}}</textoffsetx>
+		<alttexturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</alttexturefocus>
+		<alttexturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</alttexturenofocus>
 	</include>
 	<include name="SettingsLabelCommon">
-		<height>50</height>
+		<height>{{ScaleY('50')}}</height>
 		<font>font12</font>
-		<textoffsetx>30</textoffsetx>
-		<textoffsety>10</textoffsety>
+		<textoffsetx>{{ScaleX('30')}}</textoffsetx>
+		<textoffsety>{{ScaleY('10')}}</textoffsety>
 		<textcolor>button_focus</textcolor>
 	</include>
 	<include name="DefaultDialogButton">
@@ -112,20 +112,20 @@
 				<height>$PARAM[height]</height>
 				<label>$PARAM[label]</label>
 				<font>$PARAM[font]</font>
-				<textoffsetx>20</textoffsetx>
+				<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 				<onclick>$PARAM[onclick]</onclick>
 				<wrapmultiline>$PARAM[wrapmultiline]</wrapmultiline>
 				<align>center</align>
-				<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-				<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+				<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+				<texturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texturenofocus>
 				<visible>$PARAM[visible]</visible>
 			</control>
 		</definition>
 	</include>
 	<include name="KeyboardButton">
-		<width>120</width>
-		<height>120</height>
-		<textoffsety>27</textoffsety>
+		<width>{{ScaleX('120')}}</width>
+		<height>{{ScaleY('120')}}</height>
+		<textoffsety>{{ScaleY('27')}}</textoffsety>
 		<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 		<texturenofocus />
 		<align>center</align>
@@ -137,13 +137,13 @@
 		<definition>
 			<control type="button" id="$PARAM[control_id]">
 				<width>$PARAM[width]</width>
-				<height>110</height>
+				<height>{{ScaleY('110')}}</height>
 				<align>left</align>
 				<aligny>top</aligny>
 				<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 				<texturenofocus />
-				<textoffsetx>40</textoffsetx>
-				<textoffsety>35</textoffsety>
+				<textoffsetx>{{ScaleX('40')}}</textoffsetx>
+				<textoffsety>{{ScaleY('35')}}</textoffsety>
 				<label>$PARAM[label]</label>
 				<onclick>$PARAM[onclick]</onclick>
 				<selectedcolor>white</selectedcolor>
@@ -155,7 +155,7 @@
 		<param name="visible">true</param>
 		<definition>
 			<control type="radiobutton" id="$PARAM[control_id]">
-				<width>120</width>
+				<width>{{ScaleX('120')}}</width>
 				<height>$PARAM[height]</height>
 				<align>center</align>
 				<aligny>center</aligny>
@@ -165,7 +165,7 @@
 				<label>$PARAM[label]</label>
 				<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 				<texturenofocus />
-				<radioposx>40</radioposx>
+				<radioposx>{{ScaleX('40')}}</radioposx>
 				<radioposy>0</radioposy>
 				<radiowidth>40</radiowidth>
 				<radioheight>40</radioheight>
@@ -181,7 +181,7 @@
 		<param name="height">120</param>
 		<definition>
 			<control type="radiobutton" id="$PARAM[control_id]">
-				<width>120</width>
+				<width>{{ScaleX('120')}}</width>
 				<height>$PARAM[height]</height>
 				<align>center</align>
 				<aligny>center</aligny>
@@ -190,7 +190,7 @@
 				<label>$PARAM[label]</label>
 				<texturefocus colordiffuse="button_focus">buttons/roundbutton-fo.png</texturefocus>
 				<texturenofocus />
-				<radioposx>40</radioposx>
+				<radioposx>{{ScaleX('40')}}</radioposx>
 				<radioposy>0</radioposy>
 				<radiowidth>40</radiowidth>
 				<radioheight>40</radioheight>
@@ -206,14 +206,14 @@
 		<param name="width">264</param>
 		<definition>
 			<width>$PARAM[width]</width>
-			<height>142</height>
+			<height>{{ScaleY('142')}}</height>
 			<align>center</align>
 			<aligny>top</aligny>
-			<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-			<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
-			<textoffsetx>22</textoffsetx>
-			<textoffsety>78</textoffsety>
-			<radioposx>108</radioposx>
+			<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+			<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
+			<textoffsetx>{{ScaleX('22')}}</textoffsetx>
+			<textoffsety>{{ScaleY('78')}}</textoffsety>
+			<radioposx>{{ScaleX('108')}}</radioposx>
 			<radioposy>13</radioposy>
 			<radiowidth>48</radiowidth>
 			<font>font12</font>
@@ -233,14 +233,14 @@
 		<definition>
 			<control type="radiobutton" id="$PARAM[id]">
 				<width>$PARAM[width]</width>
-				<height>142</height>
+				<height>{{ScaleY('142')}}</height>
 				<align>center</align>
 				<aligny>top</aligny>
-				<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-				<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
-				<textoffsetx>22</textoffsetx>
-				<textoffsety>78</textoffsety>
-				<radioposx>108</radioposx>
+				<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+				<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
+				<textoffsetx>{{ScaleX('22')}}</textoffsetx>
+				<textoffsety>{{ScaleY('78')}}</textoffsety>
+				<radioposx>{{ScaleX('108')}}</radioposx>
 				<radioposy>16</radioposy>
 				<radiowidth>48</radiowidth>
 				<font>font12</font>
@@ -264,14 +264,14 @@
 		<definition>
 			<control type="radiobutton" id="$PARAM[id]">
 				<width>$PARAM[width]</width>
-				<height>142</height>
+				<height>{{ScaleY('142')}}</height>
 				<align>center</align>
 				<aligny>top</aligny>
-				<texturefocus border="21" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
-				<texturenofocus border="21">buttons/button-nofo.png</texturenofocus>
-				<textoffsetx>35</textoffsetx>
-				<textoffsety>78</textoffsety>
-				<radioposx>108</radioposx>
+				<texturefocus border="{{ScaleBorder('21')}}" colordiffuse="button_focus">buttons/button-fo.png</texturefocus>
+				<texturenofocus border="{{ScaleBorder('21')}}">buttons/button-nofo.png</texturenofocus>
+				<textoffsetx>{{ScaleX('35')}}</textoffsetx>
+				<textoffsety>{{ScaleY('78')}}</textoffsety>
+				<radioposx>{{ScaleX('108')}}</radioposx>
 				<radioposy>16</radioposy>
 				<radiowidth>48</radiowidth>
 				<font>font12</font>
@@ -290,56 +290,56 @@
 		</definition>
 	</include>
 	<include name="ButtonMenuList">
-		<left>0</left>
-		<top>80</top>
-		<width>600</width>
-		<height>700</height>
+		<left>{{ScaleX('0')}}</left>
+		<top>{{ScaleY('80')}}</top>
+		<width>{{ScaleX('600')}}</width>
+		<height>{{ScaleY('700')}}</height>
 		<onleft>9000</onleft>
 		<onright>9000</onright>
 		<onup>9000</onup>
 		<ondown>9000</ondown>
 		<orientation>vertical</orientation>
-		<itemlayout height="70" width="600">
+		<itemlayout height="{{ScaleY('70')}}" width="{{ScaleX('600')}}">
 			<control type="image">
-				<left>0</left>
-				<top>0</top>
-				<width>600</width>
-				<height>70</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('70')}}</height>
 				<texture colordiffuse="dialog_tint">colors/white.png</texture>
 			</control>
 			<control type="label">
-				<left>0</left>
-				<textoffsetx>20</textoffsetx>
-				<top>0</top>
-				<width>600</width>
-				<height>70</height>
+				<left>{{ScaleX('0')}}</left>
+				<textoffsetx>{{ScaleX('20')}}</textoffsetx>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('70')}}</height>
 				<align>center</align>
 				<aligny>center</aligny>
 				<textcolor>grey</textcolor>
 				<label>$INFO[ListItem.Label]</label>
 			</control>
 		</itemlayout>
-		<focusedlayout height="70" width="600">
+		<focusedlayout height="{{ScaleY('70')}}" width="{{ScaleX('600')}}">
 			<control type="image">
-				<left>0</left>
-				<top>0</top>
-				<width>600</width>
-				<height>70</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('70')}}</height>
 				<texture colordiffuse="dialog_tint">colors/white.png</texture>
 			</control>
 			<control type="image">
-				<left>0</left>
-				<top>0</top>
-				<width>600</width>
-				<height>70</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('70')}}</height>
 				<texture colordiffuse="button_focus">lists/focus.png</texture>
 			</control>
 			<control type="label">
-				<left>0</left>
-				<textoffsetx>20</textoffsetx>
-				<top>0</top>
-				<width>600</width>
-				<height>70</height>
+				<left>{{ScaleX('0')}}</left>
+				<textoffsetx>{{ScaleX('20')}}</textoffsetx>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('70')}}</height>
 				<align>center</align>
 				<aligny>center</aligny>
 				<label>$INFO[ListItem.Label]</label>
