--- a/templates/LoginScreen.xml
+++ b/templates/LoginScreen.xml
@@ -7,23 +7,23 @@
 			<include>Animation_TopSlide</include>
 			<control type="group">
 				<centerleft>50%</centerleft>
-				<top>160</top>
-				<width>250</width>
-				<height>112</height>
+				<top>{{ScaleY('160')}}</top>
+				<width>{{ScaleX('250')}}</width>
+				<height>{{ScaleY('112')}}</height>
 				<control type="image">
-					<left>0</left>
-					<top>0</top>
-					<width>250</width>
-					<height>112</height>
+					<left>{{ScaleX('0')}}</left>
+					<top>{{ScaleY('0')}}</top>
+					<width>{{ScaleX('250')}}</width>
+					<height>{{ScaleY('112')}}</height>
 					<aspectratio aligny="center" align="center">keep</aspectratio>
 					<texture>special://xbmc/media/vendor_logo.png</texture>
 				</control>
 			</control>
 			<control type="textbox">
 				<centerleft>50%</centerleft>
-				<top>220</top>
-				<width>750</width>
-				<height>300</height>
+				<top>{{ScaleY('220')}}</top>
+				<width>{{ScaleX('750')}}</width>
+				<height>{{ScaleY('300')}}</height>
 				<align>center</align>
 				<aligny>center</aligny>
 				<textcolor>99FFFFFF</textcolor>
@@ -34,10 +34,10 @@
 		<control type="group">
 			<include>Animation_BottomSlide</include>
 			<control type="fixedlist" id="52">
-				<left>0</left>
-				<right>0</right>
-				<top>500</top>
-				<height>300</height>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
+				<top>{{ScaleY('500')}}</top>
+				<height>{{ScaleY('300')}}</height>
 				<onleft>52</onleft>
 				<onright>52</onright>
 				<onup>20</onup>
@@ -45,20 +45,20 @@
 				<focusposition>2</focusposition>
 				<orientation>horizontal</orientation>
 				<scrolltime tween="cubic" easing="out">500</scrolltime>
-				<itemlayout width="384" height="300">
+				<itemlayout width="{{ScaleX('384')}}" height="{{ScaleY('300')}}">
 					<control type="image">
 						<centerleft>50%</centerleft>
-						<top>20</top>
-						<height>200</height>
-						<width>200</width>
+						<top>{{ScaleY('20')}}</top>
+						<height>{{ScaleY('200')}}</height>
+						<width>{{ScaleX('200')}}</width>
 						<texture diffuse="icons/profiles/profile-diffuse.png">$INFO[ListItem.Icon]</texture>
 						<aspectratio scalediffuse="false">scale</aspectratio>
 					</control>
 					<control type="textbox">
-						<left>60</left>
-						<right>60</right>
-						<top>220</top>
-						<height>80</height>
+						<left>{{ScaleX('60')}}</left>
+						<right>{{ScaleX('60')}}</right>
+						<top>{{ScaleY('220')}}</top>
+						<height>{{ScaleY('80')}}</height>
 						<label>$INFO[ListItem.label]</label>
 						<font>font27</font>
 						<align>center</align>
@@ -66,29 +66,29 @@
 						<textcolor>99FFFFFF</textcolor>
 					</control>
 				</itemlayout>
-				<focusedlayout width="384" height="300">
+				<focusedlayout width="{{ScaleX('384')}}" height="{{ScaleY('300')}}">
 					<control type="image">
-						<left>30</left>
-						<top>-20</top>
-						<right>30</right>
+						<left>{{ScaleX('30')}}</left>
+						<top>{{ScaleY('-20')}}</top>
+						<right>{{ScaleX('30')}}</right>
 						<bottom>-20</bottom>
-						<texture border="30" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texture>
+						<texture border="{{ScaleBorder('30')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texture>
 						<visible>Control.HasFocus(52)</visible>
 						<animation reversible="false" effect="fade" start="20" end="75" time="200">Focus</animation>
 					</control>
 					<control type="image">
 						<centerleft>50%</centerleft>
-						<top>20</top>
-						<height>200</height>
-						<width>200</width>
+						<top>{{ScaleY('20')}}</top>
+						<height>{{ScaleY('200')}}</height>
+						<width>{{ScaleX('200')}}</width>
 						<texture diffuse="icons/profiles/profile-diffuse.png">$INFO[ListItem.Icon]</texture>
 						<aspectratio scalediffuse="false">scale</aspectratio>
 					</control>
 					<control type="textbox">
-						<left>60</left>
-						<right>60</right>
-						<top>220</top>
-						<height>80</height>
+						<left>{{ScaleX('60')}}</left>
+						<right>{{ScaleX('60')}}</right>
+						<top>{{ScaleY('220')}}</top>
+						<height>{{ScaleY('80')}}</height>
 						<label>[B]$INFO[ListItem.label][/B]</label>
 						<font>font27</font>
 						<align>center</align>
@@ -97,10 +97,10 @@
 				</focusedlayout>
 			</control>
 			<control type="label">
-				<left>0</left>
-				<right>0</right>
-				<top>860</top>
-				<height>45</height>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
+				<top>{{ScaleY('860')}}</top>
+				<height>{{ScaleY('45')}}</height>
 				<font>font25_narrow</font>
 				<textcolor>80FFFFFF</textcolor>
 				<align>center</align>
@@ -110,8 +110,8 @@
 			<control type="button" id="20">
 				<centerleft>50%</centerleft>
 				<bottom>20</bottom>
-				<width>500</width>
-				<height>130</height>
+				<width>{{ScaleX('500')}}</width>
+				<height>{{ScaleY('130')}}</height>
 				<label>$LOCALIZE[31072]</label>
 				<font>font12</font>
 				<align>center</align>
@@ -120,8 +120,8 @@
 				<onright>52</onright>
 				<onup>52</onup>
 				<ondown>52</ondown>
-				<texturefocus border="40" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
-				<texturenofocus border="40">buttons/dialogbutton-nofo.png</texturenofocus>
+				<texturefocus border="{{ScaleBorder('40')}}" colordiffuse="button_focus">buttons/dialogbutton-fo.png</texturefocus>
+				<texturenofocus border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texturenofocus>
 			</control>
 		</control>
 		<include>TopBar</include>
