--- a/templates/MusicOSD.xml
+++ b/templates/MusicOSD.xml
@@ -6,9 +6,9 @@
 	<controls>
 		<control type="button">
 			<description>background close area</description>
-			<left>0</left>
-			<top>0</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('0')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<bottom>180</bottom>
 			<texturefocus />
 			<texturenofocus />
@@ -18,22 +18,22 @@
 		<control type="group" id="200">
 			<include>Animation_BottomSlide</include>
 			<bottom>0</bottom>
-			<height>120</height>
+			<height>{{ScaleY('120')}}</height>
 			<include>Animation_BottomSlide</include>
 			<visible>!Window.IsActive(osdaudiosettings) + !Window.IsActive(osdvideosettings) + !Window.IsActive(playerprocessinfo)</visible>
 			<animation type="Visible" reversible="false">
 				<effect type="fade" start="0" end="100" time="300"/>
-				<effect type="slide" start="0,200" end="0,0" time="300" tween="cubic" easing="out" />
+				<effect type="slide" start="{{ScaleBorder2('0,200')}}" end="{{ScaleBorder2('0,0')}}" time="300" tween="cubic" easing="out" />
 			</animation>
 			<animation type="Hidden" reversible="false">
 				<effect type="fade" start="100" end="0" time="300"/>
-				<effect type="slide" start="0,0" end="0,200" time="300" tween="cubic" easing="out" />
+				<effect type="slide" start="{{ScaleBorder2('0,0')}}" end="{{ScaleBorder2('0,200')}}" time="300" tween="cubic" easing="out" />
 			</animation>
 			<control type="grouplist" id="201">
-				<left>20</left>
-				<top>30</top>
-				<width>100%</width>
-				<height>135</height>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('30')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('135')}}</height>
 				<itemgap>10</itemgap>
 				<scrolltime tween="sine">200</scrolltime>
 				<orientation>horizontal</orientation>
@@ -56,14 +56,14 @@
 					<visible>[Player.SeekEnabled + !MusicPlayer.Content(livetv)] + !Player.Paused</visible>
 				</control>
 				<control type="group" id="698">
-					<width>76</width>
-					<height>76</height>
+					<width>{{ScaleX('76')}}</width>
+					<height>{{ScaleY('76')}}</height>
 					<visible>Player.PauseEnabled</visible>
 					<control type="button" id="602">
-						<left>0</left>
-						<top>0</top>
-						<width>74</width>
-						<height>74</height>
+						<left>{{ScaleX('0')}}</left>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('74')}}</width>
+						<height>{{ScaleY('74')}}</height>
 						<label></label>
 						<font></font>
 						<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
@@ -75,10 +75,10 @@
 						<onclick>PlayerControl(Play)</onclick>
 					</control>
 					<control type="image">
-						<left>0</left>
-						<top>0</top>
-						<width>74</width>
-						<height>74</height>
+						<left>{{ScaleX('0')}}</left>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('74')}}</width>
+						<height>{{ScaleY('74')}}</height>
 						<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back" condition="Control.HasFocus(602)">Conditional</animation>
 						<texture colordiffuse="white">$VAR[PlayerControlsPlayImageVar]</texture>
 					</control>
@@ -109,14 +109,14 @@
 					<textureradioofffocus colordiffuse="white">osd/fullscreen/buttons/record.png</textureradioofffocus>
 					<textureradiooffnofocus>osd/fullscreen/buttons/record.png</textureradiooffnofocus>
 					<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
-					<width>76</width>
+					<width>{{ScaleX('76')}}</width>
 					<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back">Focus</animation>
-					<height>76</height>
+					<height>{{ScaleY('76')}}</height>
 					<radiowidth>74</radiowidth>
 					<radioheight>74</radioheight>
 					<font></font>
 					<texturenofocus />
-					<radioposx>1</radioposx>
+					<radioposx>{{ScaleX('1')}}</radioposx>
 					<radioposy>0</radioposy>
 					<selected>!PVR.IsRecordingPlayingChannel</selected>
 					<onclick>PVR.ToggleRecordPlayingChannel</onclick>
@@ -125,10 +125,10 @@
 				</control>
 			</control>
 			<control type="grouplist" id="202">
-				<right>20</right>
-				<top>30</top>
-				<width>1850</width>
-				<height>135</height>
+				<right>{{ScaleX('20')}}</right>
+				<top>{{ScaleY('30')}}</top>
+				<width>{{ScaleX('1850')}}</width>
+				<height>{{ScaleY('135')}}</height>
 				<align>right</align>
 				<itemgap>10</itemgap>
 				<scrolltime tween="sine">200</scrolltime>
@@ -176,14 +176,14 @@
 					<onclick>SetRating</onclick>
 				</control>
 				<control type="group" id="699">
-					<width>76</width>
-					<height>76</height>
+					<width>{{ScaleX('76')}}</width>
+					<height>{{ScaleY('76')}}</height>
 					<visible>![MusicPlayer.Content(LiveTV) | MusicPartyMode.Enabled]</visible>
 					<control type="button" id="70053">
-						<left>0</left>
-						<top>0</top>
-						<width>74</width>
-						<height>74</height>
+						<left>{{ScaleX('0')}}</left>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('74')}}</width>
+						<height>{{ScaleY('74')}}</height>
 						<label></label>
 						<font></font>
 						<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
@@ -195,10 +195,10 @@
 						<onclick>PlayerControl(Repeat)</onclick>
 					</control>
 					<control type="image">
-						<left>0</left>
-						<top>0</top>
-						<width>74</width>
-						<height>74</height>
+						<left>{{ScaleX('0')}}</left>
+						<top>{{ScaleY('0')}}</top>
+						<width>{{ScaleX('74')}}</width>
+						<height>{{ScaleY('74')}}</height>
 						<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back" condition="Control.HasFocus(70053)">Conditional</animation>
 						<texture colordiffuse="white">$VAR[PlayerControlsRepeatImageVar]</texture>
 					</control>
@@ -211,14 +211,14 @@
 					<textureradioondisabled colordiffuse="disabled">osd/fullscreen/buttons/random-on.png</textureradioondisabled>
 					<textureradiooffdisabled colordiffuse="disabled">osd/fullscreen/buttons/random-off.png</textureradiooffdisabled>
 					<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
-					<width>76</width>
+					<width>{{ScaleX('76')}}</width>
 					<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back">Focus</animation>
-					<height>76</height>
+					<height>{{ScaleY('76')}}</height>
 					<radiowidth>74</radiowidth>
 					<radioheight>74</radioheight>
 					<font></font>
 					<texturenofocus />
-					<radioposx>1</radioposx>
+					<radioposx>{{ScaleX('1')}}</radioposx>
 					<radioposy>0</radioposy>
 					<selected>Playlist.IsRandom</selected>
 					<visible>![MusicPlayer.Content(LiveTV) | MusicPartyMode.Enabled]</visible>
@@ -242,27 +242,27 @@
 				</control>
 			</control>
 			<control type="label">
-				<animation effect="slide" end="0,-20" time="150" condition="MusicPlayer.Content(LiveTV)">conditional</animation>
-				<right>20</right>
-				<top>-60</top>
+				<animation effect="slide" end="{{ScaleBorder2('0,-20')}}" time="150" condition="MusicPlayer.Content(LiveTV)">conditional</animation>
+				<right>{{ScaleX('20')}}</right>
+				<top>{{ScaleY('-60')}}</top>
 				<aligny>center</aligny>
 				<align>right</align>
-				<width>1000</width>
-				<height>50</height>
+				<width>{{ScaleX('1000')}}</width>
+				<height>{{ScaleY('50')}}</height>
 				<label>$VAR[OSDHelpTextVar]</label>
 				<shadowcolor>black</shadowcolor>
 			</control>
 		</control>
 		<control type="group">
 			<bottom>0</bottom>
-			<height>120</height>
+			<height>{{ScaleY('120')}}</height>
 			<animation type="WindowOpen" condition="!Player.ShowInfo" reversible="False">
 				<effect type="fade" start="0" end="100" time="300"/>
-				<effect type="slide" start="0,200" end="0,0" time="300" tween="cubic" easing="out" />
+				<effect type="slide" start="{{ScaleBorder2('0,200')}}" end="{{ScaleBorder2('0,0')}}" time="300" tween="cubic" easing="out" />
 			</animation>
 			<animation type="WindowClose" condition="!Player.ShowInfo" reversible="False">
 				<effect type="fade" start="100" end="0" time="300"/>
-				<effect type="slide" start="0,0" end="0,200" time="300" tween="cubic" easing="out" />
+				<effect type="slide" start="{{ScaleBorder2('0,0')}}" end="{{ScaleBorder2('0,200')}}" time="300" tween="cubic" easing="out" />
 			</animation>
 			<animation type="WindowOpen" condition="Player.ShowInfo" reversible="False">
 				<effect type="fade" start="0" end="100" time="300"/>
@@ -278,10 +278,10 @@
 				<onright>StepForward</onright>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>-5</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('-5')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<onup>8010</onup>
 				<ondown>650</ondown>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
@@ -294,10 +294,10 @@
 				<action>seek</action>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>-5</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('-5')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<onup>8010</onup>
 				<ondown>650</ondown>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
@@ -310,10 +310,10 @@
 				<action>seek</action>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>-5</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('-5')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<onup>8010</onup>
 				<ondown>650</ondown>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
@@ -326,10 +326,10 @@
 				<visible>Player.SeekEnabled + !Control.HasFocus(87) + MusicPlayer.Content(LiveTV)</visible>
 			</control>
 			<control type="slider">
-				<left>0</left>
-				<top>-5</top>
-				<width>100%</width>
-				<height>26</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('-5')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('26')}}</height>
 				<onup>8010</onup>
 				<ondown>650</ondown>
 				<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
