--- a/templates/MusicVisualisation.xml
+++ b/templates/MusicVisualisation.xml
@@ -13,7 +13,7 @@
 			<include>FullScreenDimensions</include>
 			<visible>!Skin.HasSetting(hide_background_fanart)</visible>
 			<animation effect="zoom" start="105" end="130" center="auto" time="10000" tween="sine" easing="inout" pulse="true" condition="Skin.HasSetting(animate_background_fanart)">Conditional</animation>
-			<animation effect="slide" start="-30,-30" end="30,30" time="6000" tween="sine" easing="inout" pulse="true" condition="Skin.HasSetting(animate_background_fanart)">Conditional</animation>
+			<animation effect="slide" start="{{ScaleBorder2('-30,-30')}}" end="{{ScaleBorder2('30,30')}}" time="6000" tween="sine" easing="inout" pulse="true" condition="Skin.HasSetting(animate_background_fanart)">Conditional</animation>
 			<control type="image">
 				<aspectratio>scale</aspectratio>
 				<fadetime>400</fadetime>
@@ -38,23 +38,23 @@
 		</control>
 		<control type="group">
 			<visible>[Player.ShowInfo | Window.IsActive(musicosd)] + !MusicPlayer.Content(livetv)</visible>
-			<height>460</height>
+			<height>{{ScaleY('460')}}</height>
 			<include>OpenClose_Left</include>
 			<include>Visible_Left</include>
 			<bottom>0</bottom>
 			<control type="image">
-				<left>0</left>
-				<width>120%</width>
-				<height>280</height>
+				<left>{{ScaleX('0')}}</left>
+				<width>{{ScaleX('120%')}}</width>
+				<height>{{ScaleY('280')}}</height>
 				<texture colordiffuse="80FFFFFF">dialogs/dialog-bg-nobo.png</texture>
 			</control>
 			<control type="image">
-				<left>20</left>
-				<top>-140</top>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('-140')}}</top>
 				<include>Visible_Left</include>
 				<visible>[Player.ShowInfo | Window.IsActive(musicosd)] + !MusicPlayer.Content(livetv)</visible>
-				<width>400</width>
-				<height>400</height>
+				<width>{{ScaleX('400')}}</width>
+				<height>{{ScaleY('400')}}</height>
 				<fadetime>400</fadetime>
 				<aspectratio aligny="bottom">keep</aspectratio>
 				<texture fallback="DefaultAlbumCover.png" border="2">$INFO[MusicPlayer.Cover]</texture>
@@ -64,12 +64,12 @@
 			<control type="group">
 				<visible>[Player.ShowInfo | Window.IsActive(musicosd)] + ![Window.IsActive(playerprocessinfo) | MusicPlayer.Content(livetv)]</visible>
 				<include>Visible_Left</include>
-				<left>440</left>
-				<top>10</top>
+				<left>{{ScaleX('440')}}</left>
+				<top>{{ScaleY('10')}}</top>
 				<control type="label">
-					<top>10</top>
-					<width>1450</width>
-					<height>50</height>
+					<top>{{ScaleY('10')}}</top>
+					<width>{{ScaleX('1450')}}</width>
+					<height>{{ScaleY('50')}}</height>
 					<aligny>center</aligny>
 					<label>[B]$INFO[MusicPlayer.TrackNumber,,. ]$INFO[Player.Title][/B]</label>
 					<font>font45</font>
@@ -77,9 +77,9 @@
 					<scroll>true</scroll>
 				</control>
 				<control type="label">
-					<top>65</top>
-					<width>1450</width>
-					<height>50</height>
+					<top>{{ScaleY('65')}}</top>
+					<width>{{ScaleX('1450')}}</width>
+					<height>{{ScaleY('50')}}</height>
 					<aligny>center</aligny>
 					<label>$INFO[MusicPlayer.Artist]</label>
 					<font>font45</font>
@@ -87,15 +87,15 @@
 					<scroll>true</scroll>
 				</control>
 				<control type="grouplist">
-					<top>120</top>
-					<width>1450</width>
-					<height>40</height>
+					<top>{{ScaleY('120')}}</top>
+					<width>{{ScaleX('1450')}}</width>
+					<height>{{ScaleY('40')}}</height>
 					<align>left</align>
 					<orientation>horizontal</orientation>
 					<itemgap>20</itemgap>
 					<control type="label">
-						<width>100</width>
-						<height>40</height>
+						<width>{{ScaleX('100')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<label>$INFO[MusicPlayer.Year]</label>
 						<font>font37</font>
 						<shadowcolor>black</shadowcolor>
@@ -104,8 +104,8 @@
 						<visible>!String.IsEmpty(MusicPlayer.Year)</visible>
 					</control>
 					<control type="label">
-						<width min="0" max="1130">auto</width>
-						<height>40</height>
+						<width min="{{ScaleX('0')}}" max="{{ScaleX('1130')}}">{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<label>$INFO[MusicPlayer.Genre]</label>
 						<font>font37</font>
 						<shadowcolor>black</shadowcolor>
@@ -115,8 +115,8 @@
 						<visible>!String.IsEmpty(MusicPlayer.Genre)</visible>
 					</control>
 					<control type="image">
-						<width>190</width>
-						<height>40</height>
+						<width>{{ScaleX('190')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<texture fallback="flags/starrating/0.png">$INFO[MusicPlayer.UserRating,flags/starrating/,.png]</texture>
 						<aspectratio>keep</aspectratio>
 						<aligny>center</aligny>
@@ -124,9 +124,9 @@
 					</control>
 				</control>
 				<control type="label">
-					<top>165</top>
-					<width>1450</width>
-					<height>40</height>
+					<top>{{ScaleY('165')}}</top>
+					<width>{{ScaleX('1450')}}</width>
+					<height>{{ScaleY('40')}}</height>
 					<aligny>center</aligny>
 					<label>$INFO[MusicPlayer.Album]$VAR[MultiDiscVar]</label>
 					<font>font37</font>
@@ -134,9 +134,9 @@
 					<scroll>true</scroll>
 				</control>
 				<control type="label">
-					<top>210</top>
-					<width>1450</width>
-					<height>40</height>
+					<top>{{ScaleY('210')}}</top>
+					<width>{{ScaleX('1450')}}</width>
+					<height>{{ScaleY('40')}}</height>
 					<aligny>center</aligny>
 					<label>$VAR[OSDNextLabelVar]</label>
 					<shadowcolor>black</shadowcolor>
