--- a/templates/MyPVRGuide.xml
+++ b/templates/MyPVRGuide.xml
@@ -14,55 +14,55 @@
 				<include>OpenClose_Right</include>
 				<include>Visible_Right</include>
 				<control type="group">
-					<top>140</top>
+					<top>{{ScaleY('140')}}</top>
 					<depth>DepthContentPanel</depth>
 					<control type="image">
-						<left>0</left>
-						<top>-10</top>
-						<width>100%</width>
+						<left>{{ScaleX('0')}}</left>
+						<top>{{ScaleY('-10')}}</top>
+						<width>{{ScaleX('100%')}}</width>
 						<bottom>336</bottom>
 						<texture colordiffuse="E6FFFFFF">dialogs/dialog-bg-nobo.png</texture>
 					</control>
 					<control type="group">
 						<visible>Control.IsVisible(50) | Control.IsVisible(51)</visible>
 						<control type="image">
-							<left>0</left>
-							<top>0</top>
-							<width>100%</width>
-							<height>50</height>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('100%')}}</width>
+							<height>{{ScaleY('50')}}</height>
 							<texture colordiffuse="border_alpha">colors/white50.png</texture>
 						</control>
 						<control type="image">
-							<left>42</left>
-							<top>0</top>
-							<width>364</width>
-							<height>50</height>
+							<left>{{ScaleX('42')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('364')}}</width>
+							<height>{{ScaleY('50')}}</height>
 							<texture colordiffuse="button_focus">colors/white.png</texture>
 							<visible>Control.HasFocus(11)</visible>
 						</control>
 						<control type="image">
-							<left>10</left>
-							<top>10</top>
-							<width>20</width>
-							<height>30</height>
+							<left>{{ScaleX('10')}}</left>
+							<top>{{ScaleY('10')}}</top>
+							<width>{{ScaleX('20')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<texture>icons/keyboard/arrowleft.png</texture>
 							<animation effect="fade" start="0" end="100" time="150">VisibleChange</animation>
 							<visible>Control.HasFocus(11) + Container(11).HasPrevious</visible>
 						</control>
 						<control type="image">
-							<right>10</right>
-							<top>10</top>
-							<width>20</width>
-							<height>30</height>
+							<right>{{ScaleX('10')}}</right>
+							<top>{{ScaleY('10')}}</top>
+							<width>{{ScaleX('20')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<texture>icons/keyboard/arrowright.png</texture>
 							<animation effect="fade" start="0" end="100" time="150">VisibleChange</animation>
 							<visible>Control.HasFocus(11) + !String.IsEqual(Container(11).CurrentItem, Container(11).NumItems)</visible>
 						</control>
 					</control>
 					<control type="fixedlist" id="11">
-						<top>0</top>
-						<left>40</left>
-						<right>40</right>
+						<top>{{ScaleY('0')}}</top>
+						<left>{{ScaleX('40')}}</left>
+						<right>{{ScaleX('40')}}</right>
 						<onleft>noop</onleft>
 						<onright>noop</onright>
 						<onup>63</onup>
@@ -70,38 +70,38 @@
 						<orientation>horizontal</orientation>
 						<scrolltime>200</scrolltime>
 						<visible>Control.IsVisible(50) | Control.IsVisible(51)</visible>
-						<itemlayout height="50" width="368">
+						<itemlayout height="{{ScaleY('50')}}" width="{{ScaleX('368')}}">
 							<control type="image">
-								<left>1</left>
-								<top>0</top>
-								<width>366</width>
-								<height>49</height>
+								<left>{{ScaleX('1')}}</left>
+								<top>{{ScaleY('0')}}</top>
+								<width>{{ScaleX('366')}}</width>
+								<height>{{ScaleY('49')}}</height>
 								<texture colordiffuse="60FFFFFF">colors/white50.png</texture>
 							</control>
 							<control type="label">
-								<left>5</left>
-								<width>358</width>
-								<height>48</height>
+								<left>{{ScaleX('5')}}</left>
+								<width>{{ScaleX('358')}}</width>
+								<height>{{ScaleY('48')}}</height>
 								<align>center</align>
 								<aligny>center</aligny>
 								<label>$INFO[ListItem.Label]</label>
 								<textcolor>lightgrey</textcolor>
 							</control>
 						</itemlayout>
-						<focusedlayout height="50" width="368">
+						<focusedlayout height="{{ScaleY('50')}}" width="{{ScaleX('368')}}">
 							<control type="image">
-								<left>1</left>
-								<top>0</top>
-								<width>366</width>
-								<height>50</height>
+								<left>{{ScaleX('1')}}</left>
+								<top>{{ScaleY('0')}}</top>
+								<width>{{ScaleX('366')}}</width>
+								<height>{{ScaleY('50')}}</height>
 								<texture colordiffuse="button_focus">colors/white.png</texture>
 								<animation effect="fade" end="30" condition="true">Conditional</animation>
 								<visible>!Control.HasFocus(11)</visible>
 							</control>
 							<control type="label">
-								<left>5</left>
-								<width>358</width>
-								<height>48</height>
+								<left>{{ScaleX('5')}}</left>
+								<width>{{ScaleX('358')}}</width>
+								<height>{{ScaleY('48')}}</height>
 								<align>center</align>
 								<aligny>center</aligny>
 								<scroll>true</scroll>
@@ -170,52 +170,52 @@
 				</control>
 				<control type="group">
 					<bottom>30</bottom>
-					<height>300</height>
+					<height>{{ScaleY('300')}}</height>
 					<control type="image">
-						<top>10</top>
-						<left>30</left>
-						<width>290</width>
-						<height>250</height>
+						<top>{{ScaleY('10')}}</top>
+						<left>{{ScaleX('30')}}</left>
+						<width>{{ScaleX('290')}}</width>
+						<height>{{ScaleY('250')}}</height>
 						<aspectratio align="center" aligny="center">keep</aspectratio>
 						<fadetime>400</fadetime>
 						<texture>$INFO[ListItem.Icon]</texture>
 					</control>
 					<control type="group">
-						<top>0</top>
-						<left>350</left>
+						<top>{{ScaleY('0')}}</top>
+						<left>{{ScaleX('350')}}</left>
 						<control type="label">
-							<width>70%</width>
-							<height>30</height>
+							<width>{{ScaleX('70%')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<label>[B]$INFO[ListItem.EpgEventTitle][/B] $INFO[ListItem.Year,([COLOR grey],[/COLOR])]</label>
 						</control>
 						<control type="label">
-							<top>0</top>
-							<right>30</right>
-							<width>30%</width>
-							<height>30</height>
+							<top>{{ScaleY('0')}}</top>
+							<right>{{ScaleX('30')}}</right>
+							<width>{{ScaleX('30%')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<align>right</align>
 							<label>[COLOR button_focus]$INFO[ListItem.StartTime,[COLOR grey]$LOCALIZE[555]:[/COLOR] ][/COLOR]$INFO[ListItem.EndTime,[COLOR button_focus] - ,[/COLOR]]</label>
 						</control>
 						<control type="label">
-							<top>35</top>
-							<width>60%</width>
-							<height>30</height>
+							<top>{{ScaleY('35')}}</top>
+							<width>{{ScaleX('60%')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<label>$VAR[FlagDashLabel][I][COLOR grey]$VAR[SeasonEpisodeLabel][/COLOR]$INFO[ListItem.EpisodeName,[COLOR white],[/COLOR]][/I]</label>
 						</control>
 						<control type="label">
-							<top>35</top>
-							<right>30</right>
-							<width>40%</width>
-							<height>30</height>
+							<top>{{ScaleY('35')}}</top>
+							<right>{{ScaleX('30')}}</right>
+							<width>{{ScaleX('40%')}}</width>
+							<height>{{ScaleY('30')}}</height>
 							<align>right</align>
 							<label>$INFO[ListItem.Genre,[COLOR grey]$LOCALIZE[515]:[/COLOR] ]</label>
 						</control>
 					</control>
 					<control type="textbox">
-						<left>350</left>
-						<top>85</top>
-						<right>30</right>
-						<height>170</height>
+						<left>{{ScaleX('350')}}</left>
+						<top>{{ScaleY('85')}}</top>
+						<right>{{ScaleX('30')}}</right>
+						<height>{{ScaleY('170')}}</height>
 						<align>justify</align>
 						<label>$INFO[ListItem.Plot]</label>
 						<autoscroll delay="10000" time="3000" repeat="10000">Skin.HasSetting(AutoScroll)</autoscroll>
