--- a/templates/MyPlaylist.xml
+++ b/templates/MyPlaylist.xml
@@ -31,7 +31,7 @@
 				<visible>!Container.Content(songs)</visible>
 				<depth>DepthBars</depth>
 				<bottom>0</bottom>
-				<height>70</height>
+				<height>{{ScaleY('70')}}</height>
 				<animation effect="fade" start="0" end="100" time="300" delay="300">WindowOpen</animation>
 				<animation effect="fade" start="100" end="0" time="200">WindowClose</animation>
 				<include condition="!Skin.HasSetting(hide_mediaflags)">MediaFlags</include>
@@ -40,7 +40,7 @@
 			<control type="group">
 				<include>MediaMenuCommon</include>
 				<control type="grouplist" id="9000">
-					<top>50</top>
+					<top>{{ScaleY('50')}}</top>
 					<include>MediaMenuListCommon</include>
 					<control type="label" id="203">
 						<description>Actions</description>
@@ -48,40 +48,40 @@
 						<label>$LOCALIZE[31020]</label>
 					</control>
 					<control type="radiobutton" id="20">
-						<height>80</height>
+						<height>{{ScaleY('80')}}</height>
 						<align>left</align>
 						<aligny>center</aligny>
 						<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 						<texturenofocus />
-						<radioposx>280</radioposx>
-						<textoffsetx>20</textoffsetx>
+						<radioposx>{{ScaleX('280')}}</radioposx>
+						<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 						<label>$LOCALIZE[191]</label>
 					</control>
 					<control type="button" id="26">
-						<height>80</height>
+						<height>{{ScaleY('80')}}</height>
 						<align>left</align>
 						<aligny>center</aligny>
 						<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 						<texturenofocus />
-						<textoffsetx>20</textoffsetx>
+						<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 						<label></label>
 					</control>
 					<control type="button" id="21">
-						<height>80</height>
+						<height>{{ScaleY('80')}}</height>
 						<align>left</align>
 						<aligny>center</aligny>
 						<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 						<texturenofocus />
-						<textoffsetx>20</textoffsetx>
+						<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 						<label>$LOCALIZE[190]</label>
 					</control>
 					<control type="button" id="22">
-						<height>80</height>
+						<height>{{ScaleY('80')}}</height>
 						<align>left</align>
 						<aligny>center</aligny>
 						<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
 						<texturenofocus />
-						<textoffsetx>20</textoffsetx>
+						<textoffsetx>{{ScaleX('20')}}</textoffsetx>
 						<label>$LOCALIZE[192]</label>
 					</control>
 					<include>MediaMenuNowPlaying</include>
