--- a/templates/MyVideoNav.xml
+++ b/templates/MyVideoNav.xml
@@ -33,30 +33,30 @@
 					<param name="width" value="656" />
 				</include>
 				<control type="group">
-					<width>550</width>
+					<width>{{ScaleX('550')}}</width>
 					<control type="textbox">
-						<top>120</top>
-						<left>30</left>
-						<width>550</width>
+						<top>{{ScaleY('120')}}</top>
+						<left>{{ScaleX('30')}}</left>
+						<width>{{ScaleX('550')}}</width>
 						<aligny>center</aligny>
-						<height>110</height>
+						<height>{{ScaleY('110')}}</height>
 						<font>font36_title</font>
 						<label>$INFO[ListItem.Label]</label>
 					</control>
 					<control type="textbox">
-						<left>30</left>
-						<top>240</top>
-						<width>525</width>
+						<left>{{ScaleX('30')}}</left>
+						<top>{{ScaleY('240')}}</top>
+						<width>{{ScaleX('525')}}</width>
 						<bottom>100</bottom>
 						<visible>![ListItem.IsCollection + String.IsEmpty(ListItem.Plot)]</visible>
 						<label>$INFO[ListItem.Tagline,[I],[/I][CR][CR]]$INFO[ListItem.Plot][CR][CR]</label>
 						<autoscroll delay="10000" time="3000" repeat="10000">Skin.HasSetting(autoscroll)</autoscroll>
 					</control>
 					<control type="textbox">
-						<left>30</left>
-						<top>360</top>
-						<width>530</width>
-						<height>413</height>
+						<left>{{ScaleX('30')}}</left>
+						<top>{{ScaleY('360')}}</top>
+						<width>{{ScaleX('530')}}</width>
+						<height>{{ScaleY('413')}}</height>
 						<align>center</align>
 						<aligny>center</aligny>
 						<font>font27</font>
@@ -65,8 +65,8 @@
 						<visible>String.IsEmpty(Listitem.Plot) + String.IsEmpty(Listitem.Tagline) + !ListItem.IsCollection + !ListItem.IsParentFolder</visible>
 					</control>
 					<control type="group">
-						<left>20</left>
-						<top>245</top>
+						<left>{{ScaleX('20')}}</left>
+						<top>{{ScaleY('245')}}</top>
 						<visible>ListItem.IsCollection + String.IsEmpty(ListItem.Plot)</visible>
 						<include content="InfoList">
 							<param name="bottom" value="108" />
@@ -87,7 +87,7 @@
 			<control type="group">
 				<depth>DepthBars</depth>
 				<bottom>0</bottom>
-				<height>70</height>
+				<height>{{ScaleY('70')}}</height>
 				<animation effect="fade" start="0" end="100" time="300" delay="300">WindowOpen</animation>
 				<animation effect="fade" start="100" end="0" time="200">WindowClose</animation>
 				<include condition="!Skin.HasSetting(hide_mediaflags)">MediaFlags</include>
@@ -97,7 +97,7 @@
 			<control type="group">
 				<include>MediaMenuCommon</include>
 				<control type="grouplist" id="9000">
-					<top>50</top>
+					<top>{{ScaleY('50')}}</top>
 					<include>MediaMenuListCommon</include>
 					<control type="button" id="10">
 						<description>Watched Toggle</description>
