--- a/templates/SettingsCategory.xml
+++ b/templates/SettingsCategory.xml
@@ -19,10 +19,10 @@
 			<include>OpenClose_Right</include>
 			<control type="grouplist" id="5">
 				<description>control area</description>
-				<top>133</top>
-				<left>470</left>
+				<top>{{ScaleY('133')}}</top>
+				<left>{{ScaleX('470')}}</left>
 				<pagecontrol>60</pagecontrol>
-				<right>0</right>
+				<right>{{ScaleX('0')}}</right>
 				<bottom>137</bottom>
 				<onleft>3</onleft>
 				<onright>60</onright>
@@ -30,17 +30,17 @@
 				<ondown>5</ondown>
 			</control>
 			<control type="image">
-				<left>470</left>
-				<top>130</top>
-				<right>0</right>
-				<height>2</height>
+				<left>{{ScaleX('470')}}</left>
+				<top>{{ScaleY('130')}}</top>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('2')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 			<control type="image">
-				<left>470</left>
+				<left>{{ScaleX('470')}}</left>
 				<bottom>135</bottom>
-				<right>0</right>
-				<height>2</height>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('2')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 		</control>
@@ -64,15 +64,15 @@
 		</control>
 		<control type="image" id="11">
 			<description>separator image</description>
-			<height>3</height>
+			<height>{{ScaleY('3')}}</height>
 			<texture colordiffuse="AAAAAAAA" border="3">dialogs/separator-grey.png</texture>
 		</control>
 		<control type="label" id="14">
 			<description>Default Label</description>
-			<width>1450</width>
-			<textoffsetx>45</textoffsetx>
-			<top>0</top>
-			<height>50</height>
+			<width>{{ScaleX('1450')}}</width>
+			<textoffsetx>{{ScaleX('45')}}</textoffsetx>
+			<top>{{ScaleY('0')}}</top>
+			<height>{{ScaleY('50')}}</height>
 			<label></label>
 			<align>center</align>
 			<aligny>center</aligny>
@@ -92,10 +92,10 @@
 			</include>
 			<control type="grouplist" id="3">
 				<description>button area</description>
-				<left>0</left>
-				<top>130</top>
-				<width>470</width>
-				<height>810</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('130')}}</top>
+				<width>{{ScaleX('470')}}</width>
+				<height>{{ScaleY('810')}}</height>
 				<usecontrolcoords>true</usecontrolcoords>
 				<onleft>5</onleft>
 				<onright>5</onright>
@@ -104,10 +104,10 @@
 			</control>
 			<control type="button" id="10">
 				<description>Default Category Button</description>
-				<left>0</left>
-				<height>85</height>
-				<width>470</width>
-				<textoffsetx>40</textoffsetx>
+				<left>{{ScaleX('0')}}</left>
+				<height>{{ScaleY('85')}}</height>
+				<width>{{ScaleX('470')}}</width>
+				<textoffsetx>{{ScaleX('40')}}</textoffsetx>
 				<aligny>center</aligny>
 				<font>font37</font>
 				<texturefocus colordiffuse="button_focus">lists/focus.png</texturefocus>
@@ -115,18 +115,18 @@
 			</control>
 		</control>
 		<control type="group">
-			<right>0</right>
-			<top>133</top>
+			<right>{{ScaleX('0')}}</right>
+			<top>{{ScaleY('133')}}</top>
 			<bottom>137</bottom>
-			<width>60</width>
+			<width>{{ScaleX('60')}}</width>
 			<control type="scrollbar" id="60">
-				<right>0</right>
-				<top>0</top>
+				<right>{{ScaleX('0')}}</right>
+				<top>{{ScaleY('0')}}</top>
 				<bottom>0</bottom>
-				<width>12</width>
+				<width>{{ScaleX('12')}}</width>
 				<orientation>vertical</orientation>
 				<texturesliderbackground />
-				<animation effect="slide" end="6,0" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('6,0')}}" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
 				<onleft>5</onleft>
 				<onright>5</onright>
 				<animation effect="fade" start="0" end="100" time="200" delay="300">Visible</animation>
@@ -144,17 +144,17 @@
 			<depth>DepthContentPanel</depth>
 			<include>OpenClose_Left</include>
 			<control type="radiobutton" id="20">
-				<width>470</width>
-				<left>0</left>
+				<width>{{ScaleX('470')}}</width>
+				<left>{{ScaleX('0')}}</left>
 				<bottom>70</bottom>
-				<height>90</height>
+				<height>{{ScaleY('90')}}</height>
 				<aligny>center</aligny>
 				<onclick>SettingsLevelChange</onclick>
-				<textoffsetx>100</textoffsetx>
-				<textoffsety>0</textoffsety>
+				<textoffsetx>{{ScaleX('100')}}</textoffsetx>
+				<textoffsety>{{ScaleY('0')}}</textoffsety>
 				<texturefocus colordiffuse="button_focus">colors/white.png</texturefocus>
 				<texturenofocus />
-				<radioposx>40</radioposx>
+				<radioposx>{{ScaleX('40')}}</radioposx>
 				<radioposy>0</radioposy>
 				<radiowidth>40</radiowidth>
 				<radioheight>40</radioheight>
@@ -172,10 +172,10 @@
 			<include>OpenClose_Right</include>
 			<control type="textbox" id="6">
 				<description>description area</description>
-				<left>510</left>
+				<left>{{ScaleX('510')}}</left>
 				<bottom>25</bottom>
-				<right>60</right>
-				<height>102</height>
+				<right>{{ScaleX('60')}}</right>
+				<height>{{ScaleY('102')}}</height>
 				<font>font12</font>
 				<align>justify</align>
 				<textcolor>button_focus</textcolor>
