--- a/templates/SettingsScreenCalibration.xml
+++ b/templates/SettingsScreenCalibration.xml
@@ -5,10 +5,10 @@
 		<include>DefaultBackground</include>
 		<control type="mover" id="8">
 			<description>top left mover</description>
-			<left>0</left>
-			<top>0</top>
-			<width>128</width>
-			<height>128</height>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('0')}}</top>
+			<width>{{ScaleX('128')}}</width>
+			<height>{{ScaleY('128')}}</height>
 			<texturefocus colordiffuse="button_focus">calibrate/cal_tl.png</texturefocus>
 			<texturenofocus>calibrate/cal_tl.png</texturenofocus>
 			<movingspeed acceleration="180" maxvelocity="300" resettimeout="200" delta="1">
@@ -20,10 +20,10 @@
 		</control>
 		<control type="mover" id="9">
 			<description>right bottom mover</description>
-			<left>700</left>
-			<top>500</top>
-			<width>128</width>
-			<height>128</height>
+			<left>{{ScaleX('700')}}</left>
+			<top>{{ScaleY('500')}}</top>
+			<width>{{ScaleX('128')}}</width>
+			<height>{{ScaleY('128')}}</height>
 			<texturefocus colordiffuse="button_focus">calibrate/cal_br.png</texturefocus>
 			<texturenofocus>calibrate/cal_br.png</texturenofocus>
 			<movingspeed acceleration="180" maxvelocity="300" resettimeout="200" delta="1">
@@ -35,10 +35,10 @@
 		</control>
 		<control type="resize" id="11">
 			<description>pixel aspect ratio</description>
-			<left>0</left>
-			<top>390</top>
-			<width>500</width>
-			<height>500</height>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('390')}}</top>
+			<width>{{ScaleX('500')}}</width>
+			<height>{{ScaleY('500')}}</height>
 			<texturefocus colordiffuse="button_focus">calibrate/cal_ratio.png</texturefocus>
 			<texturenofocus>calibrate/cal_ratio.png</texturenofocus>
 			<movingspeed acceleration="140" maxvelocity="300" resettimeout="180" delta="1">
@@ -48,10 +48,10 @@
 		</control>
 		<control type="mover" id="10">
 			<description>subtitle position mover</description>
-			<left>200</left>
-			<top>500</top>
-			<width>380</width>
-			<height>90</height>
+			<left>{{ScaleX('200')}}</left>
+			<top>{{ScaleY('500')}}</top>
+			<width>{{ScaleX('380')}}</width>
+			<height>{{ScaleY('90')}}</height>
 			<!-- NOTE: The image must have 40px of trasparent on top and bottom the bar -->
 			<texturefocus colordiffuse="button_focus">calibrate/cal_sub.png</texturefocus>
 			<texturenofocus>calibrate/cal_sub.png</texturenofocus>
@@ -62,18 +62,18 @@
 		</control>
 		<control type="mover" id="12">
 			<description>reset calibration</description>
-			<left>0</left>
-			<top>900</top>
-			<width>100</width>
-			<height>100</height>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('900')}}</top>
+			<width>{{ScaleX('100')}}</width>
+			<height>{{ScaleY('100')}}</height>
 			<texturefocus colordiffuse="button_focus">calibrate/reset.png</texturefocus>
 			<texturenofocus>calibrate/reset.png</texturenofocus>
 		</control>
 		<control type="label">
 			<description>window title</description>
-			<left>0</left>
-			<top>10</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('10')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<align>center</align>
 			<label>$LOCALIZE[214]</label>
 			<font>font40_title</font>
@@ -81,9 +81,9 @@
 		</control>
 		<control type="label" id="2">
 			<description>resolution info</description>
-			<left>0</left>
-			<top>60</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('60')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<align>center</align>
 			<label></label>
 			<font>font27</font>
@@ -91,9 +91,9 @@
 		</control>
 		<control type="label" id="3">
 			<description>control description and help</description>
-			<left>0</left>
-			<top>110</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('110')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<align>center</align>
 			<label></label>
 			<font>font37</font>
@@ -101,9 +101,9 @@
 		</control>
 		<control type="label" id="4">
 			<description>calibration value</description>
-			<left>0</left>
-			<top>210</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('210')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<align>center</align>
 			<label></label>
 			<font>font32</font>
