--- a/templates/SettingsSystemInfo.xml
+++ b/templates/SettingsSystemInfo.xml
@@ -16,86 +16,86 @@
 			<visible>!Player.HasMedia + !String.IsEmpty(Skin.String(HomeFanart.path))</visible>
 		</control>
 		<control type="group">
-			<left>40</left>
-			<top>133</top>
+			<left>{{ScaleX('40')}}</left>
+			<top>{{ScaleY('133')}}</top>
 			<include>OpenClose_Right</include>
 			<control type="grouplist">
-				<left>420</left>
-				<top>30</top>
-				<height>550</height>
+				<left>{{ScaleX('420')}}</left>
+				<top>{{ScaleY('30')}}</top>
+				<height>{{ScaleY('550')}}</height>
 				<orientation>vertical</orientation>
 				<control type="label" id="2">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="3">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="4">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="5">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="6">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="7">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="8">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="9">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="10">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="11">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 				<control type="label" id="12">
-					<height>47</height>
-					<width>1400</width>
+					<height>{{ScaleY('47')}}</height>
+					<width>{{ScaleX('1400')}}</width>
 					<font>Mono26</font>
 				</control>
 			</control>
 			<control type="textbox" id="30">
-				<left>420</left>
-				<right>50</right>
-				<top>30</top>
+				<left>{{ScaleX('420')}}</left>
+				<right>{{ScaleX('50')}}</right>
+				<top>{{ScaleY('30')}}</top>
 				<bottom>347</bottom>
 				<pagecontrol>60</pagecontrol>
 				<autoscroll delay="5000" repeat="7500" time="5000">!Control.HasFocus(60)</autoscroll>
 			</control>
 			<control type="scrollbar" id="60">
-				<right>0</right>
-				<top>0</top>
-				<width>12</width>
+				<right>{{ScaleX('0')}}</right>
+				<top>{{ScaleY('0')}}</top>
+				<width>{{ScaleX('12')}}</width>
 				<bottom>340</bottom>
 				<orientation>vertical</orientation>
 				<texturesliderbackground />
-				<animation effect="slide" end="6,0" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('6,0')}}" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
 				<onleft>9000</onleft>
 				<onright>9000</onright>
 				<visible>Control.IsVisible(30)</visible>
@@ -105,26 +105,26 @@
 				<animation effect="fade" start="100" end="0" time="150">WindowClose</animation>
 			</control>
 			<control type="image">
-				<left>380</left>
-				<top>-3</top>
-				<right>0</right>
-				<height>3</height>
+				<left>{{ScaleX('380')}}</left>
+				<top>{{ScaleY('-3')}}</top>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 		</control>
 		<control type="group">
-			<left>0</left>
-			<top>0</top>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('0')}}</top>
 			<depth>DepthContentPanel</depth>
 			<include>OpenClose_Left</include>
 			<include content="ContentPanel">
 				<param name="width" value="480" />
 			</include>
 			<control type="grouplist" id="9000">
-				<left>0</left>
-				<top>130</top>
-				<width>420</width>
-				<height>100%</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('130')}}</top>
+				<width>{{ScaleX('420')}}</width>
+				<height>{{ScaleY('100%')}}</height>
 				<onup>9000</onup>
 				<ondown>9000</ondown>
 				<onright>60</onright>
@@ -133,7 +133,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[20037]</label>
 				</control>
 				<control type="button" id="94">
@@ -141,7 +141,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[13277]</label>
 				</control>
 				<control type="button" id="96">
@@ -149,7 +149,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[13279]</label>
 				</control>
 				<control type="button" id="97">
@@ -157,7 +157,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[13280]</label>
 				</control>
 				<control type="button" id="98">
@@ -165,7 +165,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[13281]</label>
 				</control>
 				<control type="button" id="99">
@@ -173,7 +173,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[19191]</label>
 				</control>
 				<control type="button" id="100">
@@ -181,7 +181,7 @@
 					<include content="DefaultSettingButton">
 						<param name="height" value="85" />
 					</include>
-					<width>420</width>
+					<width>{{ScaleX('420')}}</width>
 					<label>$LOCALIZE[12389]</label>
 				</control>
 			</control>
@@ -192,39 +192,39 @@
 		<include>BottomBar</include>
 		<control type="group">
 			<bottom>0</bottom>
-			<left>40</left>
-			<height>370</height>
+			<left>{{ScaleX('40')}}</left>
+			<height>{{ScaleY('370')}}</height>
 			<include>OpenClose_Right</include>
 			<control type="image">
-				<left>380</left>
-				<top>30</top>
-				<right>0</right>
-				<height>3</height>
+				<left>{{ScaleX('380')}}</left>
+				<top>{{ScaleY('30')}}</top>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 			<control type="grouplist">
-				<left>420</left>
+				<left>{{ScaleX('420')}}</left>
 				<orientation>vertical</orientation>
 				<control type="label">
 					<description>Memory Text</description>
-					<width>auto</width>
-					<height>80</height>
+					<width>{{ScaleX('auto')}}</width>
+					<height>{{ScaleY('80')}}</height>
 					<label>$LOCALIZE[31030]: $INFO[system.memory(used)] [B]/[/B] $INFO[system.memory(total)] [B]-[/B] $INFO[system.memory(used.percent)]</label>
 					<aligny>top</aligny>
-					<textoffsety>40</textoffsety>
+					<textoffsety>{{ScaleY('40')}}</textoffsety>
 					<shadowcolor>black</shadowcolor>
 					<font>font12</font>
 				</control>
 				<control type="progress">
 					<description>Memory BAR</description>
-					<width>730</width>
-					<height>16</height>
+					<width>{{ScaleX('730')}}</width>
+					<height>{{ScaleY('16')}}</height>
 					<info>system.memory(used)</info>
 				</control>
 				<control type="label">
 					<description>CPU Text</description>
-					<width>auto</width>
-					<height>40</height>
+					<width>{{ScaleX('auto')}}</width>
+					<height>{{ScaleY('40')}}</height>
 					<label>$LOCALIZE[13271] $INFO[System.CPUUsage]</label>
 					<aligny>center</aligny>
 					<shadowcolor>black</shadowcolor>
@@ -233,21 +233,21 @@
 				</control>
 				<control type="progress">
 					<description>CPU BAR</description>
-					<width>730</width>
-					<height>16</height>
+					<width>{{ScaleX('730')}}</width>
+					<height>{{ScaleY('16')}}</height>
 					<info>System.CPUUsage</info>
 					<visible>System.SupportsCPUUsage</visible>
 				</control>
 			</control>
 			<control type="group">
-				<animation effect="slide" end="0,-55" time="0" condition="!System.SupportsCPUUsage">Conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('0,-55')}}" time="0" condition="!System.SupportsCPUUsage">Conditional</animation>
 				<control type="label">
-					<top>155</top>
-					<left>420</left>
-					<width>auto</width>
-					<height>50</height>
+					<top>{{ScaleY('155')}}</top>
+					<left>{{ScaleX('420')}}</left>
+					<width>{{ScaleX('auto')}}</width>
+					<height>{{ScaleY('50')}}</height>
 					<aligny>bottom</aligny>
-					<textoffsety>10</textoffsety>
+					<textoffsety>{{ScaleY('10')}}</textoffsety>
 					<label>$LOCALIZE[31031]:</label>
 					<shadowcolor>black</shadowcolor>
 					<font>font25_title</font>
@@ -255,22 +255,22 @@
 				<control type="grouplist">
 					<description>Kodi build version</description>
 					<itemgap>10</itemgap>
-					<top>200</top>
-					<left>420</left>
-					<width>820</width>
+					<top>{{ScaleY('200')}}</top>
+					<left>{{ScaleX('420')}}</left>
+					<width>{{ScaleX('820')}}</width>
 					<orientation>horizontal</orientation>
 					<control type="label">
 						<description>Build label</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<label>$LOCALIZE[144]</label>
 						<shadowcolor>black</shadowcolor>
 					</control>
 					<control type="label">
 						<description>Kodi Build Version</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<label>$INFO[System.BuildVersionShort]$INFO[System.BuildVersionCode, (,)]</label>
 						<textcolor>button_focus</textcolor>
@@ -280,22 +280,22 @@
 				<control type="grouplist">
 					<description>Git version</description>
 					<itemgap>10</itemgap>
-					<top>235</top>
-					<left>420</left>
-					<width>820</width>
+					<top>{{ScaleY('235')}}</top>
+					<left>{{ScaleX('420')}}</left>
+					<width>{{ScaleX('820')}}</width>
 					<orientation>horizontal</orientation>
 					<control type="label">
 						<description>Git label</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<label>Git:</label>
 						<shadowcolor>black</shadowcolor>
 					</control>
 					<control type="label">
 						<description>Git version</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<label>$INFO[System.BuildVersionGit]</label>
 						<textcolor>button_focus</textcolor>
@@ -305,22 +305,22 @@
 				<control type="grouplist">
 					<description>Build date</description>
 					<itemgap>10</itemgap>
-					<top>270</top>
-					<left>420</left>
-					<width>820</width>
+					<top>{{ScaleY('270')}}</top>
+					<left>{{ScaleX('420')}}</left>
+					<width>{{ScaleX('820')}}</width>
 					<orientation>horizontal</orientation>
 					<control type="label">
 						<description>kodi Compiled Text</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<label>$LOCALIZE[174]</label>
 						<shadowcolor>black</shadowcolor>
 					</control>
 					<control type="label" id="53">
 						<description>Kodi Build Date</description>
-						<width>auto</width>
-						<height>40</height>
+						<width>{{ScaleX('auto')}}</width>
+						<height>{{ScaleY('40')}}</height>
 						<font>font12</font>
 						<textcolor>button_focus</textcolor>
 						<shadowcolor>black</shadowcolor>
