--- a/templates/SkinSettings.xml
+++ b/templates/SkinSettings.xml
@@ -18,12 +18,12 @@
 			<visible>!Player.HasMedia + !String.IsEmpty(Skin.String(HomeFanart.path))</visible>
 		</control>
 		<control type="group" id="10000">
-			<left>470</left>
+			<left>{{ScaleX('470')}}</left>
 			<include>OpenClose_Right</include>
 			<control type="grouplist" id="700">
-				<top>133</top>
-				<left>0</left>
-				<right>0</right>
+				<top>{{ScaleY('133')}}</top>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<bottom>140</bottom>
 				<onleft>9000</onleft>
 				<onright>60</onright>
@@ -75,9 +75,9 @@
 				</control>
 			</control>
 			<control type="grouplist" id="600">
-				<top>133</top>
-				<left>0</left>
-				<right>0</right>
+				<top>{{ScaleY('133')}}</top>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<bottom>140</bottom>
 				<onleft>9000</onleft>
 				<onright>60</onright>
@@ -137,9 +137,9 @@
 				</control>
 			</control>
 			<control type="grouplist" id="610">
-				<top>133</top>
-				<left>0</left>
-				<right>0</right>
+				<top>{{ScaleY('133')}}</top>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<bottom>140</bottom>
 				<onleft>9000</onleft>
 				<onright>60</onright>
@@ -252,9 +252,9 @@
 				</control>
 			</control>
 			<control type="grouplist" id="622">
-				<top>133</top>
-				<left>0</left>
-				<right>0</right>
+				<top>{{ScaleY('133')}}</top>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<bottom>140</bottom>
 				<onleft>9000</onleft>
 				<onright>60</onright>
@@ -278,59 +278,59 @@
 			</control>
 			<control type="image">
 				<description>Dialog Header image</description>
-				<left>0</left>
-				<top>130</top>
-				<right>0</right>
-				<height>3</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('130')}}</top>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 			<control type="image">
 				<description>Dialog Header image</description>
-				<left>0</left>
+				<left>{{ScaleX('0')}}</left>
 				<bottom>134</bottom>
-				<right>0</right>
-				<height>3</height>
+				<right>{{ScaleX('0')}}</right>
+				<height>{{ScaleY('3')}}</height>
 				<texture colordiffuse="button_focus" border="2">dialogs/separator-grey.png</texture>
 			</control>
 		</control>
 		<control type="group">
 			<depth>DepthContentPanel</depth>
-			<left>0</left>
+			<left>{{ScaleX('0')}}</left>
 			<include>OpenClose_Left</include>
 			<include content="ContentPanel">
 				<param name="width" value="530" />
 			</include>
 			<control type="list" id="9000">
 				<description>button area</description>
-				<left>0</left>
-				<top>130</top>
-				<width>470</width>
-				<height>700</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('130')}}</top>
+				<width>{{ScaleX('470')}}</width>
+				<height>{{ScaleY('700')}}</height>
 				<onleft>10000</onleft>
 				<onright>10000</onright>
 				<onup>9000</onup>
 				<ondown>9000</ondown>
-				<itemlayout height="85" width="470">
+				<itemlayout height="{{ScaleY('85')}}" width="{{ScaleX('470')}}">
 					<control type="label">
-						<textoffsetx>30</textoffsetx>
-						<width>470</width>
-						<height>85</height>
+						<textoffsetx>{{ScaleX('30')}}</textoffsetx>
+						<width>{{ScaleX('470')}}</width>
+						<height>{{ScaleY('85')}}</height>
 						<label>$INFO[ListItem.Label]</label>
 						<font>font37</font>
 						<aligny>center</aligny>
 					</control>
 				</itemlayout>
-				<focusedlayout height="85" width="470">
+				<focusedlayout height="{{ScaleY('85')}}" width="{{ScaleX('470')}}">
 					<control type="image">
-						<width>470</width>
-						<height>85</height>
+						<width>{{ScaleX('470')}}</width>
+						<height>{{ScaleY('85')}}</height>
 						<texture colordiffuse="button_focus">lists/focus.png</texture>
 						<animation effect="fade" start="100" end="50" time="40" condition="!Control.HasFocus(9000)">Conditional</animation>
 					</control>
 					<control type="label">
-						<textoffsetx>30</textoffsetx>
-						<width>470</width>
-						<height>85</height>
+						<textoffsetx>{{ScaleX('30')}}</textoffsetx>
+						<width>{{ScaleX('470')}}</width>
+						<height>{{ScaleY('85')}}</height>
 						<font>font37</font>
 						<aligny>center</aligny>
 						<label>$INFO[ListItem.Label]</label>
@@ -357,18 +357,18 @@
 			</control>
 		</control>
 		<control type="group">
-			<right>0</right>
-			<top>133</top>
+			<right>{{ScaleX('0')}}</right>
+			<top>{{ScaleY('133')}}</top>
 			<bottom>137</bottom>
-			<width>60</width>
+			<width>{{ScaleX('60')}}</width>
 			<control type="scrollbar" id="60">
-				<right>0</right>
-				<top>0</top>
+				<right>{{ScaleX('0')}}</right>
+				<top>{{ScaleY('0')}}</top>
 				<bottom>0</bottom>
-				<width>12</width>
+				<width>{{ScaleX('12')}}</width>
 				<orientation>vertical</orientation>
 				<texturesliderbackground />
-				<animation effect="slide" end="6,0" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
+				<animation effect="slide" end="{{ScaleBorder2('6,0')}}" time="300" tween="sine" easing="inout" condition="!Control.HasFocus(60)">conditional</animation>
 				<onleft>610</onleft>
 				<onright>610</onright>
 				<animation effect="fade" start="0" end="100" time="200" delay="300">Visible</animation>
@@ -386,10 +386,10 @@
 		<control type="textbox" id="6">
 			<include>OpenClose_Right</include>
 			<description>description area</description>
-			<left>510</left>
+			<left>{{ScaleX('510')}}</left>
 			<bottom>27</bottom>
-			<width>1350</width>
-			<height>100</height>
+			<width>{{ScaleX('1350')}}</width>
+			<height>{{ScaleY('100')}}</height>
 			<font>font12</font>
 			<align>justify</align>
 			<textcolor>button_focus</textcolor>
