--- a/templates/SmartPlaylistEditor.xml
+++ b/templates/SmartPlaylistEditor.xml
@@ -4,9 +4,9 @@
 	<include>Animation_DialogPopupOpenClose</include>
 	<controls>
 		<control type="group">
-			<top>150</top>
+			<top>{{ScaleY('150')}}</top>
 			<centerleft>50%</centerleft>
-			<width>1700</width>
+			<width>{{ScaleX('1700')}}</width>
 			<include content="DialogBackgroundCommons">
 				<param name="width" value="1700" />
 				<param name="height" value="790" />
@@ -15,73 +15,73 @@
 			</include>
 			<control type="grouplist" id="500">
 				<orientation>vertical</orientation>
-				<left>10</left>
-				<top>95</top>
+				<left>{{ScaleX('10')}}</left>
+				<top>{{ScaleY('95')}}</top>
 				<onright>10</onright>
 				<onleft>9001</onleft>
 				<itemgap>-20</itemgap>
 				<control type="button" id="22">
 					<description>Set Playlist type</description>
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<include>SettingsItemCommon</include>
 					<label>$LOCALIZE[467]</label>
 				</control>
 				<control type="button" id="12">
 					<description>Name Button</description>
 					<label>$LOCALIZE[21433]</label>
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<include>SettingsItemCommon</include>
 				</control>
 				<control type="label" id="1101">
 					<description>Name Label</description>
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<label>$LOCALIZE[31042]</label>
 					<include>SettingsLabelCommon</include>
 				</control>
 				<control type="button" id="16">
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<label>$LOCALIZE[21424]</label>
 					<include>SettingsItemCommon</include>
 				</control>
 				<control type="button" id="17">
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<label>$LOCALIZE[21427]</label>
 					<include>SettingsItemCommon</include>
 				</control>
 				<control type="button" id="18">
 					<label>$LOCALIZE[21429]</label>
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<include>SettingsItemCommon</include>
 				</control>
 				<control type="button" id="19">
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<include>SettingsItemCommon</include>
 					<label>$LOCALIZE[31032]</label>
 				</control>
 				<control type="button" id="23">
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<label>$LOCALIZE[21458]</label>
 					<include>SettingsItemCommon</include>
 				</control>
 				<control type="radiobutton" id="24">
-					<width>700</width>
+					<width>{{ScaleX('700')}}</width>
 					<include>SettingsItemCommon</include>
 					<label>$LOCALIZE[467]: $LOCALIZE[21459]</label>
 				</control>
 			</control>
 			<control type="image">
-				<left>720</left>
-				<top>95</top>
-				<width>640</width>
-				<height>530</height>
-				<texture border="40">buttons/dialogbutton-nofo.png</texture>
+				<left>{{ScaleX('720')}}</left>
+				<top>{{ScaleY('95')}}</top>
+				<width>{{ScaleX('640')}}</width>
+				<height>{{ScaleY('530')}}</height>
+				<texture border="{{ScaleBorder('40')}}">buttons/dialogbutton-nofo.png</texture>
 			</control>
 			<control type="list" id="10">
 				<description>Rules List Control</description>
-				<left>740</left>
-				<top>115</top>
-				<width>600</width>
-				<height>480</height>
+				<left>{{ScaleX('740')}}</left>
+				<top>{{ScaleY('115')}}</top>
+				<width>{{ScaleX('600')}}</width>
+				<height>{{ScaleY('480')}}</height>
 				<onleft>500</onleft>
 				<onright>9001</onright>
 				<orientation>vertical</orientation>
@@ -91,10 +91,10 @@
 				</include>
 			</control>
 			<control type="textbox">
-				<left>740</left>
-				<top>620</top>
-				<width>610</width>
-				<height>348</height>
+				<left>{{ScaleX('740')}}</left>
+				<top>{{ScaleY('620')}}</top>
+				<width>{{ScaleX('610')}}</width>
+				<height>{{ScaleY('348')}}</height>
 				<aligny>top</aligny>
 				<label>$LOCALIZE[31043]</label>
 				<textcolor>grey</textcolor>
@@ -102,10 +102,10 @@
 			</control>
 			<control type="grouplist" id="9001">
 				<orientation>vertical</orientation>
-				<left>1380</left>
-				<width>1300</width>
+				<left>{{ScaleX('1380')}}</left>
+				<width>{{ScaleX('1300')}}</width>
 				<itemgap>dialogbuttons_itemgap</itemgap>
-				<top>100</top>
+				<top>{{ScaleY('100')}}</top>
 				<onleft>10</onleft>
 				<onright>500</onright>
 				<include content="DefaultDialogButton">
