--- a/templates/VideoFullScreen.xml
+++ b/templates/VideoFullScreen.xml
@@ -4,28 +4,28 @@
 	<controls>
 		<control type="group" id="0">
 			<control type="label" id="10">
-				<left>45</left>
-				<top>15</top>
-				<width>1770</width>
-				<height>100</height>
+				<left>{{ScaleX('45')}}</left>
+				<top>{{ScaleY('15')}}</top>
+				<width>{{ScaleX('1770')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<label></label>
 				<font>font12</font>
 				<shadowcolor>black</shadowcolor>
 			</control>
 			<control type="label" id="11">
-				<left>45</left>
-				<top>45</top>
-				<width>1770</width>
-				<height>100</height>
+				<left>{{ScaleX('45')}}</left>
+				<top>{{ScaleY('45')}}</top>
+				<width>{{ScaleX('1770')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<label></label>
 				<font>font12</font>
 				<shadowcolor>black</shadowcolor>
 			</control>
 			<control type="label" id="12">
-				<left>45</left>
-				<top>75</top>
-				<width>1770</width>
-				<height>100</height>
+				<left>{{ScaleX('45')}}</left>
+				<top>{{ScaleY('75')}}</top>
+				<width>{{ScaleX('1770')}}</width>
+				<height>{{ScaleY('100')}}</height>
 				<label></label>
 				<font>font12</font>
 				<shadowcolor>black</shadowcolor>
@@ -37,28 +37,28 @@
 			<animation effect="fade" delay="300" time="200">Visible</animation>
 			<animation effect="fade" delay="200" time="150">Hidden</animation>
 			<centerleft>50%</centerleft>
-			<width>110</width>
+			<width>{{ScaleX('110')}}</width>
 			<centertop>50%</centertop>
-			<height>110</height>
+			<height>{{ScaleY('110')}}</height>
 			<control type="image" id="1">
 				<centerleft>50%</centerleft>
 				<centertop>50%</centertop>
-				<width>110</width>
-				<height>110</height>
+				<width>{{ScaleX('110')}}</width>
+				<height>{{ScaleY('110')}}</height>
 				<texture colordiffuse="BFFFFFFF">osd/buffer-bg.png</texture>
 			</control>
 			<control type="image" id="1">
 				<centerleft>50%</centerleft>
 				<centertop>50%</centertop>
-				<width>92</width>
-				<height>92</height>
+				<width>{{ScaleX('92')}}</width>
+				<height>{{ScaleY('92')}}</height>
 				<texture>dialogs/extendedprogress/loading-back.png</texture>
 			</control>
 			<control type="image" id="1">
 				<centerleft>50%</centerleft>
 				<centertop>50%</centertop>
-				<width>92</width>
-				<height>92</height>
+				<width>{{ScaleX('92')}}</width>
+				<height>{{ScaleY('92')}}</height>
 				<texture colordiffuse="button_focus">$INFO[Player.CacheLevel,dialogs/volume/progress/p,.png]</texture>
 			</control>
 			<control type="label" id="1">
@@ -66,8 +66,8 @@
 				<label>$INFO[Player.CacheLevel]</label>
 				<centerleft>50%</centerleft>
 				<centertop>50%</centertop>
-				<width>200</width>
-				<height>200</height>
+				<width>{{ScaleX('200')}}</width>
+				<height>{{ScaleY('200')}}</height>
 				<aligny>center</aligny>
 				<align>center</align>
 				<font>font13</font>
