--- a/templates/VideoOSD.xml
+++ b/templates/VideoOSD.xml
@@ -6,9 +6,9 @@
 	<controls>
 		<control type="button">
 			<description>background close area</description>
-			<left>0</left>
-			<top>0</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('0')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<bottom>280</bottom>
 			<texturefocus />
 			<texturenofocus />
@@ -18,27 +18,27 @@
 		<control type="group">
 			<include>Animation_BottomSlide</include>
 			<bottom>0</bottom>
-			<height>180</height>
+			<height>{{ScaleY('180')}}</height>
 			<visible>![Window.IsVisible(SliderDialog) | Window.IsVisible(1110) | Window.IsVisible(osdaudiosettings) | Window.IsVisible(osdvideosettings) | Window.IsVisible(VideoBookmarks) | Window.IsVisible(playerprocessinfo) | Window.IsVisible(osdcmssettings) | Window.IsVisible(PVROSDChannels) | Window.IsVisible(pvrchannelguide)]</visible>
 			<animation effect="fade" time="200">VisibleChange</animation>
 			<control type="label">
-				<animation effect="slide" end="0,-20" time="150" condition="VideoPlayer.Content(LiveTV)">conditional</animation>
-				<right>20</right>
-				<top>0</top>
+				<animation effect="slide" end="{{ScaleBorder2('0,-20')}}" time="150" condition="VideoPlayer.Content(LiveTV)">conditional</animation>
+				<right>{{ScaleX('20')}}</right>
+				<top>{{ScaleY('0')}}</top>
 				<align>right</align>
 				<aligny>center</aligny>
-				<width>1000</width>
-				<height>50</height>
+				<width>{{ScaleX('1000')}}</width>
+				<height>{{ScaleY('50')}}</height>
 				<label>$VAR[OSDHelpTextVar]</label>
 				<shadowcolor>black</shadowcolor>
 			</control>
 			<control type="group" id="200">
 				<include>Animation_BottomSlide</include>
 				<control type="grouplist" id="201">
-					<left>20</left>
-					<top>90</top>
-					<width>100%</width>
-					<height>135</height>
+					<left>{{ScaleX('20')}}</left>
+					<top>{{ScaleY('90')}}</top>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('135')}}</height>
 					<itemgap>10</itemgap>
 					<scrolltime tween="sine">200</scrolltime>
 					<orientation>horizontal</orientation>
@@ -61,14 +61,14 @@
 						<visible>[Player.SeekEnabled + !VideoPlayer.Content(livetv)] + !Player.Paused</visible>
 					</control>
 					<control type="group" id="698">
-						<width>76</width>
-						<height>76</height>
+						<width>{{ScaleX('76')}}</width>
+						<height>{{ScaleY('76')}}</height>
 						<visible>Player.PauseEnabled</visible>
 						<control type="button" id="602">
-							<left>0</left>
-							<top>0</top>
-							<width>74</width>
-							<height>74</height>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('74')}}</width>
+							<height>{{ScaleY('74')}}</height>
 							<label></label>
 							<font></font>
 							<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
@@ -80,10 +80,10 @@
 							<onclick>PlayerControl(Play)</onclick>
 						</control>
 						<control type="image">
-							<left>0</left>
-							<top>0</top>
-							<width>74</width>
-							<height>74</height>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('0')}}</top>
+							<width>{{ScaleX('74')}}</width>
+							<height>{{ScaleY('74')}}</height>
 							<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back" condition="Control.HasFocus(602)">Conditional</animation>
 							<texture colordiffuse="white">$VAR[PlayerControlsPlayImageVar]</texture>
 						</control>
@@ -114,14 +114,14 @@
 						<textureradioofffocus colordiffuse="white">osd/fullscreen/buttons/record.png</textureradioofffocus>
 						<textureradiooffnofocus>osd/fullscreen/buttons/record.png</textureradiooffnofocus>
 						<texturefocus colordiffuse="button_focus">osd/fullscreen/buttons/button-fo.png</texturefocus>
-						<width>76</width>
+						<width>{{ScaleX('76')}}</width>
 						<animation center="38,38" effect="zoom" end="100" reversible="false" start="95" time="480" tween="back">Focus</animation>
-						<height>76</height>
+						<height>{{ScaleY('76')}}</height>
 						<radiowidth>74</radiowidth>
 						<radioheight>74</radioheight>
 						<font></font>
 						<texturenofocus />
-						<radioposx>1</radioposx>
+						<radioposx>{{ScaleX('1')}}</radioposx>
 						<radioposy>0</radioposy>
 						<selected>!PVR.IsRecordingPlayingChannel</selected>
 						<onclick>PVR.ToggleRecordPlayingChannel</onclick>
@@ -130,10 +130,10 @@
 					</control>
 				</control>
 				<control type="grouplist" id="202">
-					<right>20</right>
-					<top>90</top>
-					<width>1800</width>
-					<height>135</height>
+					<right>{{ScaleX('20')}}</right>
+					<top>{{ScaleY('90')}}</top>
+					<width>{{ScaleX('1800')}}</width>
+					<height>{{ScaleY('135')}}</height>
 					<align>right</align>
 					<itemgap>10</itemgap>
 					<scrolltime tween="sine">200</scrolltime>
@@ -223,14 +223,14 @@
 				</control>
 			</control>
 			<control type="group" id="6000">
-				<top>60</top>
+				<top>{{ScaleY('60')}}</top>
 				<animation type="WindowOpen" condition="!Window.IsVisible(fullscreeninfo)" reversible="False">
 					<effect type="fade" start="0" end="100" time="300"/>
-					<effect type="slide" start="0,200" end="0,0" time="300" tween="cubic" easing="out" />
+					<effect type="slide" start="{{ScaleBorder2('0,200')}}" end="{{ScaleBorder2('0,0')}}" time="300" tween="cubic" easing="out" />
 				</animation>
 				<animation type="WindowClose" condition="!Window.IsVisible(fullscreeninfo)" reversible="False">
 					<effect type="fade" start="100" end="0" time="300"/>
-					<effect type="slide" start="0,0" end="0,200" time="300" tween="cubic" easing="out" />
+					<effect type="slide" start="{{ScaleBorder2('0,0')}}" end="{{ScaleBorder2('0,200')}}" time="300" tween="cubic" easing="out" />
 				</animation>
 				<animation type="WindowOpen" condition="Window.IsVisible(fullscreeninfo)" reversible="False">
 					<effect type="fade" start="0" end="100" time="300"/>
@@ -248,10 +248,10 @@
 					<onright condition="Player.Paused">PlayerControl(FrameAdvance(1))</onright>
 				</control>
 				<control type="slider">
-					<top>-5</top>
-					<left>0</left>
-					<width>100%</width>
-					<height>26</height>
+					<top>{{ScaleY('-5')}}</top>
+					<left>{{ScaleX('0')}}</left>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
 					<textureslidernib>osd/progress/nub_leftright.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernibfocus>
@@ -262,10 +262,10 @@
 					<visible>!Control.HasFocus(87) + !VideoPlayer.Content(LiveTV)</visible>
 				</control>
 				<control type="slider">
-					<top>-5</top>
-					<left>0</left>
-					<width>100%</width>
-					<height>26</height>
+					<top>{{ScaleY('-5')}}</top>
+					<left>{{ScaleX('0')}}</left>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
 					<textureslidernib colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernibfocus>
@@ -276,10 +276,10 @@
 					<visible>Control.HasFocus(87) + !VideoPlayer.Content(LiveTV)</visible>
 				</control>
 				<control type="slider">
-					<top>-5</top>
-					<left>0</left>
-					<width>100%</width>
-					<height>26</height>
+					<top>{{ScaleY('-5')}}</top>
+					<left>{{ScaleX('0')}}</left>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
 					<textureslidernib>osd/progress/nub_leftright.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernibfocus>
@@ -290,10 +290,10 @@
 					<visible>!Control.HasFocus(87) + VideoPlayer.Content(LiveTV)</visible>
 				</control>
 				<control type="slider">
-					<top>-5</top>
-					<left>0</left>
-					<width>100%</width>
-					<height>26</height>
+					<top>{{ScaleY('-5')}}</top>
+					<left>{{ScaleX('0')}}</left>
+					<width>{{ScaleX('100%')}}</width>
+					<height>{{ScaleY('26')}}</height>
 					<texturesliderbar colordiffuse="00FFFFFF">osd/progress/nub_leftright.png</texturesliderbar>
 					<textureslidernib colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernib>
 					<textureslidernibfocus colordiffuse="button_focus">osd/progress/nub_leftright.png</textureslidernibfocus>
