--- a/templates/VideoOSDBookmarks.xml
+++ b/templates/VideoOSDBookmarks.xml
@@ -5,9 +5,9 @@
 	<controls>
 		<control type="button">
 			<description>background close area</description>
-			<left>0</left>
-			<top>0</top>
-			<width>100%</width>
+			<left>{{ScaleX('0')}}</left>
+			<top>{{ScaleY('0')}}</top>
+			<width>{{ScaleX('100%')}}</width>
 			<bottom>546</bottom>
 			<texturefocus />
 			<texturenofocus />
@@ -15,20 +15,20 @@
 		</control>
 		<control type="group">
 			<bottom>0</bottom>
-			<height>550</height>
+			<height>{{ScaleY('550')}}</height>
 			<control type="image">
-				<left>0</left>
-				<width>100%</width>
-				<height>410</height>
+				<left>{{ScaleX('0')}}</left>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('410')}}</height>
 				<animation effect="fade" start="0" end="100" time="300">WindowOpen</animation>
 				<animation effect="fade" start="100" end="0" time="300">WindowClose</animation>
 				<texture colordiffuse="E6FFFFFF">dialogs/dialog-bg-nobo.png</texture>
 			</control>
 			<control type="textbox">
-				<left>0</left>
-				<top>1</top>
-				<width>1920</width>
-				<height>410</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('1')}}</top>
+				<width>{{ScaleX('1920')}}</width>
+				<height>{{ScaleY('410')}}</height>
 				<align>center</align>
 				<aligny>center</aligny>
 				<font>font45_title</font>
@@ -37,11 +37,11 @@
 			</control>
 			<control type="grouplist" id="9001">
 				<orientation>horizontal</orientation>
-				<left>0</left>
-				<top>-10</top>
-				<width>100%</width>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('-10')}}</top>
+				<width>{{ScaleX('100%')}}</width>
 				<align>center</align>
-				<height>100</height>
+				<height>{{ScaleY('100')}}</height>
 				<onup>11</onup>
 				<ondown>11</ondown>
 				<include content="DefaultDialogButton">
@@ -62,33 +62,33 @@
 				</include>
 			</control>
 			<control type="panel" id="11">
-				<left>0</left>
-				<top>81</top>
-				<width>100%</width>
-				<height>350</height>
+				<left>{{ScaleX('0')}}</left>
+				<top>{{ScaleY('81')}}</top>
+				<width>{{ScaleX('100%')}}</width>
+				<height>{{ScaleY('350')}}</height>
 				<onup>9001</onup>
 				<ondown>9001</ondown>
 				<preloaditems>2</preloaditems>
 				<scrolltime tween="sine">200</scrolltime>
 				<orientation>horizontal</orientation>
-				<itemlayout width="360" height="340">
+				<itemlayout width="{{ScaleX('360')}}" height="{{ScaleY('340')}}">
 					<control type="group">
-						<left>70</left>
+						<left>{{ScaleX('70')}}</left>
 						<control type="image">
-							<left>0</left>
-							<top>5</top>
-							<width>330</width>
-							<height>250</height>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('5')}}</top>
+							<width>{{ScaleX('330')}}</width>
+							<height>{{ScaleY('250')}}</height>
 							<aspectratio>scale</aspectratio>
-							<texture border="4" fallback="DefaultVideo.png">$INFO[ListItem.Art(thumb)]</texture>
+							<texture border="{{ScaleBorder('4')}}" fallback="DefaultVideo.png">$INFO[ListItem.Art(thumb)]</texture>
 							<bordertexture colordiffuse="border_alpha">colors/black.png</bordertexture>
 							<bordersize>4</bordersize>
 						</control>
 						<control type="label">
-							<left>20</left>
-							<top>255</top>
-							<width>290</width>
-							<height>40</height>
+							<left>{{ScaleX('20')}}</left>
+							<top>{{ScaleY('255')}}</top>
+							<width>{{ScaleX('290')}}</width>
+							<height>{{ScaleY('40')}}</height>
 							<label>$INFO[ListItem.Label][CR][COLOR grey]$INFO[ListItem.Label2][/COLOR]</label>
 							<font>font12</font>
 							<shadowcolor>text_shadow</shadowcolor>
@@ -96,35 +96,35 @@
 						</control>
 					</control>
 				</itemlayout>
-				<focusedlayout width="360" height="340">
+				<focusedlayout width="{{ScaleX('360')}}" height="{{ScaleY('340')}}">
 					<control type="group">
-						<left>70</left>
+						<left>{{ScaleX('70')}}</left>
 						<control type="image">
-							<left>0</left>
-							<top>5</top>
-							<width>330</width>
-							<height>250</height>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('5')}}</top>
+							<width>{{ScaleX('330')}}</width>
+							<height>{{ScaleY('250')}}</height>
 							<aspectratio>scale</aspectratio>
-							<texture border="4" fallback="DefaultVideo.png">$INFO[ListItem.Art(thumb)]</texture>
+							<texture border="{{ScaleBorder('4')}}" fallback="DefaultVideo.png">$INFO[ListItem.Art(thumb)]</texture>
 							<bordertexture colordiffuse="border_alpha">colors/black.png</bordertexture>
 							<bordersize>4</bordersize>
 						</control>
 						<control type="label">
-							<left>20</left>
-							<top>255</top>
-							<width>290</width>
-							<height>40</height>
+							<left>{{ScaleX('20')}}</left>
+							<top>{{ScaleY('255')}}</top>
+							<width>{{ScaleX('290')}}</width>
+							<height>{{ScaleY('40')}}</height>
 							<label>$INFO[ListItem.Label][CR][COLOR grey]$INFO[ListItem.Label2][/COLOR]</label>
 							<font>font12</font>
 							<shadowcolor>text_shadow</shadowcolor>
 							<align>center</align>
 						</control>
 						<control type="image">
-							<left>0</left>
-							<top>5</top>
-							<width>330</width>
-							<height>250</height>
-							<texture border="8" colordiffuse="button_focus">buttons/thumbnail_focused.png</texture>
+							<left>{{ScaleX('0')}}</left>
+							<top>{{ScaleY('5')}}</top>
+							<width>{{ScaleX('330')}}</width>
+							<height>{{ScaleY('250')}}</height>
+							<texture border="{{ScaleBorder('8')}}" colordiffuse="button_focus">buttons/thumbnail_focused.png</texture>
 							<visible>Control.HasFocus(11)</visible>
 						</control>
 					</control>
