--- a/templates/View_502_FanArt.xml
+++ b/templates/View_502_FanArt.xml
@@ -18,8 +18,8 @@
 			<visible>Control.IsVisible(502)</visible>
 			<include>Visible_Right</include>
 			<control type="group">
-				<right>-20</right>
-				<width>1235</width>
+				<right>{{ScaleX('-20')}}</right>
+				<width>{{ScaleX('1235')}}</width>
 				<include content="ContentPanel">
 					<param name="width" value="1235" />
 					<param name="left" value="0" />
@@ -27,31 +27,31 @@
 					<param name="flipx" value="true" />
 				</include>
 				<control type="image">
-					<left>38</left>
-					<right>36</right>
-					<top>115</top>
-					<height>644</height>
+					<left>{{ScaleX('38')}}</left>
+					<right>{{ScaleX('36')}}</right>
+					<top>{{ScaleY('115')}}</top>
+					<height>{{ScaleY('644')}}</height>
 					<fadetime>300</fadetime>
-					<texture border="2" fallback="special://skin/extras/home-images/movie.jpg" background="true">$VAR[FanartImageVar]</texture>
+					<texture border="{{ScaleBorder('2')}}" fallback="special://skin/extras/home-images/movie.jpg" background="true">$VAR[FanartImageVar]</texture>
 					<aspectratio align="center" aligny="bottom">scale</aspectratio>
 				</control>
 				<control type="group">
-					<left>600</left>
-					<top>82</top>
+					<left>{{ScaleX('600')}}</left>
+					<top>{{ScaleY('82')}}</top>
 					<include condition="Skin.HasSetting(circle_rating) | Skin.HasSetting(circle_userrating)">RatingCircle</include>
 				</control>
 				<control type="textbox">
-					<left>50</left>
-					<right>50</right>
-					<top>769</top>
+					<left>{{ScaleX('50')}}</left>
+					<right>{{ScaleX('50')}}</right>
+					<top>{{ScaleY('769')}}</top>
 					<bottom>105</bottom>
 					<label>$VAR[PlotTextBoxVar]</label>
 					<autoscroll time="3000" delay="7000" repeat="5000">!System.HasActiveModalDialog + Skin.HasSetting(AutoScroll)</autoscroll>
 				</control>
 				<control type="scrollbar" id="502600">
-					<left>20</left>
-					<top>list_top_offset</top>
-					<width>12</width>
+					<left>{{ScaleX('20')}}</left>
+					<top>{{ScaleY('list_top_offset')}}</top>
+					<width>{{ScaleX('12')}}</width>
 					<bottom>list_bottom_offset</bottom>
 					<onleft>502</onleft>
 					<onright>502</onright>
@@ -59,8 +59,8 @@
 					<animation effect="zoom" end="50,100" time="300" tween="sine" center="20,0" easing="inout" condition="!Control.HasFocus(502600)">conditional</animation>
 				</control>
 				<control type="group">
-					<left>40</left>
-					<top>770</top>
+					<left>{{ScaleX('40')}}</left>
+					<top>{{ScaleY('770')}}</top>
 					<visible>ListItem.IsCollection + String.IsEmpty(ListItem.PlotOutline) + String.IsEmpty(ListItem.Plot)</visible>
 					<include content="InfoList">
 						<param name="bottom" value="108" />
