--- a/templates/View_55_WideList.xml
+++ b/templates/View_55_WideList.xml
@@ -8,10 +8,10 @@
 				<visible>Control.IsVisible(55)</visible>
 				<include>Visible_Right</include>
 				<control type="fixedlist" id="55">
-					<left>594</left>
-					<top>list_top_offset</top>
+					<left>{{ScaleX('594')}}</left>
+					<top>{{ScaleY('list_top_offset')}}</top>
 					<bottom>$PARAM[bottom_offset]</bottom>
-					<right>0</right>
+					<right>{{ScaleX('0')}}</right>
 					<scrolltime tween="cubic" easing="out">500</scrolltime>
 					<orientation>vertical</orientation>
 					<pagecontrol>531</pagecontrol>
@@ -22,175 +22,175 @@
 					<onup>55</onup>
 					<ondown>55</ondown>
 					<viewtype label="$LOCALIZE[31107]">list</viewtype>
-					<focusedlayout height="list_item_height" condition="Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(musicvideos) | Container.Content(videos) | Container.Content(games) | Window.IsActive(videoplaylist) | Window.IsActive(musicplaylist)">
+					<focusedlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(musicvideos) | Container.Content(videos) | Container.Content(games) | Window.IsActive(videoplaylist) | Window.IsActive(musicplaylist)">
 						<control type="image">
-							<left>0</left>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<right>{{ScaleX('0')}}</right>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">lists/focus.png</texture>
 							<visible>Control.HasFocus(55)</visible>
 						</control>
 						<control type="image">
-							<left>35</left>
+							<left>{{ScaleX('35')}}</left>
 							<centertop>50%</centertop>
-							<width>32</width>
-							<height>32</height>
+							<width>{{ScaleX('32')}}</width>
+							<height>{{ScaleY('32')}}</height>
 							<texture>$VAR[ListWatchedIconVar]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<aligny>center</aligny>
 							<scroll>true</scroll>
 							<label>$VAR[ListLabelVar]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<align>right</align>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabel2Var]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</focusedlayout>
-					<itemlayout height="list_item_height" condition="Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(musicvideos) | Container.Content(videos) | Container.Content(games) | Window.IsActive(videoplaylist) | Window.IsActive(musicplaylist)">
+					<itemlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(movies) | Container.Content(musicvideos) | Container.Content(videos) | Container.Content(games) | Window.IsActive(videoplaylist) | Window.IsActive(musicplaylist)">
 						<control type="image">
-							<left>35</left>
+							<left>{{ScaleX('35')}}</left>
 							<centertop>50%</centertop>
-							<width>32</width>
-							<height>32</height>
+							<width>{{ScaleX('32')}}</width>
+							<height>{{ScaleY('32')}}</height>
 							<texture colordiffuse="grey">$VAR[ListWatchedIconVar]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabelVar]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<align>right</align>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabel2Var]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</itemlayout>
-					<focusedlayout height="list_item_height" condition="!Container.Content(songs) + !Container.Content(addons) + !Container.Content(playlists) + !Container.Content() + !Container.Content(tvshows) + !Container.Content(seasons) + !Container.Content(episodes) + !Container.Content(movies) + !Container.Content(musicvideos) + !Container.Content(videos)">
+					<focusedlayout height="{{ScaleY('list_item_height')}}" condition="!Container.Content(songs) + !Container.Content(addons) + !Container.Content(playlists) + !Container.Content() + !Container.Content(tvshows) + !Container.Content(seasons) + !Container.Content(episodes) + !Container.Content(movies) + !Container.Content(musicvideos) + !Container.Content(videos)">
 						<control type="image">
-							<left>0</left>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<right>{{ScaleX('0')}}</right>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">lists/focus.png</texture>
 							<visible>Control.HasFocus(55)</visible>
 						</control>
 						<control type="image">
-							<left>35</left>
+							<left>{{ScaleX('35')}}</left>
 							<centertop>50%</centertop>
-							<width>32</width>
-							<height>32</height>
+							<width>{{ScaleX('32')}}</width>
+							<height>{{ScaleY('32')}}</height>
 							<texture>$VAR[ListWatchedIconVar]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<aligny>center</aligny>
 							<scroll>true</scroll>
 							<label>$INFO[ListItem.Label]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<align>right</align>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabel2Var]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</focusedlayout>
-					<itemlayout height="list_item_height" condition="!Container.Content(songs) + !Container.Content(addons) + !Container.Content(playlists) + !Container.Content() + !Container.Content(tvshows) + !Container.Content(seasons) + !Container.Content(episodes) + !Container.Content(movies) + !Container.Content(musicvideos) + !Container.Content(videos)">
+					<itemlayout height="{{ScaleY('list_item_height')}}" condition="!Container.Content(songs) + !Container.Content(addons) + !Container.Content(playlists) + !Container.Content() + !Container.Content(tvshows) + !Container.Content(seasons) + !Container.Content(episodes) + !Container.Content(movies) + !Container.Content(musicvideos) + !Container.Content(videos)">
 						<control type="image">
-							<left>35</left>
+							<left>{{ScaleX('35')}}</left>
 							<centertop>50%</centertop>
-							<width>32</width>
-							<height>32</height>
+							<width>{{ScaleX('32')}}</width>
+							<height>{{ScaleY('32')}}</height>
 							<texture colordiffuse="grey">$VAR[ListWatchedIconVar]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabelVar]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>40</right>
+							<right>{{ScaleX('40')}}</right>
 							<align>right</align>
 							<aligny>center</aligny>
 							<label>$VAR[ListLabel2Var]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</itemlayout>
-					<focusedlayout height="list_item_height" condition="Container.Content(playlists) | Container.Content()">
+					<focusedlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(playlists) | Container.Content()">
 						<control type="image">
-							<left>0</left>
-							<right>0</right>
+							<left>{{ScaleX('0')}}</left>
+							<right>{{ScaleX('0')}}</right>
 							<bottom>0</bottom>
 							<texture colordiffuse="button_focus">lists/focus.png</texture>
 							<visible>Control.HasFocus(55)</visible>
 						</control>
 						<control type="image">
-							<left>20</left>
-							<top>10</top>
-							<width>60</width>
+							<left>{{ScaleX('20')}}</left>
+							<top>{{ScaleY('10')}}</top>
+							<width>{{ScaleX('60')}}</width>
 							<bottom>10</bottom>
 							<aspectratio>keep</aspectratio>
 							<texture>$INFO[ListItem.Icon]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>100</right>
+							<right>{{ScaleX('100')}}</right>
 							<aligny>center</aligny>
 							<scroll>true</scroll>
 							<label>$INFO[ListItem.Label]</label>
 							<shadowcolor>text_shadow</shadowcolor>
 						</control>
 					</focusedlayout>
-					<itemlayout height="list_item_height" condition="Container.Content(playlists) | Container.Content()">
+					<itemlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(playlists) | Container.Content()">
 						<control type="image">
-							<left>20</left>
-							<top>10</top>
-							<width>60</width>
+							<left>{{ScaleX('20')}}</left>
+							<top>{{ScaleY('10')}}</top>
+							<width>{{ScaleX('60')}}</width>
 							<bottom>10</bottom>
 							<aspectratio>keep</aspectratio>
 							<texture colordiffuse="grey">$INFO[ListItem.Icon]</texture>
 						</control>
 						<control type="label">
-							<left>105</left>
-							<top>0</top>
+							<left>{{ScaleX('105')}}</left>
+							<top>{{ScaleY('0')}}</top>
 							<bottom>0</bottom>
-							<right>100</right>
+							<right>{{ScaleX('100')}}</right>
 							<aligny>center</aligny>
 							<label>$INFO[ListItem.Label]</label>
 							<shadowcolor>text_shadow</shadowcolor>
@@ -203,41 +203,41 @@
 		</definition>
 	</include>
 	<include name="SongsListLayout">
-		<focusedlayout height="list_item_height" condition="Container.Content(songs)">
+		<focusedlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(songs)">
 			<control type="image">
-				<left>0</left>
-				<right>0</right>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<texture colordiffuse="button_focus">lists/focus.png</texture>
 				<visible>Control.hasFocus(55)</visible>
 			</control>
 			<control type="label">
-				<left>35</left>
-				<right>40</right>
+				<left>{{ScaleX('35')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<aligny>center</aligny>
 				<scroll>true</scroll>
 				<label>$VAR[ListLabelVar]</label>
 				<shadowcolor>text_shadow</shadowcolor>
 			</control>
 			<control type="label">
-				<left>35</left>
-				<right>40</right>
+				<left>{{ScaleX('35')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<align>right</align>
 				<aligny>center</aligny>
 				<label>$VAR[ListLabel2Var]</label>
 				<shadowcolor>text_shadow</shadowcolor>
 			</control>
 		</focusedlayout>
-		<itemlayout height="list_item_height" condition="Container.Content(songs)">
+		<itemlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(songs)">
 			<control type="label">
-				<left>35</left>
-				<right>40</right>
+				<left>{{ScaleX('35')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<aligny>center</aligny>
 				<label>$VAR[ListLabelVar]</label>
 				<shadowcolor>text_shadow</shadowcolor>
 			</control>
 			<control type="label">
-				<left>35</left>
-				<right>40</right>
+				<left>{{ScaleX('35')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<align>right</align>
 				<aligny>center</aligny>
 				<label>$VAR[ListLabel2Var]</label>
@@ -247,30 +247,30 @@
 		</itemlayout>
 	</include>
 	<include name="AddonsListLayout">
-		<focusedlayout height="list_item_height" condition="Container.Content(addons)">
+		<focusedlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(addons)">
 			<control type="image">
-				<left>0</left>
-				<right>0</right>
+				<left>{{ScaleX('0')}}</left>
+				<right>{{ScaleX('0')}}</right>
 				<texture colordiffuse="button_focus">lists/focus.png</texture>
 				<visible>Control.hasFocus(55)</visible>
 			</control>
 			<control type="image">
-				<left>20</left>
-				<top>25</top>
-				<width>32</width>
-				<height>32</height>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('25')}}</top>
+				<width>{{ScaleX('32')}}</width>
+				<height>{{ScaleY('32')}}</height>
 				<texture>$VAR[AddonsListIconVar]</texture>
 			</control>
 			<control type="label">
-				<left>75</left>
-				<right>40</right>
+				<left>{{ScaleX('75')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<aligny>center</aligny>
 				<scroll>true</scroll>
 				<label>$INFO[ListItem.Label]</label>
 			</control>
 			<control type="label">
-				<left>75</left>
-				<right>90</right>
+				<left>{{ScaleX('75')}}</left>
+				<right>{{ScaleX('90')}}</right>
 				<align>right</align>
 				<aligny>center</aligny>
 				<font>font27</font>
@@ -278,31 +278,31 @@
 				<scroll>true</scroll>
 			</control>
 			<control type="image">
-				<right>40</right>
-				<top>25</top>
-				<width>32</width>
-				<height>32</height>
+				<right>{{ScaleX('40')}}</right>
+				<top>{{ScaleY('25')}}</top>
+				<width>{{ScaleX('32')}}</width>
+				<height>{{ScaleY('32')}}</height>
 				<texture>$VAR[AddonsOriginVar]</texture>
 				<visible>!ListItem.IsFolder</visible>
 			</control>
 		</focusedlayout>
-		<itemlayout height="list_item_height" condition="Container.Content(addons)">
+		<itemlayout height="{{ScaleY('list_item_height')}}" condition="Container.Content(addons)">
 			<control type="image">
-				<left>20</left>
-				<top>25</top>
-				<width>32</width>
-				<height>32</height>
+				<left>{{ScaleX('20')}}</left>
+				<top>{{ScaleY('25')}}</top>
+				<width>{{ScaleX('32')}}</width>
+				<height>{{ScaleY('32')}}</height>
 				<texture>$VAR[AddonsListIconVar]</texture>
 			</control>
 			<control type="label">
-				<left>75</left>
-				<right>40</right>
+				<left>{{ScaleX('75')}}</left>
+				<right>{{ScaleX('40')}}</right>
 				<aligny>center</aligny>
 				<label>$INFO[ListItem.Label]</label>
 			</control>
 			<control type="label">
-				<left>75</left>
-				<right>90</right>
+				<left>{{ScaleX('75')}}</left>
+				<right>{{ScaleX('90')}}</right>
 				<align>right</align>
 				<aligny>center</aligny>
 				<font>font27</font>
@@ -311,10 +311,10 @@
 				<shadowcolor>text_shadow</shadowcolor>
 			</control>
 			<control type="image">
-				<right>40</right>
-				<top>25</top>
-				<width>32</width>
-				<height>32</height>
+				<right>{{ScaleX('40')}}</right>
+				<top>{{ScaleY('25')}}</top>
+				<width>{{ScaleX('32')}}</width>
+				<height>{{ScaleY('32')}}</height>
 				<texture>$VAR[AddonsOriginVar]</texture>
 				<visible>!ListItem.IsFolder</visible>
 			</control>
